@@ -1,19 +1,19 @@
 /*
  * The MIT License
- * 
+ *
  * Copyright (c) 2004-2010, Sun Microsystems, Inc., Kohsuke Kawaguchi,
  * Yahoo! Inc., Erik Ramfelt, Tom Huybrechts
- * 
+ *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
  * in the Software without restriction, including without limitation the rights
  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  * copies of the Software, and to permit persons to whom the Software is
  * furnished to do so, subject to the following conditions:
- * 
+ *
  * The above copyright notice and this permission notice shall be included in
  * all copies or substantial portions of the Software.
- * 
+ *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -22,49 +22,45 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson;
 
-import com.google.common.collect.ImmutableSet;
+import static hudson.PluginWrapper.PluginDisableStatus.ALREADY_DISABLED;
+import static hudson.PluginWrapper.PluginDisableStatus.DISABLED;
+import static hudson.PluginWrapper.PluginDisableStatus.ERROR_DISABLING;
+import static hudson.PluginWrapper.PluginDisableStatus.NOT_DISABLED_DEPENDANTS;
+import static hudson.PluginWrapper.PluginDisableStatus.NO_SUCH_PLUGIN;
+import static java.util.logging.Level.WARNING;
+import static org.apache.commons.io.FilenameUtils.getBaseName;
+
+import com.google.common.collect.Sets;
+import edu.umd.cs.findbugs.annotations.CheckForNull;
+import edu.umd.cs.findbugs.annotations.NonNull;
 import hudson.PluginManager.PluginInstanceStore;
 import hudson.model.AdministrativeMonitor;
 import hudson.model.Api;
 import hudson.model.ModelObject;
-import java.nio.file.Files;
-import java.nio.file.InvalidPathException;
-import jenkins.YesNoMaybe;
-import jenkins.model.Jenkins;
 import hudson.model.UpdateCenter;
 import hudson.model.UpdateSite;
 import hudson.util.VersionNumber;
-import org.kohsuke.accmod.Restricted;
-import org.kohsuke.accmod.restrictions.DoNotUse;
-import org.kohsuke.accmod.restrictions.NoExternalUse;
-import org.kohsuke.stapler.HttpResponse;
-import org.kohsuke.stapler.HttpResponses;
-import org.kohsuke.stapler.StaplerRequest;
-import org.kohsuke.stapler.StaplerResponse;
-import org.kohsuke.stapler.export.Exported;
-import org.kohsuke.stapler.export.ExportedBean;
-import org.kohsuke.stapler.interceptor.RequirePOST;
-
-import org.apache.commons.lang.StringUtils;
-import org.apache.commons.logging.LogFactory;
-import javax.annotation.CheckForNull;
-import javax.annotation.Nonnull;
 import java.io.Closeable;
 import java.io.File;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.net.URL;
+import java.net.URLClassLoader;
+import java.nio.file.Files;
+import java.nio.file.InvalidPathException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Enumeration;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.function.Predicate;
 import java.util.jar.JarFile;
@@ -72,9 +68,23 @@ import java.util.jar.Manifest;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
-
-import static java.util.logging.Level.WARNING;
-import static org.apache.commons.io.FilenameUtils.getBaseName;
+import jenkins.YesNoMaybe;
+import jenkins.model.Jenkins;
+import jenkins.plugins.DetachedPluginsUtil;
+import jenkins.security.UpdateSiteWarningsMonitor;
+import jenkins.util.URLClassLoader2;
+import org.apache.commons.logging.LogFactory;
+import org.kohsuke.accmod.Restricted;
+import org.kohsuke.accmod.restrictions.Beta;
+import org.kohsuke.accmod.restrictions.DoNotUse;
+import org.kohsuke.accmod.restrictions.NoExternalUse;
+import org.kohsuke.stapler.HttpResponse;
+import org.kohsuke.stapler.HttpResponses;
+import org.kohsuke.stapler.StaplerRequest2;
+import org.kohsuke.stapler.StaplerResponse2;
+import org.kohsuke.stapler.export.Exported;
+import org.kohsuke.stapler.export.ExportedBean;
+import org.kohsuke.stapler.interceptor.RequirePOST;
 
 /**
  * Represents a Jenkins plug-in and associated control information
@@ -100,11 +110,12 @@ import static org.apache.commons.io.FilenameUtils.getBaseName;
  */
 @ExportedBean
 public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
+
     /**
      * A plugin won't be loaded unless his declared dependencies are present and match the required minimal version.
      * This can be set to false to disable the version check (legacy behaviour)
      */
-    private static final boolean ENABLE_PLUGIN_DEPENDENCIES_VERSION_CHECK = Boolean.parseBoolean(System.getProperty(PluginWrapper.class.getName()+"." + "dependenciesVersionCheck.enabled", "true"));
+    private static final boolean ENABLE_PLUGIN_DEPENDENCIES_VERSION_CHECK = Boolean.parseBoolean(System.getProperty(PluginWrapper.class.getName() + "." + "dependenciesVersionCheck.enabled", "true"));
 
     /**
      * {@link PluginManager} to which this belongs to.
@@ -154,14 +165,14 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
      * The snapshot of {@code disableFile.exists()} as of the start up.
      */
     private final boolean active;
-    
+
     private boolean hasCycleDependency = false;
 
     private final List<Dependency> dependencies;
     private final List<Dependency> optionalDependencies;
 
     public List<String> getDependencyErrors() {
-        return Collections.unmodifiableList(new ArrayList<>(dependencyErrors.keySet()));
+        return List.copyOf(dependencyErrors.keySet());
     }
 
     @Restricted(NoExternalUse.class) // Jelly use
@@ -188,7 +199,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
     /**
      * A String error message, and a boolean indicating whether it's an original error (false) or downstream from an original one (true)
      */
-    private final transient Map<String, Boolean> dependencyErrors = new HashMap<>();
+    private final transient Map<String, Boolean> dependencyErrors = new HashMap<>(0);
 
     /**
      * Is this plugin bundled in jenkins.war?
@@ -198,49 +209,218 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
     /**
      * List of plugins that depend on this plugin.
      */
-    private Set<String> dependants = Collections.emptySet();
+    private Set<String> dependents = Collections.emptySet();
+
+    /**
+     * List of plugins that depend optionally on this plugin.
+     */
+    private Set<String> optionalDependents = Collections.emptySet();
 
     /**
      * The core can depend on a plugin if it is bundled. Sometimes it's the only thing that
      * depends on the plugin e.g. UI support library bundle plugin.
      */
-    private static Set<String> CORE_ONLY_DEPENDANT = ImmutableSet.copyOf(Arrays.asList("jenkins-core"));
+    private static Set<String> CORE_ONLY_DEPENDANT = Set.of("jenkins-core");
 
     /**
      * Set the list of components that depend on this plugin.
-     * @param dependants The list of components that depend on this plugin.
+     * @param dependents The list of components that depend on this plugin.
      */
-    public void setDependants(@Nonnull Set<String> dependants) {
-        this.dependants = dependants;
+    public void setDependents(@NonNull Set<String> dependents) {
+        this.dependents = dependents;
+    }
+
+    /**
+     * @deprecated Please use {@link #setDependents}.
+     */
+    @Deprecated
+    public void setDependants(@NonNull Set<String> dependents) {
+        setDependents(dependents);
+    }
+
+    /**
+     * Set the list of components that depend optionally on this plugin.
+     * @param optionalDependents The list of components that depend optionally on this plugin.
+     */
+    public void setOptionalDependents(@NonNull Set<String> optionalDependents) {
+        this.optionalDependents = optionalDependents;
+    }
+
+    /**
+     * @deprecated Please use {@link #setOptionalDependents}.
+     */
+    @Deprecated
+    public void setOptionalDependants(@NonNull Set<String> optionalDependents) {
+        setOptionalDependents(dependents);
     }
 
     /**
      * Get the list of components that depend on this plugin.
+     * Note that the list will include elements of {@link #getOptionalDependents}.
      * @return The list of components that depend on this plugin.
      */
-    public @Nonnull Set<String> getDependants() {
-        if (isBundled && dependants.isEmpty()) {
+    public @NonNull Set<String> getDependents() {
+        if (isBundled && dependents.isEmpty()) {
             return CORE_ONLY_DEPENDANT;
         } else {
-            return dependants;
+            return dependents;
         }
     }
 
     /**
+     * @deprecated Please use {@link #getDependents}.
+     */
+    @Deprecated
+    public @NonNull Set<String> getDependants() {
+        return getDependents();
+    }
+
+    /**
+     * Like {@link #getDependents} but excluding optional dependencies.
+     * @since 2.181
+     */
+    public @NonNull Set<String> getMandatoryDependents() {
+        Set<String> s = new HashSet<>(dependents);
+        s.removeAll(optionalDependents);
+        return s;
+    }
+
+    /**
+     * @return The list of components that depend optionally on this plugin.
+     */
+    public @NonNull Set<String> getOptionalDependents() {
+        return optionalDependents;
+    }
+
+    /**
+     * @deprecated Please use {@link #getOptionalDependents}.
+     */
+    @Deprecated
+    public @NonNull Set<String> getOptionalDependants() {
+        return getOptionalDependents();
+    }
+
+    /**
      * Does this plugin have anything that depends on it.
+     * Note that optional dependents are included.
      * @return {@code true} if something (Jenkins core, or another plugin) depends on this
      * plugin, otherwise {@code false}.
      */
-    public boolean hasDependants() {
-        return (isBundled || !dependants.isEmpty());
+    public boolean hasDependents() {
+        return isBundled || !dependents.isEmpty();
     }
-    
+
+    /**
+     * Like {@link #hasDependents} but excluding optional dependencies.
+     * @since 2.181
+     */
+    public boolean hasMandatoryDependents() {
+        if (isBundled) {
+            return true;
+        }
+        return dependents.stream().anyMatch(d -> !optionalDependents.contains(d));
+    }
+
+    /**
+     * @deprecated Please use {@link #hasDependents}.
+     */
+    @Deprecated
+    public boolean hasDependants() {
+        return hasDependents();
+    }
+
+    /**
+     * Does this plugin have anything that depends optionally on it.
+     * @return {@code true} if something (Jenkins core, or another plugin) depends optionally on this
+     * plugin, otherwise {@code false}.
+     */
+    public boolean hasOptionalDependents() {
+        return !optionalDependents.isEmpty();
+    }
+
+    /**
+     * @deprecated Please use {@link #hasOptionalDependents}.
+     */
+    @Deprecated
+    public boolean hasOptionalDependants() {
+        return hasOptionalDependents();
+    }
+
     /**
      * Does this plugin depend on any other plugins.
+     * Note that this include optional dependencies.
      * @return {@code true} if this plugin depends on other plugins, otherwise {@code false}.
      */
     public boolean hasDependencies() {
-        return (dependencies != null && !dependencies.isEmpty());
+        return !dependencies.isEmpty();
+    }
+
+    /**
+     * Like {@link #hasDependencies} but omitting optional dependencies.
+     * @since 2.181
+     */
+    public boolean hasMandatoryDependencies() {
+        return dependencies.stream().anyMatch(d -> !d.optional);
+    }
+
+    /**
+     * Is this plugin deprecated?
+     *
+     * @return {@code true} if and only if an update site reports deprecations for this plugin.
+     * @since 2.246
+     */
+    @Restricted(NoExternalUse.class)
+    public boolean isDeprecated() {
+        /*
+        While better handled in UpdateSite.Plugin that only exists for plugins actively being published.
+        We have no good model for plugin metadata from update sites for plugins not being published.
+         */
+        return !getDeprecations().isEmpty();
+    }
+
+    /**
+     * Inject the specified jar file(s) to the plugins classpath.
+     * <p><strong>Warning:</strong> This is advanced usage that you should not be needed in 99.9% of all cases, any jar insertion
+     * should happen early into the plugins lifecycle to prevent classloading issues in dependent plugins.
+     * </p><p>
+     * Rather than use this functionality it is to have co-operative behaviour between any consumer of the libraries and load the classes in a separate {@link ClassLoader}.
+     * you can expose third-party libraries from a dynamic location in various ways, such as:
+     *
+     * <ul>
+     * <li>You could split your plugin into two modules:
+     * <ul>
+     * <li>regular Jenkins plugin code, plus some interface encapsulating access to the lib via a minimal, simplified
+     * API
+     * <li>an implementation of that interface which compiles against a provided static reference copy of the library,
+     * and which is packaged in your plugin as a resource (not in WEB-INF/lib/*.jar)
+     * </ul>
+     * <li>with coordination:
+     * <ul>
+     * <li>dynamically find some JAR(s) on the controller (or perhaps even agent)
+     * <li>find the bridge JAR in your plugin’s resources area
+     * <li>create some {@link URLClassLoader} loading them both, parented to the plugin {@link ClassLoader}
+     * <li>use reflection to load &amp; instantiate the class of the bridge implementation, casting to the interface from
+     * the plugin
+     * </ul>
+     * </ul>
+     * For a concrete example see the <a href=
+     * "https://github.com/jenkinsci/database-plugin/blob/117.va2009e38b882/src/main/java/org/jenkinsci/plugins/database/GenericDatabase.java#L129-L142">database
+     * plugin</a>. *
+     *
+     * @throws Exception if the File could not be inserted into the classpath for some reason.
+     * @since 2.313
+     */
+    @Restricted(Beta.class)
+    public void injectJarsToClasspath(File... jars) throws Exception {
+        if (classLoader instanceof URLClassLoader2) {
+            for (File f : jars) {
+                LOGGER.log(Level.CONFIG, () -> "Inserting " + f + " into " + shortName + " plugin's classpath");
+                ((URLClassLoader2) classLoader).addURL(f.toURI().toURL());
+            }
+        } else {
+            throw new AssertionError("PluginWrapper classloader has changed type, but this code has not been updated accordingly");
+        }
+
     }
 
     @ExportedBean
@@ -254,10 +434,10 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
 
         public Dependency(String s) {
             int idx = s.indexOf(':');
-            if(idx==-1)
-                throw new IllegalArgumentException("Illegal dependency specifier "+s);
-            this.shortName = s.substring(0,idx);
-            String version = s.substring(idx+1);
+            if (idx == -1)
+                throw new IllegalArgumentException("Illegal dependency specifier " + s);
+            this.shortName = Util.intern(s.substring(0, idx));
+            String version = Util.intern(s.substring(idx + 1));
 
             boolean isOptional = false;
             String[] osgiProperties = version.split("[;]");
@@ -265,6 +445,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
                 String osgiProperty = osgiProperties[i].trim();
                 if (osgiProperty.equalsIgnoreCase("resolution:=optional")) {
                     isOptional = true;
+                    break;
                 }
             }
             this.optional = isOptional;
@@ -278,44 +459,53 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
         @Override
         public String toString() {
             return shortName + " (" + version + ")" + (optional ? " optional" : "");
-        }        
+        }
     }
 
     /**
      * @param archive
      *      A .jpi archive file jar file, or a .jpl linked plugin.
      *  @param manifest
-     *  	The manifest for the plugin
+     *      The manifest for the plugin
      *  @param baseResourceURL
-     *  	A URL pointing to the resources for this plugin
+     *      A URL pointing to the resources for this plugin
      *  @param classLoader
-     *  	a classloader that loads classes from this plugin and its dependencies
+     *      a classloader that loads classes from this plugin and its dependencies
      *  @param disableFile
-     *  	if this file exists on startup, the plugin will not be activated
+     *      if this file exists on startup, the plugin will not be activated
      *  @param dependencies a list of mandatory dependencies
      *  @param optionalDependencies a list of optional dependencies
      */
-    public PluginWrapper(PluginManager parent, File archive, Manifest manifest, URL baseResourceURL, 
-			ClassLoader classLoader, File disableFile, 
-			List<Dependency> dependencies, List<Dependency> optionalDependencies) {
+    public PluginWrapper(PluginManager parent, File archive, Manifest manifest, URL baseResourceURL,
+            ClassLoader classLoader, File disableFile,
+            List<Dependency> dependencies, List<Dependency> optionalDependencies) {
         this.parent = parent;
-		this.manifest = manifest;
-		this.shortName = computeShortName(manifest, archive.getName());
-		this.baseResourceURL = baseResourceURL;
-		this.classLoader = classLoader;
-		this.disableFile = disableFile;
-		this.active = !disableFile.exists();
-		this.dependencies = dependencies;
-		this.optionalDependencies = optionalDependencies;
+        this.manifest = manifest;
+        this.shortName = Util.intern(computeShortName(manifest, archive.getName()));
+        this.baseResourceURL = baseResourceURL;
+        this.classLoader = classLoader;
+        this.disableFile = disableFile;
+        this.active = !disableFile.exists();
+        this.dependencies = dependencies;
+        this.optionalDependencies = optionalDependencies;
+        for (Dependency d : optionalDependencies) {
+            assert d.optional : d + " included among optionalDependencies of " + shortName + " but was not marked optional";
+        }
         this.archive = archive;
     }
 
+    @Override
     public String getDisplayName() {
-        return StringUtils.removeStart(getLongName(), "Jenkins ");
+        String displayName = getLongName();
+        String removePrefix = "Jenkins ";
+        if (displayName != null && displayName.startsWith(removePrefix)) {
+            return displayName.substring(removePrefix.length());
+        }
+        return displayName;
     }
 
     public Api getApi() {
-        Jenkins.getInstance().checkPermission(Jenkins.ADMINISTER);
+        Jenkins.get().checkAnyPermission(Jenkins.SYSTEM_READ, Jenkins.MANAGE);
         return new Api(this);
     }
 
@@ -340,20 +530,33 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
         // use the name captured in the manifest, as often plugins
         // depend on the specific short name in its URLs.
         String n = manifest.getMainAttributes().getValue("Short-Name");
-        if(n!=null)     return n;
+        if (n != null)     return n;
 
         // maven seems to put this automatically, so good fallback to check.
         n = manifest.getMainAttributes().getValue("Extension-Name");
-        if(n!=null)     return n;
+        if (n != null)     return n;
 
         // otherwise infer from the file name, since older plugins don't have
         // this entry.
         return getBaseName(fileName);
     }
 
+    /**
+     * Gets all dependencies of this plugin on other plugins.
+     * Note that the list will <em>usually</em> include the members of {@link #getOptionalDependencies}
+     * (missing optional dependencies will however be omitted).
+     */
     @Exported
     public List<Dependency> getDependencies() {
         return dependencies;
+    }
+
+    /**
+     * Like {@link #getDependencies} but omits optional dependencies.
+     * @since 2.181
+     */
+    public List<Dependency> getMandatoryDependencies() {
+        return dependencies.stream().filter(d -> !d.optional).collect(Collectors.toList());
     }
 
     public List<Dependency> getOptionalDependencies() {
@@ -371,10 +574,23 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
 
     /**
      * Gets the instance of {@link Plugin} contributed by this plugin.
+     * @return Plugin instace or {@code null} if it is not present in the plugin instance store.
      */
     public @CheckForNull Plugin getPlugin() {
         PluginInstanceStore pis = Jenkins.lookup(PluginInstanceStore.class);
         return pis != null ? pis.store.get(this) : null;
+    }
+
+    /**
+     * Gets the instance of {@link Plugin} contributed by this plugin.
+     * @throws Exception no plugin in the {@link PluginInstanceStore}
+     */
+    public @NonNull Plugin getPluginOrFail() throws Exception {
+        Plugin plugin = getPlugin();
+        if (plugin == null) {
+            throw new Exception("Cannot find the plugin instance: " + shortName);
+        }
+        return plugin;
     }
 
     /**
@@ -385,18 +601,28 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
      */
     @Exported
     public String getUrl() {
-        // first look for the manifest entry. This is new in maven-hpi-plugin 1.30
+        // first look in update center metadata
+        List<UpdateSite.Plugin> siteMetadataList = getInfoFromAllSites();
+        String firstSiteUrl = null;
+        if (!siteMetadataList.isEmpty()) {
+            firstSiteUrl = siteMetadataList.get(0).wiki;
+            if (allUrlsMatch(firstSiteUrl, siteMetadataList)) {
+                return firstSiteUrl;
+            }
+        }
+
+        // if update sites give different / empty results,
+        // use manifest (since maven-hpi-plugin 1.30)
         String url = manifest.getMainAttributes().getValue("Url");
-        if(url!=null)      return url;
-
-        // fallback to update center metadata
-        UpdateSite.Plugin ui = getInfo();
-        if(ui!=null)    return ui.wiki;
-
-        return null;
+        if (url != null) {
+            return url;
+        }
+        return firstSiteUrl;
     }
-    
-    
+
+    private boolean allUrlsMatch(String url, List<UpdateSite.Plugin> uiList) {
+        return uiList.stream().allMatch(k -> k.wiki != null && k.wiki.equals(url));
+    }
 
     @Override
     public String toString() {
@@ -405,11 +631,14 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
 
     /**
      * Returns a one-line descriptive name of this plugin.
+     *
+     * @deprecated For most purposes, use {@link #getDisplayName()}.
      */
     @Exported
+    @Deprecated
     public String getLongName() {
         String name = manifest.getMainAttributes().getValue("Long-Name");
-        if(name!=null)      return name;
+        if (name != null)      return name;
         return shortName;
     }
 
@@ -419,7 +648,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
     @Exported
     public YesNoMaybe supportsDynamicLoad() {
         String v = manifest.getMainAttributes().getValue("Support-Dynamic-Loading");
-        if (v==null) return YesNoMaybe.MAYBE;
+        if (v == null) return YesNoMaybe.MAYBE;
         return Boolean.parseBoolean(v) ? YesNoMaybe.YES : YesNoMaybe.NO;
     }
 
@@ -433,11 +662,11 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
 
     private String getVersionOf(Manifest manifest) {
         String v = manifest.getMainAttributes().getValue("Plugin-Version");
-        if(v!=null)      return v;
+        if (v != null)      return v;
 
         // plugins generated before maven-hpi-plugin 1.3 should still have this attribute
         v = manifest.getMainAttributes().getValue("Implementation-Version");
-        if(v!=null)      return v;
+        if (v != null)      return v;
 
         return "???";
     }
@@ -450,10 +679,10 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
     @Exported
     public @CheckForNull String getRequiredCoreVersion() {
         String v = manifest.getMainAttributes().getValue("Jenkins-Version");
-        if (v!= null) return v;
+        if (v != null) return v;
 
         v = manifest.getMainAttributes().getValue("Hudson-Version");
-        if (v!= null) return v;
+        if (v != null) return v;
         return null;
     }
 
@@ -472,7 +701,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
             return getVersionNumber().compareTo(v) < 0;
         } catch (IllegalArgumentException e) {
             // if we can't figure out our current version, it probably means it's very old,
-            // since the version information is missing only from the very old plugins 
+            // since the version information is missing only from the very old plugins
             return true;
         }
     }
@@ -502,7 +731,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
             try {
                 ((Closeable) classLoader).close();
             } catch (IOException e) {
-                LOGGER.log(WARNING, "Failed to shut down classloader",e);
+                LOGGER.log(WARNING, "Failed to shut down classloader", e);
             }
     }
 
@@ -514,20 +743,126 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
             LOGGER.log(Level.FINEST, "Plugin {0} has been already enabled. Skipping the enable() operation", getShortName());
             return;
         }
-        if(!disableFile.delete())
-            throw new IOException("Failed to delete "+disableFile);
+        if (!disableFile.delete())
+            throw new IOException("Failed to delete " + disableFile);
     }
 
     /**
-     * Disables this plugin next time Jenkins runs.
+     * Disables this plugin next time Jenkins runs. As it doesn't check anything, it's recommended to use the method
+     * {@link #disable(PluginDisableStrategy)}
+     * @deprecated use {@link #disable(PluginDisableStrategy)}
      */
+    @Deprecated //see https://issues.jenkins.io/browse/JENKINS-27177
     public void disable() throws IOException {
-        // creates an empty file
+        disableWithoutCheck();
+    }
+
+    /**
+     * Disable a plugin wihout checking any dependency. Only add the disable file.
+     */
+    private void disableWithoutCheck() throws IOException {
         try (OutputStream os = Files.newOutputStream(disableFile.toPath())) {
-            os.close();
+            // creates an empty file
         } catch (InvalidPathException e) {
             throw new IOException(e);
         }
+    }
+
+    /**
+     * Disable this plugin using a strategy.
+     * @param strategy strategy to use
+     * @return an object representing the result of the disablement of this plugin and its dependents plugins.
+     */
+    public @NonNull PluginDisableResult disable(@NonNull PluginDisableStrategy strategy) {
+        PluginDisableResult result = new PluginDisableResult(shortName);
+
+        if (!this.isEnabled()) {
+            result.setMessage(Messages.PluginWrapper_Already_Disabled(shortName));
+            result.setStatus(ALREADY_DISABLED);
+            return result;
+        }
+
+        // Act as a flag indicating if this plugin, finally, can be disabled. If there is a not-disabled-dependent
+        // plugin, this one couldn't be disabled.
+        String aDependentNotDisabled = null;
+
+        // List of dependents plugins to 'check'. 'Check' means disable for mandatory or all strategies, or review if
+        // this dependent-mandatory plugin is enabled in order to return an error for the NONE strategy.
+        Set<String> dependentsToCheck = dependentsToCheck(strategy);
+
+        // Review all the dependents and add to the plugin result what happened with its dependents
+        for (String dependent : dependentsToCheck) {
+            PluginWrapper dependentPlugin = parent.getPlugin(dependent);
+
+            // The dependent plugin doesn't exist, add an error to the report
+            if (dependentPlugin == null) {
+                PluginDisableResult dependentStatus = new PluginDisableResult(dependent, NO_SUCH_PLUGIN, Messages.PluginWrapper_NoSuchPlugin(dependent));
+                result.addDependentDisableStatus(dependentStatus);
+
+            // If the strategy is none and there is some enabled dependent plugin, the plugin cannot be disabled. If
+            // this dependent plugin is not enabled, continue searching for one enabled.
+            } else if (strategy.equals(PluginDisableStrategy.NONE)) {
+                if (dependentPlugin.isEnabled()) {
+                    aDependentNotDisabled = dependent;
+                    break; // in this case, we don't need to continue with the rest of its dependents
+                }
+
+            // If the strategy is not none and this dependent plugin is not enabled, add it as already disabled
+            } else if (!dependentPlugin.isEnabled()) {
+                PluginDisableResult dependentStatus = new PluginDisableResult(dependent, ALREADY_DISABLED, Messages.PluginWrapper_Already_Disabled(dependent));
+                result.addDependentDisableStatus(dependentStatus);
+
+            // If the strategy is not none and this dependent plugin is enabled, disable it
+            } else {
+                // As there is no cycles in the plugin dependencies, the recursion shouldn't be infinite. The
+                // strategy used is the same for its dependents plugins
+                PluginDisableResult dependentResult = dependentPlugin.disable(strategy);
+                PluginDisableStatus dependentStatus = dependentResult.status;
+
+                // If something wrong happened, flag this dependent plugin to set the plugin later as not-disabled due
+                // to its dependents plugins.
+                if (ERROR_DISABLING.equals(dependentStatus) || NOT_DISABLED_DEPENDANTS.equals(dependentStatus)) {
+                    aDependentNotDisabled = dependent;
+                    break; // we found a dependent plugin enabled, stop looking for dependent plugins to disable.
+                }
+                result.addDependentDisableStatus(dependentResult);
+            }
+        }
+
+        // If there is no enabled-dependent plugin, disable this plugin and add it to the result
+        if (aDependentNotDisabled == null) {
+            try {
+                this.disableWithoutCheck();
+                result.setMessage(Messages.PluginWrapper_Plugin_Disabled(shortName));
+                result.setStatus(DISABLED);
+            } catch (IOException io) {
+                result.setMessage(Messages.PluginWrapper_Error_Disabling(shortName, io.toString()));
+                result.setStatus(ERROR_DISABLING);
+            }
+        // if there is yet some not disabled dependent plugin (only possible with none strategy), this plugin cannot
+        // be disabled.
+        } else {
+            result.setMessage(Messages.PluginWrapper_Plugin_Has_Dependent(shortName, aDependentNotDisabled, strategy));
+            result.setStatus(NOT_DISABLED_DEPENDANTS);
+        }
+
+        return result;
+    }
+
+    private Set<String> dependentsToCheck(PluginDisableStrategy strategy) {
+        Set<String> dependentsToCheck;
+        switch (strategy) {
+            case ALL:
+                // getDependents returns all the dependent plugins, mandatory or optional.
+                dependentsToCheck = this.getDependents();
+                break;
+            default:
+                // It includes MANDATORY, NONE:
+                // with NONE, the process only fail if mandatory dependent plugins exists
+                // As of getDependents has all the dependents, we get the difference between them and only the optionals
+                dependentsToCheck = Sets.difference(this.getDependents(), this.getOptionalDependents());
+        }
+        return dependentsToCheck;
     }
 
     /**
@@ -537,15 +872,20 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
     public boolean isActive() {
         return active && !hasCycleDependency();
     }
-    
-    public boolean hasCycleDependency(){
+
+    public boolean hasCycleDependency() {
         return hasCycleDependency;
     }
 
-    public void setHasCycleDependency(boolean hasCycle){
+    public void setHasCycleDependency(boolean hasCycle) {
         hasCycleDependency = hasCycle;
     }
-    
+
+    /**
+     * Is this plugin bundled in the WAR?
+     * Normally false as noted in {@link PluginManager#loadBundledPlugins}:
+     * this does <em>not</em> apply to “detached” plugins.
+     */
     @Exported
     public boolean isBundled() {
         return isBundled;
@@ -565,7 +905,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
     }
 
     public void setPlugin(Plugin plugin) {
-        Jenkins.lookup(PluginInstanceStore.class).store.put(this,plugin);
+        Jenkins.lookup(PluginInstanceStore.class).store.put(this, plugin);
         plugin.wrapper = this;
     }
 
@@ -575,7 +915,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
 
     public boolean hasLicensesXml() {
         try {
-            new URL(baseResourceURL,"WEB-INF/licenses.xml").openStream().close();
+            new URL(baseResourceURL, "WEB-INF/licenses.xml").openStream().close();
             return true;
         } catch (IOException e) {
             return false;
@@ -607,7 +947,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
             if (dependency == null) {
                 PluginWrapper failedDependency = NOTICE.getPlugin(d.shortName);
                 if (failedDependency != null) {
-                    dependencyErrors.put(Messages.PluginWrapper_failed_to_load_dependency(failedDependency.getLongName(), failedDependency.getVersion()), true);
+                    dependencyErrors.put(Messages.PluginWrapper_failed_to_load_dependency_2(failedDependency.getLongName(), failedDependency.getShortName(), failedDependency.getVersion()), true);
                     break;
                 } else {
                     dependencyErrors.put(Messages.PluginWrapper_missing(d.shortName, d.version), false);
@@ -615,13 +955,13 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
             } else {
                 if (dependency.isActive()) {
                     if (isDependencyObsolete(d, dependency)) {
-                        versionDependencyError(Messages.PluginWrapper_obsolete(dependency.getLongName(), dependency.getVersion(), d.version), dependency.getVersion(), d.version);
+                        versionDependencyError(Messages.PluginWrapper_obsolete_2(dependency.getLongName(), dependency.getShortName(), dependency.getVersion(), d.version), dependency.getVersion(), d.version);
                     }
                 } else {
                     if (isDependencyObsolete(d, dependency)) {
-                        versionDependencyError(Messages.PluginWrapper_disabledAndObsolete(dependency.getLongName(), dependency.getVersion(), d.version), dependency.getVersion(), d.version);
+                        versionDependencyError(Messages.PluginWrapper_obsolete_2(dependency.getLongName(), dependency.getShortName(), dependency.getVersion(), d.version), dependency.getVersion(), d.version);
                     } else {
-                        dependencyErrors.put(Messages.PluginWrapper_disabled(dependency.getLongName()), false);
+                        dependencyErrors.put(Messages.PluginWrapper_disabled_2(dependency.getLongName(), dependency.getShortName()), false);
                     }
                 }
 
@@ -632,7 +972,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
             PluginWrapper dependency = parent.getPlugin(d.shortName);
             if (dependency != null && dependency.isActive()) {
                 if (isDependencyObsolete(d, dependency)) {
-                    versionDependencyError(Messages.PluginWrapper_obsolete(dependency.getLongName(), dependency.getVersion(), d.version), dependency.getVersion(), d.version);
+                    versionDependencyError(Messages.PluginWrapper_obsolete_2(dependency.getLongName(), dependency.getShortName(), dependency.getVersion(), d.version), dependency.getVersion(), d.version);
                 } else {
                     dependencies.add(d);
                 }
@@ -641,7 +981,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
         if (!dependencyErrors.isEmpty()) {
             NOTICE.addPlugin(this);
             StringBuilder messageBuilder = new StringBuilder();
-            messageBuilder.append(Messages.PluginWrapper_failed_to_load_plugin(getLongName(), getVersion())).append(System.lineSeparator());
+            messageBuilder.append(Messages.PluginWrapper_failed_to_load_plugin_2(getLongName(), getShortName(), getVersion())).append(System.lineSeparator());
             for (Iterator<String> iterator = dependencyErrors.keySet().iterator(); iterator.hasNext(); ) {
                 String dependencyError = iterator.next();
                 messageBuilder.append(" - ").append(dependencyError);
@@ -664,7 +1004,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
      */
     private void versionDependencyError(String message, String actual, String minimum) {
         if (isSnapshot(actual) || isSnapshot(minimum)) {
-            LOGGER.log(WARNING, "Suppressing dependency error in {0} v{1}: {2}", new Object[] {getLongName(), getVersion(), message});
+            LOGGER.log(WARNING, "Suppressing dependency error in {0} v{1}: {2}", new Object[] {getShortName(), getVersion(), message});
         } else {
             dependencyErrors.put(message, false);
         }
@@ -673,7 +1013,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
     /**
      * Similar to {@code org.apache.maven.artifact.ArtifactUtils.isSnapshot}.
      */
-    static boolean isSnapshot(@Nonnull String version) {
+    static boolean isSnapshot(@NonNull String version) {
         return version.contains("-SNAPSHOT") || version.matches(".+-[0-9]{8}.[0-9]{6}-[0-9]+");
     }
 
@@ -686,18 +1026,25 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
      *      the user may have installed a plugin locally developed.
      */
     public UpdateSite.Plugin getUpdateInfo() {
-        UpdateCenter uc = Jenkins.getInstance().getUpdateCenter();
-        UpdateSite.Plugin p = uc.getPlugin(getShortName());
-        if(p!=null && p.isNewerThan(getVersion())) return p;
+        UpdateCenter uc = Jenkins.get().getUpdateCenter();
+        UpdateSite.Plugin p = uc.getPlugin(getShortName(), getVersionNumber());
+        if (p != null && p.isNewerThan(getVersion())) return p;
         return null;
     }
-    
+
     /**
      * returns the {@link hudson.model.UpdateSite.Plugin} object, or null.
      */
     public UpdateSite.Plugin getInfo() {
-        UpdateCenter uc = Jenkins.getInstance().getUpdateCenter();
+        UpdateCenter uc = Jenkins.get().getUpdateCenter();
+        UpdateSite.Plugin p = uc.getPlugin(getShortName(), getVersionNumber());
+        if (p != null) return p;
         return uc.getPlugin(getShortName());
+    }
+
+    private List<UpdateSite.Plugin> getInfoFromAllSites() {
+        UpdateCenter uc = Jenkins.get().getUpdateCenter();
+        return uc.getPluginFromAllSites(getShortName(), getVersionNumber());
     }
 
     /**
@@ -709,9 +1056,9 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
      */
     @Exported
     public boolean hasUpdate() {
-        return getUpdateInfo()!=null;
+        return getUpdateInfo() != null;
     }
-    
+
     @Exported
     @Deprecated // See https://groups.google.com/d/msg/jenkinsci-dev/kRobm-cxFw8/6V66uhibAwAJ
     public boolean isPinned() {
@@ -729,8 +1076,54 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
     }
 
     /**
+     * Same as {@link DetachedPluginsUtil#isDetachedPlugin}.
+     * @since 2.185
+     */
+    @Exported
+    public boolean isDetached() {
+        return DetachedPluginsUtil.isDetachedPlugin(shortName);
+    }
+
+    @Restricted(NoExternalUse.class)
+    public boolean hasImpliedDependents() {
+        if (!isDetached()) {
+            return false;
+        }
+        for (PluginWrapper p : Jenkins.get().getPluginManager().getPlugins()) {
+            for (Dependency dependency : DetachedPluginsUtil.getImpliedDependencies(p.shortName, p.getRequiredCoreVersion())) {
+                if (dependency.shortName.equals(shortName)) {
+                    return true;
+                }
+            }
+        }
+        return false;
+    }
+
+    /**
+     * Get list of implied dependencies.
+     * @since 2.296
+     */
+    @Restricted(NoExternalUse.class)
+    public @NonNull Set<String> getImpliedDependents() {
+        if (!isDetached()) {
+            return Collections.emptySet();
+        }
+
+        Set<String> implied = new HashSet<>();
+        for (PluginWrapper p : Jenkins.get().getPluginManager().getPlugins()) {
+            for (Dependency dependency : DetachedPluginsUtil.getImpliedDependencies(p.shortName, p.getRequiredCoreVersion())) {
+                if (dependency.shortName.equals(shortName)) {
+                    implied.add(p.shortName);
+                }
+            }
+        }
+        return implied;
+    }
+
+    /**
      * Sort by short name.
      */
+    @Override
     public int compareTo(PluginWrapper pw) {
         return shortName.compareToIgnoreCase(pw.shortName);
     }
@@ -747,7 +1140,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
      * Where is the backup file?
      */
     public File getBackupFile() {
-        return new File(Jenkins.getInstance().getRootDir(),"plugins/"+getShortName() + ".bak");
+        return new File(Jenkins.get().getRootDir(), "plugins/" + getShortName() + ".bak");
     }
 
     /**
@@ -773,6 +1166,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
 
     /**
      * Checks if this plugin is pinned and that's forcing us to use an older version than the bundled one.
+     * @deprecated removed without replacement
      */
     @Deprecated // See https://groups.google.com/d/msg/jenkinsci-dev/kRobm-cxFw8/6V66uhibAwAJ
     public boolean isPinningForcingOldVersion() {
@@ -780,7 +1174,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
     }
 
     @Extension
-    public final static PluginWrapperAdministrativeMonitor NOTICE = new PluginWrapperAdministrativeMonitor();
+    public static final PluginWrapperAdministrativeMonitor NOTICE = new PluginWrapperAdministrativeMonitor();
 
     /**
      * Administrative Monitor for failed plugins
@@ -792,6 +1186,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
             plugins.put(plugin.shortName, plugin);
         }
 
+        @Override
         public boolean isActivated() {
             return !plugins.isEmpty();
         }
@@ -817,15 +1212,102 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
         /**
          * Depending on whether the user said "dismiss" or "correct", send him to the right place.
          */
-        public void doAct(StaplerRequest req, StaplerResponse rsp) throws IOException {
-            if(req.hasParameter("correct")) {
-                rsp.sendRedirect(req.getContextPath()+"/pluginManager");
+        public void doAct(StaplerRequest2 req, StaplerResponse2 rsp) throws IOException {
+            if (req.hasParameter("correct")) {
+                rsp.sendRedirect(req.getContextPath() + "/pluginManager");
 
             }
         }
 
         public static PluginWrapperAdministrativeMonitor get() {
             return AdministrativeMonitor.all().get(PluginWrapperAdministrativeMonitor.class);
+        }
+    }
+
+    /**
+     * The result of the disablement of a plugin and its dependents plugins.
+     */
+    public static class PluginDisableResult {
+        private String plugin;
+        private PluginDisableStatus status;
+        private String message;
+        private Set<PluginDisableResult> dependentsDisableStatus = new HashSet<>();
+
+        public PluginDisableResult(String plugin) {
+            this.plugin = plugin;
+        }
+
+        public PluginDisableResult(String plugin, PluginDisableStatus status, String message) {
+            this.plugin = plugin;
+            this.status = status;
+            this.message = message;
+        }
+
+        public String getPlugin() {
+            return plugin;
+        }
+
+        public PluginDisableStatus getStatus() {
+            return status;
+        }
+
+        @Override
+        public boolean equals(Object o) {
+            if (this == o) return true;
+            if (o == null || getClass() != o.getClass()) return false;
+            PluginDisableResult that = (PluginDisableResult) o;
+            return Objects.equals(plugin, that.plugin);
+        }
+
+        @Override
+        public int hashCode() {
+            return Objects.hash(plugin);
+        }
+
+        public void setStatus(PluginDisableStatus status) {
+            this.status = status;
+        }
+
+        public String getMessage() {
+            return message;
+        }
+
+        public void setMessage(String message) {
+            this.message = message;
+        }
+
+        public Set<PluginDisableResult> getDependentsDisableStatus() {
+            return dependentsDisableStatus;
+        }
+
+        public void addDependentDisableStatus(PluginDisableResult dependentDisableStatus) {
+            dependentsDisableStatus.add(dependentDisableStatus);
+        }
+
+    }
+
+    /**
+     * An enum to hold the status of a disabling action against a plugin. To do it more reader-friendly.
+     */
+    public enum PluginDisableStatus {
+        NO_SUCH_PLUGIN,
+        DISABLED,
+        ALREADY_DISABLED,
+        NOT_DISABLED_DEPENDANTS,
+        ERROR_DISABLING
+    }
+
+    /**
+     * The strategies defined for disabling a plugin.
+     */
+    public enum PluginDisableStrategy {
+        NONE,
+        MANDATORY,
+        ALL;
+
+        @Override
+        public String toString() {
+            return this.name().toLowerCase();
         }
     }
 
@@ -836,14 +1318,14 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
 //
     @RequirePOST
     public HttpResponse doMakeEnabled() throws IOException {
-        Jenkins.getInstance().checkPermission(Jenkins.ADMINISTER);
+        Jenkins.get().checkPermission(Jenkins.ADMINISTER);
         enable();
         return HttpResponses.ok();
     }
 
     @RequirePOST
     public HttpResponse doMakeDisabled() throws IOException {
-        Jenkins.getInstance().checkPermission(Jenkins.ADMINISTER);
+        Jenkins.get().checkPermission(Jenkins.ADMINISTER);
         disable();
         return HttpResponses.ok();
     }
@@ -851,7 +1333,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
     @RequirePOST
     @Deprecated
     public HttpResponse doPin() throws IOException {
-        Jenkins.getInstance().checkPermission(Jenkins.ADMINISTER);
+        Jenkins.get().checkPermission(Jenkins.ADMINISTER);
         // See https://groups.google.com/d/msg/jenkinsci-dev/kRobm-cxFw8/6V66uhibAwAJ
         LOGGER.log(WARNING, "Call to pin plugin has been ignored. Plugin name: " + shortName);
         return HttpResponses.ok();
@@ -860,7 +1342,7 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
     @RequirePOST
     @Deprecated
     public HttpResponse doUnpin() throws IOException {
-        Jenkins.getInstance().checkPermission(Jenkins.ADMINISTER);
+        Jenkins.get().checkPermission(Jenkins.ADMINISTER);
         // See https://groups.google.com/d/msg/jenkinsci-dev/kRobm-cxFw8/6V66uhibAwAJ
         LOGGER.log(WARNING, "Call to unpin plugin has been ignored. Plugin name: " + shortName);
         return HttpResponses.ok();
@@ -868,17 +1350,60 @@ public class PluginWrapper implements Comparable<PluginWrapper>, ModelObject {
 
     @RequirePOST
     public HttpResponse doDoUninstall() throws IOException {
-        Jenkins jenkins = Jenkins.getActiveInstance();
-        
+        Jenkins jenkins = Jenkins.get();
+
         jenkins.checkPermission(Jenkins.ADMINISTER);
-        archive.delete();
+        Files.deleteIfExists(Util.fileToPath(archive));
+        Files.deleteIfExists(Util.fileToPath(disableFile));
 
         // Redo who depends on who.
-        jenkins.getPluginManager().resolveDependantPlugins();
+        jenkins.getPluginManager().resolveDependentPlugins();
 
-        return HttpResponses.redirectViaContextPath("/pluginManager/installed");   // send back to plugin manager
+        return HttpResponses.redirectViaContextPath("/manage/pluginManager/installed");   // send back to plugin manager
     }
 
+    @Restricted(DoNotUse.class) // Jelly
+    public List<UpdateSite.Warning> getActiveWarnings() {
+        return ExtensionList.lookupSingleton(UpdateSiteWarningsMonitor.class).getActivePluginWarningsByPlugin().getOrDefault(this, Collections.emptyList());
+    }
+
+    @Restricted(NoExternalUse.class)
+    public List<UpdateSite.Deprecation> getDeprecations() {
+        /* Would be much nicer to go through getInfoFromAllSites but that only works for currently published plugins */
+        List<UpdateSite.Deprecation> deprecations = new ArrayList<>();
+        final UpdateCenter updateCenter = Jenkins.get().getUpdateCenter();
+        if (updateCenter.isSiteDataReady()) {
+            for (UpdateSite site : updateCenter.getSites()) {
+                final UpdateSite.Data data = site.getData();
+                if (data != null) {
+                    for (Map.Entry<String, UpdateSite.Deprecation> entry : data.getDeprecations().entrySet()) {
+                        if (entry.getKey().equals(this.shortName)) {
+                            deprecations.add(entry.getValue());
+                        }
+                    }
+                }
+            }
+        }
+        return deprecations;
+    }
+
+    @Restricted(NoExternalUse.class)
+    public String getIssueTrackerReportUrl() {
+        final UpdateCenter updateCenter = Jenkins.get().getUpdateCenter();
+        if (updateCenter.isSiteDataReady()) {
+            for (UpdateSite site : updateCenter.getSites()) {
+                final UpdateSite.Plugin sitePlugin = site.getPlugin(this.shortName);
+                if (sitePlugin != null && sitePlugin.issueTrackers != null) {
+                    for (UpdateSite.IssueTracker issueTracker : sitePlugin.issueTrackers) {
+                        if (issueTracker.reportUrl != null) {
+                            return issueTracker.reportUrl;
+                        }
+                    }
+                }
+            }
+        }
+        return null;
+    }
 
     private static final Logger LOGGER = Logger.getLogger(PluginWrapper.class.getName());
 
