@@ -1,18 +1,18 @@
 /*
  * The MIT License
- * 
+ *
  * Copyright (c) 2004-2009, Sun Microsystems, Inc., Kohsuke Kawaguchi
- * 
+ *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
  * in the Software without restriction, including without limitation the rights
  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  * copies of the Software, and to permit persons to whom the Software is
  * furnished to do so, subject to the following conditions:
- * 
+ *
  * The above copyright notice and this permission notice shall be included in
  * all copies or substantial portions of the Software.
- * 
+ *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -21,15 +21,19 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson;
 
-import com.google.common.collect.Lists;
 import com.thoughtworks.xstream.XStream;
+import edu.umd.cs.findbugs.annotations.CheckForNull;
+import edu.umd.cs.findbugs.annotations.NonNull;
 import hudson.model.AbstractDescribableImpl;
 import hudson.model.Descriptor;
 import hudson.model.Saveable;
 import hudson.model.listeners.SaveableListener;
+import hudson.util.DaemonThreadFactory;
 import hudson.util.FormValidation;
+import hudson.util.NamingThreadFactory;
 import hudson.util.Scrambler;
 import hudson.util.Secret;
 import hudson.util.XStream2;
@@ -40,27 +44,37 @@ import java.io.Serializable;
 import java.net.Authenticator;
 import java.net.HttpURLConnection;
 import java.net.InetSocketAddress;
-import java.net.MalformedURLException;
 import java.net.PasswordAuthentication;
 import java.net.Proxy;
+import java.net.ProxySelector;
+import java.net.SocketAddress;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.time.Duration;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
+import java.util.concurrent.Executor;
+import java.util.concurrent.Executors;
+import java.util.concurrent.TimeUnit;
 import java.util.regex.Pattern;
-import javax.annotation.CheckForNull;
+import jenkins.UserAgentURLConnectionDecorator;
 import jenkins.model.Jenkins;
+import jenkins.security.stapler.StaplerAccessibleType;
 import jenkins.util.JenkinsJVM;
 import jenkins.util.SystemProperties;
-import org.apache.commons.httpclient.Credentials;
-import org.apache.commons.httpclient.HttpClient;
-import org.apache.commons.httpclient.NTCredentials;
-import org.apache.commons.httpclient.UsernamePasswordCredentials;
-import org.apache.commons.httpclient.auth.AuthScope;
-import org.apache.commons.httpclient.methods.GetMethod;
 import org.jenkinsci.Symbol;
 import org.jvnet.robust_http_client.RetryableHttpStream;
+import org.kohsuke.accmod.Restricted;
+import org.kohsuke.accmod.restrictions.NoExternalUse;
 import org.kohsuke.stapler.DataBoundConstructor;
+import org.kohsuke.stapler.DataBoundSetter;
 import org.kohsuke.stapler.QueryParameter;
 import org.kohsuke.stapler.interceptor.RequirePOST;
 
@@ -72,33 +86,35 @@ import org.kohsuke.stapler.interceptor.RequirePOST;
  * <p>
  * Proxy authentication (including NTLM) is implemented by setting a default
  * {@link Authenticator} which provides a {@link PasswordAuthentication}
- * (as described in the Java 6 tech note 
- * <a href="http://java.sun.com/javase/6/docs/technotes/guides/net/http-auth.html">
+ * (as described in the Java 8 tech note
+ * <a href="https://docs.oracle.com/javase/8/docs/technotes/guides/net/http-auth.html">
  * Http Authentication</a>).
  *
  * @see jenkins.model.Jenkins#proxy
  */
+@StaplerAccessibleType
 public final class ProxyConfiguration extends AbstractDescribableImpl<ProxyConfiguration> implements Saveable, Serializable {
     /**
      * Holds a default TCP connect timeout set on all connections returned from this class,
      * note this is value is in milliseconds, it's passed directly to {@link URLConnection#setConnectTimeout(int)}
      */
-    private static final int DEFAULT_CONNECT_TIMEOUT_MILLIS = SystemProperties.getInteger("hudson.ProxyConfiguration.DEFAULT_CONNECT_TIMEOUT_MILLIS", 20 * 1000);
-    
+    private static final int DEFAULT_CONNECT_TIMEOUT_MILLIS = SystemProperties.getInteger("hudson.ProxyConfiguration.DEFAULT_CONNECT_TIMEOUT_MILLIS", (int) TimeUnit.SECONDS.toMillis(20));
+
     public final String name;
     public final int port;
 
     /**
      * Possibly null proxy user name.
      */
-    private final String userName;
+    private String userName;
 
     /**
      * List of host names that shouldn't use proxy, as typed by users.
      *
      * @see #getNoProxyHostPatterns()
      */
-    public final String noProxyHost;
+    @Restricted(NoExternalUse.class)
+    public String noProxyHost;
 
     @Deprecated
     private String password;
@@ -107,50 +123,88 @@ public final class ProxyConfiguration extends AbstractDescribableImpl<ProxyConfi
      * encrypted password
      */
     private Secret secretPassword;
-    
+
     private String testUrl;
 
+    private transient Authenticator authenticator;
+
+    private transient boolean authCacheSeeded;
+
+    @DataBoundConstructor
     public ProxyConfiguration(String name, int port) {
-        this(name,port,null,null);
+        this(name, port, null, null);
     }
 
     public ProxyConfiguration(String name, int port, String userName, String password) {
-        this(name,port,userName,password,null);
+        this(name, port, userName, password, null);
     }
 
     public ProxyConfiguration(String name, int port, String userName, String password, String noProxyHost) {
-        this(name,port,userName,password,noProxyHost,null);
+        this(name, port, userName, password, noProxyHost, null);
     }
 
-    @DataBoundConstructor
     public ProxyConfiguration(String name, int port, String userName, String password, String noProxyHost, String testUrl) {
         this.name = Util.fixEmptyAndTrim(name);
         this.port = port;
         this.userName = Util.fixEmptyAndTrim(userName);
-        this.secretPassword = Secret.fromString(password);
+        String tempPassword = Util.fixEmptyAndTrim(password);
+        this.secretPassword = tempPassword != null ? Secret.fromString(tempPassword) : null;
         this.noProxyHost = Util.fixEmptyAndTrim(noProxyHost);
-        this.testUrl =Util.fixEmptyAndTrim(testUrl);
+        this.testUrl = Util.fixEmptyAndTrim(testUrl);
+        this.authenticator = newAuthenticator();
+    }
+
+    private Authenticator newAuthenticator() {
+        return new Authenticator() {
+            @Override
+            public PasswordAuthentication getPasswordAuthentication() {
+                String userName = getUserName();
+                if (getRequestorType() == RequestorType.PROXY && userName != null) {
+                    return new PasswordAuthentication(userName, Secret.toString(secretPassword).toCharArray());
+                }
+                return null;
+            }
+        };
     }
 
     public String getUserName() {
         return userName;
     }
 
-//    This method is public, if it was public only for jelly, then should make it private (or inline contents)
-//    Have left public, as can't tell if anyone else is using from plugins
+    public Secret getSecretPassword() {
+        return secretPassword;
+    }
+
     /**
-     * @return the password in plain text
+     * @deprecated
+     *      Use {@link #getSecretPassword()}
      */
+    @Deprecated
     public String getPassword() {
         return Secret.toString(secretPassword);
     }
 
+    /**
+     * @return the encrypted proxy password
+     *
+     * @deprecated
+     *      Use {@link #getSecretPassword()}
+     */
+    @Deprecated
     public String getEncryptedPassword() {
-        return (secretPassword == null) ? null : secretPassword.getEncryptedValue();
+        return secretPassword == null ? null : secretPassword.getEncryptedValue();
     }
 
     public String getTestUrl() {
         return testUrl;
+    }
+
+    public int getPort() {
+        return port;
+    }
+
+    public String getName() {
+        return name;
     }
 
     /**
@@ -160,18 +214,46 @@ public final class ProxyConfiguration extends AbstractDescribableImpl<ProxyConfi
         return getNoProxyHostPatterns(noProxyHost);
     }
 
+    public String getNoProxyHost() {
+        return noProxyHost;
+    }
+
     /**
      * Returns the list of properly formatted no proxy host names.
      */
     public static List<Pattern> getNoProxyHostPatterns(String noProxyHost) {
-        if (noProxyHost==null)  return Collections.emptyList();
+        if (noProxyHost == null)  return Collections.emptyList();
 
-        List<Pattern> r = Lists.newArrayList();
+        List<Pattern> r = new ArrayList<>();
         for (String s : noProxyHost.split("[ \t\n,|]+")) {
-            if (s.length()==0)  continue;
+            if (s.isEmpty())  continue;
             r.add(Pattern.compile(s.replace(".", "\\.").replace("*", ".*")));
         }
         return r;
+    }
+
+    private static boolean isExcluded(String needle, String haystack) {
+        return getNoProxyHostPatterns(haystack).stream().anyMatch(p -> p.matcher(needle).matches());
+    }
+
+    @DataBoundSetter
+    public void setSecretPassword(Secret secretPassword) {
+        this.secretPassword = secretPassword;
+    }
+
+    @DataBoundSetter
+    public void setTestUrl(String testUrl) {
+        this.testUrl = testUrl;
+    }
+
+    @DataBoundSetter
+    public void setUserName(String userName) {
+        this.userName = Util.fixEmptyAndTrim(userName);
+    }
+
+    @DataBoundSetter
+    public void setNoProxyHost(String noProxyHost) {
+        this.noProxyHost = noProxyHost;
     }
 
     /**
@@ -188,17 +270,15 @@ public final class ProxyConfiguration extends AbstractDescribableImpl<ProxyConfi
     }
 
     public static Proxy createProxy(String host, String name, int port, String noProxyHost) {
-        if (host!=null && noProxyHost!=null) {
-            for (Pattern p : getNoProxyHostPatterns(noProxyHost)) {
-                if (p.matcher(host).matches())
-                    return Proxy.NO_PROXY;
-            }
+        if (host != null && noProxyHost != null && isExcluded(host, noProxyHost)) {
+           return Proxy.NO_PROXY;
         }
-        return new Proxy(Proxy.Type.HTTP, new InetSocketAddress(name,port));
+        return new Proxy(Proxy.Type.HTTP, new InetSocketAddress(name, port));
     }
 
+    @Override
     public void save() throws IOException {
-        if(BulkChange.contains(this))   return;
+        if (BulkChange.contains(this))   return;
         XmlFile config = getXmlFile();
         config.write(this);
         SaveableListener.fireOnChange(this, config);
@@ -209,16 +289,18 @@ public final class ProxyConfiguration extends AbstractDescribableImpl<ProxyConfi
             // backward compatibility : get scrambled password and store it encrypted
             secretPassword = Secret.fromString(Scrambler.descramble(password));
         password = null;
+        authenticator = newAuthenticator();
+        userName = Util.fixEmptyAndTrim(userName);
         return this;
     }
 
     public static XmlFile getXmlFile() {
-        return new XmlFile(XSTREAM, new File(Jenkins.getInstance().getRootDir(), "proxy.xml"));
+        return new XmlFile(XSTREAM, new File(Jenkins.get().getRootDir(), "proxy.xml"));
     }
 
     public static ProxyConfiguration load() throws IOException {
         XmlFile f = getXmlFile();
-        if(f.exists())
+        if (f.exists())
             return (ProxyConfiguration) f.read();
         else
             return null;
@@ -226,60 +308,182 @@ public final class ProxyConfiguration extends AbstractDescribableImpl<ProxyConfi
 
     /**
      * This method should be used wherever {@link URL#openConnection()} to internet URLs is invoked directly.
+     *
+     * @deprecated use {@link #newHttpClient}/{@link #newHttpClientBuilder} and {@link #newHttpRequestBuilder(URI)}
      */
+    @Deprecated
     public static URLConnection open(URL url) throws IOException {
         final ProxyConfiguration p = get();
-        
+
         URLConnection con;
-        if(p==null) {
+        if (p == null) {
             con = url.openConnection();
         } else {
-            con = url.openConnection(p.createProxy(url.getHost()));
-            if(p.getUserName()!=null) {
+            Proxy proxy = p.createProxy(url.getHost());
+            con = url.openConnection(proxy);
+            if (p.getUserName() != null) {
                 // Add an authenticator which provides the credentials for proxy authentication
-                Authenticator.setDefault(new Authenticator() {
-                    @Override
-                    public PasswordAuthentication getPasswordAuthentication() {
-                        if (getRequestorType()!=RequestorType.PROXY)    return null;
-                        return new PasswordAuthentication(p.getUserName(),
-                                p.getPassword().toCharArray());
-                    }
-                });
+                Authenticator.setDefault(p.authenticator);
+                p.jenkins48775workaround(proxy, url);
             }
         }
-        
-        if(DEFAULT_CONNECT_TIMEOUT_MILLIS > 0) {
+
+        if (DEFAULT_CONNECT_TIMEOUT_MILLIS > 0) {
             con.setConnectTimeout(DEFAULT_CONNECT_TIMEOUT_MILLIS);
         }
-        
-        if (JenkinsJVM.isJenkinsJVM()) { // this code may run on a slave
+
+        if (JenkinsJVM.isJenkinsJVM()) { // this code may run on an agent
             decorate(con);
         }
 
         return con;
     }
 
+    /**
+     * @deprecated use {@link #newHttpClient}/{@link #newHttpClientBuilder} and {@link #newHttpRequestBuilder(URI)}
+     */
+    @Deprecated
     public static InputStream getInputStream(URL url) throws IOException {
         final ProxyConfiguration p = get();
-        if (p == null) 
+        if (p == null)
             return new RetryableHttpStream(url);
 
-        InputStream is = new RetryableHttpStream(url, p.createProxy(url.getHost()));
+        Proxy proxy = p.createProxy(url.getHost());
+        InputStream is = new RetryableHttpStream(url, proxy);
         if (p.getUserName() != null) {
             // Add an authenticator which provides the credentials for proxy authentication
-            Authenticator.setDefault(new Authenticator() {
-
-                @Override
-                public PasswordAuthentication getPasswordAuthentication() {
-                    if (getRequestorType() != RequestorType.PROXY) {
-                        return null;
-                    }
-                    return new PasswordAuthentication(p.getUserName(), p.getPassword().toCharArray());
-                }
-            });
+            Authenticator.setDefault(p.authenticator);
+            p.jenkins48775workaround(proxy, url);
         }
 
         return is;
+    }
+
+    /**
+     * Return a new {@link HttpClient} with Jenkins-specific default settings.
+     *
+     * <p>Equivalent to {@code newHttpClientBuilder().followRedirects(HttpClient.Redirect.NORMAL).build()}.
+     *
+     * @return a new {@link HttpClient}
+     * @since 2.379
+     * @see #newHttpClientBuilder
+     */
+    public static HttpClient newHttpClient() {
+        return newHttpClientBuilder().followRedirects(HttpClient.Redirect.NORMAL).build();
+    }
+
+    private static final Executor httpClientExecutor = Executors.newCachedThreadPool(new NamingThreadFactory(new DaemonThreadFactory(), "Jenkins HttpClient"));
+
+    /**
+     * Create a new {@link HttpClient.Builder} preconfigured with Jenkins-specific default settings.
+     *
+     * <p>The Jenkins-specific default settings include a proxy server and proxy authentication (as
+     * configured by {@link ProxyConfiguration}) and a connection timeout (as configured by {@link
+     * ProxyConfiguration#DEFAULT_CONNECT_TIMEOUT_MILLIS}).
+     *
+     * <p><strong>Warning:</strong> if both {@link #getName} and {@link #getUserName} are set
+     * (meaning that an authenticated proxy is defined),
+     * you will not be able to pass an {@code Authorization} header to the real server
+     * when running on Java 17 and later
+     * (pending <a href="https://bugs.openjdk.org/browse/JDK-8326949">JDK-8326949</a>.
+     *
+     * @return an {@link HttpClient.Builder}
+     * @since 2.379
+     */
+    public static HttpClient.Builder newHttpClientBuilder() {
+        HttpClient.Builder httpClientBuilder = HttpClient.newBuilder();
+        ProxyConfiguration proxyConfiguration = get();
+        if (proxyConfiguration != null) {
+            if (proxyConfiguration.getName() != null) {
+                httpClientBuilder.proxy(new JenkinsProxySelector(
+                        proxyConfiguration.getName(),
+                        proxyConfiguration.getPort(),
+                        proxyConfiguration.getNoProxyHost()));
+            }
+            if (proxyConfiguration.getUserName() != null) {
+                httpClientBuilder.authenticator(proxyConfiguration.authenticator);
+            }
+        }
+        if (DEFAULT_CONNECT_TIMEOUT_MILLIS > 0) {
+            httpClientBuilder.connectTimeout(Duration.ofMillis(DEFAULT_CONNECT_TIMEOUT_MILLIS));
+        }
+        httpClientBuilder.executor(httpClientExecutor);
+        return httpClientBuilder;
+    }
+
+    /**
+     * Create a new {@link HttpRequest.Builder} builder with the given URI preconfigured with
+     * Jenkins-specific default settings.
+     *
+     * <p>The Jenkins-specific default settings include a custom user agent on the controller
+     * (unless {@link UserAgentURLConnectionDecorator#DISABLED} is true).
+     *
+     * @param uri the request URI
+     * @return an {@link HttpRequest.Builder}
+     * @throws IllegalArgumentException if the URI scheme is not supported
+     * @since 2.379
+     */
+    public static HttpRequest.Builder newHttpRequestBuilder(URI uri) {
+        HttpRequest.Builder httpRequestBuilder = HttpRequest.newBuilder(uri);
+        if (JenkinsJVM.isJenkinsJVM() && !UserAgentURLConnectionDecorator.DISABLED) {
+            httpRequestBuilder.setHeader("User-Agent", UserAgentURLConnectionDecorator.getUserAgent());
+        }
+        return httpRequestBuilder;
+    }
+
+    private static class JenkinsProxySelector extends ProxySelector {
+        @NonNull private final Proxy proxy;
+        @CheckForNull private final String exclusions;
+
+        private JenkinsProxySelector(@NonNull String hostname, int port, @CheckForNull String exclusions) {
+            this.proxy = new Proxy(Proxy.Type.HTTP, new InetSocketAddress(hostname, port));
+            this.exclusions = exclusions;
+        }
+
+        @Override
+        public void connectFailed(URI uri, SocketAddress sa, IOException e) {
+            // Ignore.
+        }
+
+        @Override
+        public List<Proxy> select(URI uri) {
+            Objects.requireNonNull(uri);
+            String scheme = Objects.requireNonNull(uri.getScheme());
+            String host = Objects.requireNonNull(uri.getHost());
+            boolean excluded = exclusions != null && isExcluded(host.toLowerCase(), exclusions);
+            if (!excluded && (scheme.equalsIgnoreCase("http") || scheme.equalsIgnoreCase("https"))) {
+                return List.of(proxy);
+            } else {
+                return List.of(Proxy.NO_PROXY);
+            }
+        }
+    }
+
+    /**
+     * If the first URL we try to access with a HTTP proxy is HTTPS then the authentication cache will not have been
+     * pre-populated, so we try to access at least one HTTP URL before the very first HTTPS url.
+     * @param url the actual URL being opened.
+     */
+    private void jenkins48775workaround(Proxy proxy, URL url) {
+        if ("https".equals(url.getProtocol()) && !authCacheSeeded && proxy != Proxy.NO_PROXY) {
+            HttpURLConnection preAuth = null;
+            try {
+                // We do not care if there is anything at this URL, all we care is that it is using the proxy
+                preAuth = (HttpURLConnection) new URL("http", url.getHost(), -1, "/").openConnection(proxy);
+                preAuth.setRequestMethod("HEAD");
+                preAuth.connect();
+            } catch (IOException e) {
+                // ignore, this is just a probe we don't care at all
+            } finally {
+                if (preAuth != null) {
+                    preAuth.disconnect();
+                }
+            }
+            authCacheSeeded = true;
+        } else if ("https".equals(url.getProtocol())) {
+            // if we access any http url using a proxy then the auth cache will have been seeded
+            authCacheSeeded = authCacheSeeded || proxy != Proxy.NO_PROXY;
+        }
     }
 
     @CheckForNull
@@ -294,7 +498,7 @@ public final class ProxyConfiguration extends AbstractDescribableImpl<ProxyConfi
     private static ProxyConfiguration _get() {
         JenkinsJVM.checkJenkinsJVM();
         // this code could be called between the JVM flag being set and theInstance initialized
-        Jenkins jenkins = Jenkins.getInstance();
+        Jenkins jenkins = Jenkins.getInstanceOrNull();
         return jenkins == null ? null : jenkins.proxy;
     }
 
@@ -313,6 +517,7 @@ public final class ProxyConfiguration extends AbstractDescribableImpl<ProxyConfi
 
     @Extension @Symbol("proxy")
     public static class DescriptorImpl extends Descriptor<ProxyConfiguration> {
+        @NonNull
         @Override
         public String getDisplayName() {
             return "Proxy Configuration";
@@ -335,56 +540,85 @@ public final class ProxyConfiguration extends AbstractDescribableImpl<ProxyConfi
             return FormValidation.ok();
         }
 
+        /**
+         * Do check if the provided value is empty or composed of whitespaces.
+         * If so, return a validation warning.
+         *
+         * @param value the value to test
+         * @return a validation warning iff the provided value is empty or composed of whitespaces.
+         */
+        private static FormValidation checkProxyCredentials(String value) {
+            value = Util.fixEmptyAndTrim(value);
+            if (value == null) {
+                return FormValidation.ok();
+            } else {
+                return FormValidation.warning(Messages.ProxyConfiguration_NonTLSWarning());
+            }
+        }
+
         @RequirePOST
+        @Restricted(NoExternalUse.class)
+        public FormValidation doCheckUserName(@QueryParameter String value) {
+            return checkProxyCredentials(value);
+        }
+
+        @RequirePOST
+        @Restricted(NoExternalUse.class)
+        public FormValidation doCheckSecretPassword(@QueryParameter String value) {
+            return checkProxyCredentials(value);
+        }
+
+        @RequirePOST
+        @Restricted(NoExternalUse.class)
         public FormValidation doValidateProxy(
                 @QueryParameter("testUrl") String testUrl, @QueryParameter("name") String name, @QueryParameter("port") int port,
-                @QueryParameter("userName") String userName, @QueryParameter("password") String password,
-                @QueryParameter("noProxyHost") String noProxyHost) {
+                @QueryParameter("userName") String userName, @QueryParameter("secretPassword") Secret password,
+                @QueryParameter("noProxyHost") String noProxyHost) throws InterruptedException {
 
-            Jenkins.getInstance().checkPermission(Jenkins.ADMINISTER);
+            Jenkins.get().checkPermission(Jenkins.ADMINISTER);
 
-            if (Util.fixEmptyAndTrim(testUrl) == null) {
+            testUrl = Util.fixEmptyAndTrim(testUrl);
+            if (testUrl == null) {
                 return FormValidation.error(Messages.ProxyConfiguration_TestUrlRequired());
             }
 
-            String host = testUrl;
+            URI uri;
             try {
-                URL url = new URL(testUrl);
-                host = url.getHost();
-            } catch (MalformedURLException e) {
-                return FormValidation.error(Messages.ProxyConfiguration_MalformedTestUrl(testUrl));
+                uri = new URI(testUrl);
+            } catch (URISyntaxException e) {
+                return FormValidation.error(e, Messages.ProxyConfiguration_MalformedTestUrl(testUrl));
             }
-
-            GetMethod method = null;
+            HttpClient.Builder builder = HttpClient.newBuilder();
+            builder.connectTimeout(DEFAULT_CONNECT_TIMEOUT_MILLIS > 0
+                    ? Duration.ofMillis(DEFAULT_CONNECT_TIMEOUT_MILLIS)
+                    : Duration.ofSeconds(30));
+            if (Util.fixEmptyAndTrim(name) != null && !isNoProxyHost(uri.getHost(), noProxyHost)) {
+                builder.proxy(ProxySelector.of(new InetSocketAddress(name, port)));
+                Authenticator authenticator = newValidationAuthenticator(userName, password != null ? password.getPlainText() : null);
+                builder.authenticator(authenticator);
+            }
+            HttpClient httpClient = builder.build();
+            HttpRequest httpRequest;
             try {
-                method = new GetMethod(testUrl);
-                method.getParams().setParameter("http.socket.timeout", DEFAULT_CONNECT_TIMEOUT_MILLIS > 0 ? DEFAULT_CONNECT_TIMEOUT_MILLIS : new Integer(30 * 1000));
-                
-                HttpClient client = new HttpClient();
-                if (Util.fixEmptyAndTrim(name) != null && !isNoProxyHost(host, noProxyHost)) {
-                    client.getHostConfiguration().setProxy(name, port);
-                    Credentials credentials = createCredentials(userName, password);
-                    AuthScope scope = new AuthScope(AuthScope.ANY_HOST, AuthScope.ANY_PORT);
-                    client.getState().setProxyCredentials(scope, credentials);
+                httpRequest = ProxyConfiguration.newHttpRequestBuilder(uri)
+                        .method("HEAD", HttpRequest.BodyPublishers.noBody())
+                        .build();
+            } catch (IllegalArgumentException e) {
+                return FormValidation.error(e, Messages.ProxyConfiguration_MalformedTestUrl(testUrl));
+            }
+            try {
+                HttpResponse<Void> httpResponse = httpClient.send(httpRequest, HttpResponse.BodyHandlers.discarding());
+                if (httpResponse.statusCode() < HttpURLConnection.HTTP_BAD_REQUEST) {
+                    return FormValidation.ok(Messages.ProxyConfiguration_Success(httpResponse.statusCode()));
                 }
-                
-                int code = client.executeMethod(method);
-                if (code != HttpURLConnection.HTTP_OK) {
-                    return FormValidation.error(Messages.ProxyConfiguration_FailedToConnect(testUrl, code));
-                }
+                return FormValidation.error(Messages.ProxyConfiguration_FailedToConnect(testUrl, httpResponse.statusCode()));
             } catch (IOException e) {
                 return FormValidation.error(e, Messages.ProxyConfiguration_FailedToConnectViaProxy(testUrl));
-            } finally {
-                if (method != null) {
-                    method.releaseConnection();
-                }
             }
-            
-            return FormValidation.ok(Messages.ProxyConfiguration_Success());
         }
 
         private boolean isNoProxyHost(String host, String noProxyHost) {
-            if (host!=null && noProxyHost!=null) {
+            if (host != null && noProxyHost != null) {
                 for (Pattern p : getNoProxyHostPatterns(noProxyHost)) {
                     if (p.matcher(host).matches()) {
                         return true;
@@ -394,14 +628,19 @@ public final class ProxyConfiguration extends AbstractDescribableImpl<ProxyConfi
             return false;
         }
 
-        private Credentials createCredentials(String userName, String password) {
-            if (userName.indexOf('\\') >= 0){
-                final String domain = userName.substring(0, userName.indexOf('\\'));
-                final String user = userName.substring(userName.indexOf('\\') + 1);
-                return new NTCredentials(user, Secret.fromString(password).getPlainText(), "", domain);
-            } else {
-                return new UsernamePasswordCredentials(userName, Secret.fromString(password).getPlainText());
-            }
+        /**
+         * Create an {@link Authenticator} for use in validation context.
+         *
+         * @see #newAuthenticator
+         */
+        private static Authenticator newValidationAuthenticator(String userName, String password) {
+            return new Authenticator() {
+                @Override
+                protected PasswordAuthentication getPasswordAuthentication() {
+                    return new PasswordAuthentication(
+                            userName, Secret.fromString(password).getPlainText().toCharArray());
+                }
+            };
         }
     }
 }
