@@ -1,24 +1,23 @@
 package hudson.init;
 
-import org.kohsuke.MetaInfServices;
-import org.jvnet.hudson.reactor.Task;
-
+import hudson.PluginManager;
+import hudson.util.DirScanner;
+import hudson.util.FileVisitor;
 import java.io.File;
 import java.io.FilenameFilter;
 import java.io.IOException;
-import java.util.Collection;
-import java.util.List;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
+import java.util.Comparator;
+import java.util.Iterator;
+import java.util.List;
+import java.util.ServiceLoader;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-
-import hudson.PluginManager;
 import jenkins.util.SystemProperties;
-import hudson.util.DirScanner;
-import hudson.util.FileVisitor;
-import java.util.Iterator;
-import java.util.ServiceLoader;
+import org.jvnet.hudson.reactor.Task;
+import org.kohsuke.MetaInfServices;
 
 /**
  * Strategy pattern of the various key decision making during the Jenkins initialization.
@@ -30,7 +29,7 @@ import java.util.ServiceLoader;
  *
  * <p>
  * To register, put {@link MetaInfServices} on your implementation.
- * 
+ *
  * @author Kohsuke Kawaguchi
  */
 public class InitStrategy {
@@ -45,7 +44,7 @@ public class InitStrategy {
      *      and when that happens, Jenkins will ignore all but the first one in the list.
      */
     public List<File> listPluginArchives(PluginManager pm) throws IOException {
-        List<File> r = new ArrayList<File>();
+        List<File> r = new ArrayList<>();
 
         // the ordering makes sure that during the debugging we get proper precedence among duplicates.
         // for example, while doing "mvn jpi:run" or "mvn hpi:run" on a plugin that's bundled with Jenkins, we want to the
@@ -60,33 +59,38 @@ public class InitStrategy {
 
         return r;
     }
-    
+
     private void listPluginFiles(PluginManager pm, String extension, Collection<File> all) throws IOException {
         File[] files = pm.rootDir.listFiles(new FilterByExtension(extension));
-        if (files==null)
+        if (files == null)
             throw new IOException("Jenkins is unable to create " + pm.rootDir + "\nPerhaps its security privilege is insufficient");
 
-        all.addAll(Arrays.asList(files));
+        List<File> pluginFiles = new ArrayList<>();
+        pluginFiles.addAll(List.of(files));
+        pluginFiles.sort(Comparator.comparing(File::getName));
+
+        all.addAll(pluginFiles);
     }
 
     /**
      * Lists up additional bundled plugins from the system property {@code hudson.bundled.plugins}.
      * Since 1.480 glob syntax is supported.
-     * For use in the "mvn hudson-dev:run".
+     * For use in {@code mvn jetty:run}.
      * TODO: maven-hpi-plugin should inject its own InitStrategy instead of having this in the core.
      */
     protected void getBundledPluginsFromProperty(final List<File> r) {
         String hplProperty = SystemProperties.getString("hudson.bundled.plugins");
         if (hplProperty != null) {
+            List<File> pluginFiles = new ArrayList<>();
             for (String hplLocation : hplProperty.split(",")) {
                 File hpl = new File(hplLocation.trim());
                 if (hpl.exists()) {
-                    r.add(hpl);
+                    pluginFiles.add(hpl);
                 } else if (hpl.getName().contains("*")) {
                     try {
                         new DirScanner.Glob(hpl.getName(), null).scan(hpl.getParentFile(), new FileVisitor() {
                             @Override public void visit(File f, String relativePath) throws IOException {
-                                r.add(f);
+                                pluginFiles.add(f);
                             }
                         });
                     } catch (IOException x) {
@@ -96,12 +100,14 @@ public class InitStrategy {
                     LOGGER.warning("bundled plugin " + hplLocation + " does not exist");
                 }
             }
+            pluginFiles.sort(Comparator.comparing(File::getName));
+            r.addAll(pluginFiles);
         }
     }
 
     /**
      * Selectively skip some of the initialization tasks.
-     * 
+     *
      * @return
      *      true to skip the execution.
      */
@@ -128,10 +134,11 @@ public class InitStrategy {
     private static class FilterByExtension implements FilenameFilter {
         private final List<String> extensions;
 
-        public FilterByExtension(String... extensions) {
+        FilterByExtension(String... extensions) {
             this.extensions = Arrays.asList(extensions);
         }
 
+        @Override
         public boolean accept(File dir, String name) {
             for (String extension : extensions) {
                 if (name.endsWith(extension))
