@@ -21,17 +21,19 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.model;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSortedSet;
+import static java.util.logging.Level.WARNING;
+
+import edu.umd.cs.findbugs.annotations.CheckForNull;
+import edu.umd.cs.findbugs.annotations.NonNull;
 import hudson.AbortException;
 import hudson.EnvVars;
 import hudson.FilePath;
 import hudson.Functions;
 import hudson.Launcher;
-import jenkins.scm.RunWithSCM;
-import jenkins.util.SystemProperties;
+import hudson.Util;
 import hudson.console.ModelHyperlinkNote;
 import hudson.model.Fingerprint.BuildPtr;
 import hudson.model.Fingerprint.RangeSet;
@@ -42,14 +44,13 @@ import hudson.remoting.ChannelClosedException;
 import hudson.remoting.RequestAbortedException;
 import hudson.scm.ChangeLogParser;
 import hudson.scm.ChangeLogSet;
-import hudson.scm.ChangeLogSet.Entry;
 import hudson.scm.NullChangeLogParser;
 import hudson.scm.SCM;
 import hudson.scm.SCMRevisionState;
 import hudson.slaves.NodeProperty;
+import hudson.slaves.OfflineCause;
 import hudson.slaves.WorkspaceList;
 import hudson.slaves.WorkspaceList.Lease;
-import hudson.slaves.OfflineCause;
 import hudson.tasks.BuildStep;
 import hudson.tasks.BuildStepMonitor;
 import hudson.tasks.BuildTrigger;
@@ -57,20 +58,17 @@ import hudson.tasks.BuildWrapper;
 import hudson.tasks.Builder;
 import hudson.tasks.Fingerprinter.FingerprintAction;
 import hudson.tasks.Publisher;
-import hudson.util.*;
-import jenkins.model.Jenkins;
-import org.kohsuke.stapler.HttpResponse;
-import org.kohsuke.stapler.Stapler;
-import org.kohsuke.stapler.StaplerRequest;
-import org.kohsuke.stapler.StaplerResponse;
-import org.kohsuke.stapler.export.Exported;
-import org.xml.sax.SAXException;
-
-import javax.servlet.ServletException;
+import hudson.util.AdaptedIterator;
+import hudson.util.HttpResponses;
+import hudson.util.Iterators;
+import hudson.util.VariableResolver;
+import io.jenkins.servlet.ServletExceptionWrapper;
+import jakarta.servlet.ServletException;
 import java.io.File;
 import java.io.IOException;
 import java.io.InterruptedIOException;
 import java.lang.ref.WeakReference;
+import java.nio.channels.ClosedByInterruptException;
 import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.Collection;
@@ -81,16 +79,22 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.SortedSet;
+import java.util.TreeSet;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import javax.annotation.CheckForNull;
-import javax.annotation.Nonnull;
-import org.kohsuke.stapler.interceptor.RequirePOST;
-
-import static java.util.logging.Level.WARNING;
-
+import jenkins.model.Jenkins;
 import jenkins.model.lazy.BuildReference;
 import jenkins.model.lazy.LazyBuildMixIn;
+import jenkins.scm.RunWithSCM;
+import jenkins.util.SystemProperties;
+import org.kohsuke.stapler.HttpResponse;
+import org.kohsuke.stapler.Stapler;
+import org.kohsuke.stapler.StaplerRequest;
+import org.kohsuke.stapler.StaplerResponse;
+import org.kohsuke.stapler.export.Exported;
+import org.kohsuke.stapler.interceptor.RequirePOST;
+import org.xml.sax.SAXException;
 
 /**
  * Base implementation of {@link Run}s that build software.
@@ -100,7 +104,7 @@ import jenkins.model.lazy.LazyBuildMixIn;
  * @author Kohsuke Kawaguchi
  * @see AbstractProject
  */
-public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends AbstractBuild<P,R>> extends Run<P,R> implements Queue.Executable, LazyBuildMixIn.LazyLoadingRun<P,R>, RunWithSCM<P,R> {
+public abstract class AbstractBuild<P extends AbstractProject<P, R>, R extends AbstractBuild<P, R>> extends Run<P, R> implements Queue.Executable, LazyBuildMixIn.LazyLoadingRun<P, R>, RunWithSCM<P, R> {
 
     /**
      * Set if we want the blame information to flow from upstream to downstream build.
@@ -109,7 +113,7 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
 
     /**
      * Name of the agent this project was built on.
-     * Null or "" if built by the master. (null happens when we read old record that didn't have this information.)
+     * Null or "" if built by the built-in node. (null happens when we read old record that didn't have this information.)
      */
     private String builtOn;
 
@@ -132,7 +136,7 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
     /**
      * Changes in this build.
      */
-    private volatile transient WeakReference<ChangeLogSet<? extends Entry>> changeSet;
+    private transient volatile WeakReference<ChangeLogSet<? extends ChangeLogSet.Entry>> changeSet;
 
     /**
      * Cumulative list of people who contributed to the build problem.
@@ -155,7 +159,7 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
      */
     protected transient List<Environment> buildEnvironments;
 
-    private transient final LazyBuildMixIn.RunMixIn<P,R> runMixIn = new LazyBuildMixIn.RunMixIn<P,R>() {
+    private final transient LazyBuildMixIn.RunMixIn<P, R> runMixIn = new LazyBuildMixIn.RunMixIn<>() {
         @Override protected R asRun() {
             return _this();
         }
@@ -177,10 +181,11 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
         return getParent();
     }
 
-    @Override public final LazyBuildMixIn.RunMixIn<P,R> getRunMixIn() {
+    @Override public final LazyBuildMixIn.RunMixIn<P, R> getRunMixIn() {
         return runMixIn;
     }
 
+    @NonNull
     @Override protected final BuildReference<R> createReference() {
         return getRunMixIn().createReference();
     }
@@ -206,17 +211,17 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
      *      null, for example if the agent that this build run no longer exists.
      */
     public @CheckForNull Node getBuiltOn() {
-        if (builtOn==null || builtOn.equals(""))
-            return Jenkins.getInstance();
+        if (builtOn == null || builtOn.isEmpty())
+            return Jenkins.get();
         else
-            return Jenkins.getInstance().getNode(builtOn);
+            return Jenkins.get().getNode(builtOn);
     }
 
     /**
-     * Returns the name of the agent it was built on; null or "" if built by the master.
+     * Returns the name of the agent it was built on; null or "" if built by the built-in node.
      * (null happens when we read old record that didn't have this information.)
      */
-    @Exported(name="builtOn")
+    @Exported(name = "builtOn")
     public String getBuiltOnStr() {
         return builtOn;
     }
@@ -228,7 +233,7 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
      *
      * @since 1.429
      */
-    protected void setBuiltOnStr( String builtOn ) {
+    protected void setBuiltOnStr(String builtOn) {
         this.builtOn = builtOn;
     }
 
@@ -246,8 +251,14 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
      * @since 1.421
      * @see AbstractProject#getRootProject()
      */
-    public AbstractBuild<?,?> getRootBuild() {
+    public AbstractBuild<?, ?> getRootBuild() {
         return this;
+    }
+
+    @Override
+    public Queue.Executable getParentExecutable() {
+        AbstractBuild<?, ?> rootBuild = getRootBuild();
+        return rootBuild != this ? rootBuild : null;
     }
 
     /**
@@ -261,9 +272,11 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
      * <p>
      * If you override this method, you'll most likely also want to override
      * {@link #getDisplayName()}.
+     * @deprecated navigation through a hierarchy should be done through breadcrumbs, do not add a link using this method
      */
+    @Deprecated(since = "2.364")
     public String getUpUrl() {
-        return Functions.getNearestAncestorUrl(Stapler.getCurrentRequest(),getParent())+'/';
+        return Functions.getNearestAncestorUrl(Stapler.getCurrentRequest2(), getParent()) + '/';
     }
 
     /**
@@ -280,9 +293,9 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
      * @since 1.319
      */
     public final @CheckForNull FilePath getWorkspace() {
-        if (workspace==null) return null;
+        if (workspace == null) return null;
         Node n = getBuiltOn();
-        if (n==null) return null;
+        if (n == null) return null;
         return n.createPath(workspace);
     }
 
@@ -290,7 +303,7 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
      * Normally, a workspace is assigned by {@link hudson.model.Run.RunExecution}, but this lets you set the workspace in case
      * {@link AbstractBuild} is created without a build.
      */
-    protected void setWorkspace(@Nonnull FilePath ws) {
+    protected void setWorkspace(@NonNull FilePath ws) {
         this.workspace = ws.getRemote();
     }
 
@@ -302,7 +315,7 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
      */
     public final FilePath getModuleRoot() {
         FilePath ws = getWorkspace();
-        if (ws==null)    return null;
+        if (ws == null)    return null;
         return getParent().getScm().getModuleRoot(ws, this);
     }
 
@@ -315,7 +328,7 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
      */
     public FilePath[] getModuleRoots() {
         FilePath ws = getWorkspace();
-        if (ws==null)    return null;
+        if (ws == null)    return null;
         return getParent().getScm().getModuleRoots(ws, this);
     }
 
@@ -326,7 +339,7 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
 
     @Override
     @Exported
-    @Nonnull public Set<User> getCulprits() {
+    @NonNull public Set<User> getCulprits() {
         return RunWithSCM.super.getCulprits();
     }
 
@@ -336,11 +349,11 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
     }
 
     @Override
-    @Nonnull
+    @NonNull
     public Set<User> calculateCulprits() {
         Set<User> c = RunWithSCM.super.calculateCulprits();
 
-        AbstractBuild<P,R> p = getPreviousCompletedBuild();
+        AbstractBuild<P, R> p = getPreviousCompletedBuild();
         if (upstreamCulprits) {
             // If we have dependencies since the last successful build, add their authors to our list
             if (p != null && p.getPreviousNotFailedBuild() != null) {
@@ -404,7 +417,7 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
          * @return Returns the current {@link Node}
          * @throws IllegalStateException if that cannot be determined
          */
-        protected final @Nonnull Node getCurrentNode() throws IllegalStateException {
+        protected final @NonNull Node getCurrentNode() throws IllegalStateException {
             Executor exec = Executor.currentExecutor();
             if (exec == null) {
                 throw new IllegalStateException("not being called from an executor thread");
@@ -433,7 +446,7 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
          * @param wsl
          *      Passed in for the convenience. The returned path must be registered to this object.
          */
-        protected Lease decideWorkspace(@Nonnull Node n, WorkspaceList wsl) throws InterruptedException, IOException {
+        protected Lease decideWorkspace(@NonNull Node n, WorkspaceList wsl) throws InterruptedException, IOException {
             String customWorkspace = getProject().getCustomWorkspace();
             if (customWorkspace != null) {
                 FilePath rootPath = n.getRootPath();
@@ -451,57 +464,73 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
             return wsl.allocate(ws, getBuild());
         }
 
-        public Result run(@Nonnull BuildListener listener) throws Exception {
+        @NonNull
+        @Override
+        public Result run(@NonNull BuildListener listener) throws Exception {
             final Node node = getCurrentNode();
-            
-            assert builtOn==null;
+
+            assert builtOn == null;
             builtOn = node.getNodeName();
             hudsonVersion = Jenkins.VERSION;
             this.listener = listener;
 
-            launcher = createLauncher(listener);
-            if (!Jenkins.getInstance().getNodes().isEmpty()) {
-                if (node instanceof Jenkins) {
-                    listener.getLogger().print(Messages.AbstractBuild_BuildingOnMaster());
-                } else {
-                    listener.getLogger().print(Messages.AbstractBuild_BuildingRemotely(ModelHyperlinkNote.encodeTo("/computer/" + builtOn, node.getDisplayName())));
-                    Set<LabelAtom> assignedLabels = new HashSet<LabelAtom>(node.getAssignedLabels());
-                    assignedLabels.remove(node.getSelfLabel());
-                    if (!assignedLabels.isEmpty()) {
-                        boolean first = true;
-                        for (LabelAtom label : assignedLabels) {
-                            if (first) {
-                                listener.getLogger().print(" (");
-                                first = false;
-                            } else {
-                                listener.getLogger().print(' ');
+            Result result = null;
+            buildEnvironments = new ArrayList<>();
+            // JENKINS-43889: try/finally to make sure Environments are eventually torn down. This used to be done in
+            // the doRun() implementation, but was not happening in case of early error (for instance in SCM checkout).
+            // Because some plugin (Maven) implement their own doRun() logic which still includes tearing down in some
+            // cases, we use a dummy Environment as a marker, to avoid doing it here if redundant.
+            TearDownCheckEnvironment tearDownMarker = new TearDownCheckEnvironment();
+            buildEnvironments.add(tearDownMarker);
+            try {
+                launcher = createLauncher(listener);
+                if (!Jenkins.get().getNodes().isEmpty()) {
+                    if (node instanceof Jenkins) {
+                        listener.getLogger().print(Messages.AbstractBuild_BuildingOnMaster());
+                    } else {
+                        listener.getLogger().print(Messages.AbstractBuild_BuildingRemotely(ModelHyperlinkNote.encodeTo("/computer/" + builtOn, node.getDisplayName())));
+                        Set<LabelAtom> assignedLabels = new HashSet<>(node.getAssignedLabels());
+                        assignedLabels.remove(node.getSelfLabel());
+                        if (!assignedLabels.isEmpty()) {
+                            boolean first = true;
+                            for (LabelAtom label : assignedLabels) {
+                                if (first) {
+                                    listener.getLogger().print(" (");
+                                    first = false;
+                                } else {
+                                    listener.getLogger().print(' ');
+                                }
+                                listener.getLogger().print(label.getName());
                             }
-                            listener.getLogger().print(label.getName());
+                            listener.getLogger().print(')');
                         }
-                        listener.getLogger().print(')');
                     }
+                } else {
+                    listener.getLogger().print(Messages.AbstractBuild_Building());
                 }
-            } else {
-                listener.getLogger().print(Messages.AbstractBuild_Building());
+
+                lease = decideWorkspace(node, Computer.currentComputer().getWorkspaceList());
+
+                workspace = lease.path.getRemote();
+                listener.getLogger().println(Messages.AbstractBuild_BuildingInWorkspace(workspace));
+
+                for (WorkspaceListener wl : WorkspaceListener.all()) {
+                    wl.beforeUse(AbstractBuild.this, lease.path, listener);
+                }
+
+                getProject().getScmCheckoutStrategy().preCheckout(AbstractBuild.this, launcher, this.listener);
+                getProject().getScmCheckoutStrategy().checkout(this);
+
+                if (!preBuild(listener, project.getProperties()))
+                    return Result.FAILURE;
+
+                result = doRun(listener);
+            } finally {
+                if (!tearDownMarker.tornDown) {
+                    // looks like environments are not torn down yet, do it now (might affect the build result)
+                    result = Result.combine(result, tearDownBuildEnvironments(listener));
+                }
             }
-            
-            lease = decideWorkspace(node, Computer.currentComputer().getWorkspaceList());
-
-            workspace = lease.path.getRemote();
-            listener.getLogger().println(Messages.AbstractBuild_BuildingInWorkspace(workspace));
-            node.getFileSystemProvisioner().prepareWorkspace(AbstractBuild.this,lease.path,listener);
-
-            for (WorkspaceListener wl : WorkspaceListener.all()) {
-                wl.beforeUse(AbstractBuild.this, lease.path, listener);
-            }
-
-            getProject().getScmCheckoutStrategy().preCheckout(AbstractBuild.this, launcher, this.listener);
-            getProject().getScmCheckoutStrategy().checkout(this);
-
-            if (!preBuild(listener,project.getProperties()))
-                return Result.FAILURE;
-
-            Result result = doRun(listener);
 
             if (node.getChannel() != null) {
                 // kill run-away processes that are left
@@ -512,9 +541,58 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
 
             // this is ugly, but for historical reason, if non-null value is returned
             // it should become the final result.
-            if (result==null)    result = getResult();
-            if (result==null)    result = Result.SUCCESS;
+            if (result == null)    result = getResult();
+            if (result == null)    result = Result.SUCCESS;
 
+            return result;
+        }
+
+        /**
+         * Tear down all build environments (in reverse order).
+         * <p>
+         * Returns a failure {@link Result} in case of failure of at least one {@code tearDown()} method (returning
+         * false, or throwing some exception), and {@code null} if everything went fine.
+         *
+         * @return a build result in case of failure/exception
+         * @throws InterruptedException
+         *      if thrown while tearing down an environment (would be the first caught one in case caught several)
+         */
+        private Result tearDownBuildEnvironments(@NonNull BuildListener listener) throws InterruptedException {
+            Result result = null;
+            InterruptedException firstInterruptedException = null;
+            // iterate in reverse order on the environments list
+            for (int i = buildEnvironments.size() - 1; i >= 0; i--) {
+                final Environment environment = buildEnvironments.get(i);
+                try {
+                    if (!environment.tearDown(AbstractBuild.this, listener)) {
+                        // by returning false, tearDown() can actually fail the build
+                        result = Result.combine(result, Result.FAILURE);
+                    }
+                } catch (InterruptedException e) {
+                    // We got interrupted while tearing down an environment.  We'll still try to tear down the
+                    // remaining ones, but then we'll re-throw the (first) caught InterruptedException, to let
+                    // the caller (ie., Run#execute(RunExecution)) deal with it properly.
+                    if (firstInterruptedException == null) {
+                        firstInterruptedException = e;
+                    } else {
+                        // log only InterruptedException we won't re-throw
+                        Functions.printStackTrace(e, listener.error("Interrupted during tear down: " + e.getMessage()));
+                    }
+                } catch (IOException | RuntimeException e) {
+                    // exceptions are only logged, to give a chance to all environments to tear down
+                    if (e instanceof IOException) {
+                        // similar to Run#handleFatalBuildProblem(BuildListener, Throwable)
+                        Util.displayIOException((IOException) e, listener);
+                    }
+                    Functions.printStackTrace(e, listener.error("Unable to tear down: " + e.getMessage()));
+                    // would UNSTABLE be more sensible? (see discussion in PR #4517)
+                    result = Result.combine(result, Result.FAILURE);
+                }
+            }
+            if (firstInterruptedException != null) {
+                // don't forget we've been interrupted
+                throw firstInterruptedException;
+            }
             return result;
         }
 
@@ -525,34 +603,31 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
          * @param listener
          *      Always non-null. Connected to the main build output.
          */
-        @Nonnull
-        protected Launcher createLauncher(@Nonnull BuildListener listener) throws IOException, InterruptedException {
+        @NonNull
+        protected Launcher createLauncher(@NonNull BuildListener listener) throws IOException, InterruptedException {
             final Node currentNode = getCurrentNode();
             Launcher l = currentNode.createLauncher(listener);
 
-            if (project instanceof BuildableItemWithBuildWrappers) {
-                BuildableItemWithBuildWrappers biwbw = (BuildableItemWithBuildWrappers) project;
+            if (project instanceof BuildableItemWithBuildWrappers biwbw) {
                 for (BuildWrapper bw : biwbw.getBuildWrappersList())
-                    l = bw.decorateLauncher(AbstractBuild.this,l,listener);
+                    l = bw.decorateLauncher(AbstractBuild.this, l, listener);
             }
 
-            buildEnvironments = new ArrayList<Environment>();
-
-            for (RunListener rl: RunListener.all()) {
+            for (RunListener rl : RunListener.all()) {
                 Environment environment = rl.setUpEnvironment(AbstractBuild.this, l, listener);
                 if (environment != null) {
                     buildEnvironments.add(environment);
                 }
             }
 
-            for (NodeProperty nodeProperty: Jenkins.getInstance().getGlobalNodeProperties()) {
+            for (NodeProperty nodeProperty : Jenkins.get().getGlobalNodeProperties()) {
                 Environment environment = nodeProperty.setUp(AbstractBuild.this, l, listener);
                 if (environment != null) {
                     buildEnvironments.add(environment);
                 }
             }
 
-            for (NodeProperty nodeProperty: currentNode.getNodeProperties()) {
+            for (NodeProperty nodeProperty : currentNode.getNodeProperties()) {
                 Environment environment = nodeProperty.setUp(AbstractBuild.this, l, listener);
                 if (environment != null) {
                     buildEnvironments.add(environment);
@@ -563,15 +638,15 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
         }
 
         public void defaultCheckout() throws IOException, InterruptedException {
-            AbstractBuild<?,?> build = AbstractBuild.this;
+            AbstractBuild<?, ?> build = AbstractBuild.this;
             AbstractProject<?, ?> project = build.getProject();
 
-            for (int retryCount=project.getScmCheckoutRetryCount(); ; retryCount--) {
+            for (int retryCount = project.getScmCheckoutRetryCount(); ; retryCount--) {
                 build.scm = NullChangeLogParser.INSTANCE;
 
                 try {
                     File changeLogFile = new File(build.getRootDir(), "changelog.xml");
-                    if (project.checkout(build, launcher,listener, changeLogFile)) {
+                    if (project.checkout(build, launcher, listener, changeLogFile)) {
                         // check out succeeded
                         SCM scm = project.getScm();
                         for (SCMListener l : SCMListener.all()) {
@@ -583,24 +658,24 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
                         }
 
                         build.scm = scm.createChangeLogParser();
-                        build.changeSet = new WeakReference<ChangeLogSet<? extends Entry>>(build.calcChangeSet());
+                        build.changeSet = new WeakReference<>(build.calcChangeSet());
 
                         for (SCMListener l : SCMListener.all())
                             try {
-                                l.onChangeLogParsed(build,listener,build.getChangeSet());
+                                l.onChangeLogParsed(build, listener, build.getChangeSet());
                             } catch (Exception e) {
-                                throw new IOException("Failed to parse changelog",e);
+                                throw new IOException("Failed to parse changelog", e);
                             }
 
                         // Get a chance to do something after checkout and changelog is done
-                        scm.postCheckout( build, launcher, build.getWorkspace(), listener );
+                        scm.postCheckout(build, launcher, build.getWorkspace(), listener);
 
                         return;
                     }
                 } catch (AbortException e) {
                     listener.error(e.getMessage());
-                } catch (InterruptedIOException e) {
-                    throw (InterruptedException)new InterruptedException().initCause(e);
+                } catch (ClosedByInterruptException | InterruptedIOException e) {
+                    throw (InterruptedException) new InterruptedException().initCause(e);
                 } catch (IOException e) {
                     // checkout error not yet reported
                     Functions.printStackTrace(e, listener.getLogger());
@@ -623,28 +698,30 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
          *      itself run successfully)
          *      Return a non-null value to abort the build right there with the specified result code.
          */
-        protected abstract Result doRun(BuildListener listener) throws Exception, RunnerAbortedException;
+        protected abstract Result doRun(BuildListener listener) throws Exception;
 
         /**
          * @see #post(BuildListener)
          */
         protected abstract void post2(BuildListener listener) throws Exception;
 
-        public final void post(BuildListener listener) throws Exception {
+        @Override
+        public final void post(@NonNull BuildListener listener) throws Exception {
             try {
                 post2(listener);
             } finally {
                 // update the culprit list
-                HashSet<String> r = new HashSet<String>();
+                SortedSet<String> r = new TreeSet<>();
                 for (User u : getCulprits())
                     r.add(u.getId());
-                culprits = ImmutableSortedSet.copyOf(r);
+                culprits = Collections.unmodifiableSet(r);
                 CheckPoint.CULPRITS_DETERMINED.report();
             }
         }
 
-        public void cleanUp(BuildListener listener) throws Exception {
-            if (lease!=null) {
+        @Override
+        public void cleanUp(@NonNull BuildListener listener) throws Exception {
+            if (lease != null) {
                 lease.release();
                 lease = null;
             }
@@ -657,12 +734,12 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
          *      Use {@link #performAllBuildSteps(BuildListener, Map, boolean)}
          */
        @Deprecated
-        protected final void performAllBuildStep(BuildListener listener, Map<?,? extends BuildStep> buildSteps, boolean phase) throws InterruptedException, IOException {
-            performAllBuildSteps(listener,buildSteps.values(),phase);
+        protected final void performAllBuildStep(BuildListener listener, Map<?, ? extends BuildStep> buildSteps, boolean phase) throws InterruptedException, IOException {
+            performAllBuildSteps(listener, buildSteps.values(), phase);
         }
 
-        protected final boolean performAllBuildSteps(BuildListener listener, Map<?,? extends BuildStep> buildSteps, boolean phase) throws InterruptedException, IOException {
-            return performAllBuildSteps(listener,buildSteps.values(),phase);
+        protected final boolean performAllBuildSteps(BuildListener listener, Map<?, ? extends BuildStep> buildSteps, boolean phase) throws InterruptedException, IOException {
+            return performAllBuildSteps(listener, buildSteps.values(), phase);
         }
 
         /**
@@ -671,7 +748,7 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
          */
         @Deprecated
         protected final void performAllBuildStep(BuildListener listener, Iterable<? extends BuildStep> buildSteps, boolean phase) throws InterruptedException, IOException {
-            performAllBuildSteps(listener,buildSteps,phase);
+            performAllBuildSteps(listener, buildSteps, phase);
         }
 
         /**
@@ -685,19 +762,16 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
         protected final boolean performAllBuildSteps(BuildListener listener, Iterable<? extends BuildStep> buildSteps, boolean phase) throws InterruptedException, IOException {
             boolean r = true;
             for (BuildStep bs : buildSteps) {
-                if ((bs instanceof Publisher && ((Publisher)bs).needsToRunAfterFinalized()) ^ phase)
+                if ((bs instanceof Publisher && ((Publisher) bs).needsToRunAfterFinalized()) ^ phase)
                     try {
-                        if (!perform(bs,listener)) {
+                        if (!perform(bs, listener)) {
                             LOGGER.log(Level.FINE, "{0} : {1} failed", new Object[] {AbstractBuild.this, bs});
                             r = false;
                             if (phase) {
                                 setResult(Result.FAILURE);
                             }
                         }
-                    } catch (Exception e) {
-                        reportError(bs, e, listener, phase);
-                        r = false;
-                    } catch (LinkageError e) {
+                    } catch (Exception | LinkageError e) {
                         reportError(bs, e, listener, phase);
                         r = false;
                     }
@@ -742,10 +816,7 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
             try {
 
                 canContinue = mon.perform(bs, AbstractBuild.this, launcher, listener);
-            } catch (RequestAbortedException ex) {
-                // Channel is closed, do not continue
-                reportBrokenChannel(listener);
-            } catch (ChannelClosedException ex) {
+            } catch (RequestAbortedException | ChannelClosedException ex) {
                 // Channel is closed, do not continue
                 reportBrokenChannel(listener);
             } catch (RuntimeException ex) {
@@ -785,17 +856,17 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
             }
         }
 
-        protected final boolean preBuild(BuildListener listener,Map<?,? extends BuildStep> steps) {
-            return preBuild(listener,steps.values());
+        protected final boolean preBuild(BuildListener listener, Map<?, ? extends BuildStep> steps) {
+            return preBuild(listener, steps.values());
         }
 
-        protected final boolean preBuild(BuildListener listener,Collection<? extends BuildStep> steps) {
-            return preBuild(listener,(Iterable<? extends BuildStep>)steps);
+        protected final boolean preBuild(BuildListener listener, Collection<? extends BuildStep> steps) {
+            return preBuild(listener, (Iterable<? extends BuildStep>) steps);
         }
 
-        protected final boolean preBuild(BuildListener listener,Iterable<? extends BuildStep> steps) {
+        protected final boolean preBuild(BuildListener listener, Iterable<? extends BuildStep> steps) {
             for (BuildStep bs : steps)
-                if (!bs.prebuild(AbstractBuild.this,listener)) {
+                if (!bs.prebuild(AbstractBuild.this, listener)) {
                     LOGGER.log(Level.FINE, "{0} : {1} failed", new Object[] {AbstractBuild.this, bs});
                     return false;
                 }
@@ -803,45 +874,60 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
         }
     }
 
-	/*
+    /**
+     * An {@link Environment} which does nothing, but change state when it gets torn down. Used in
+     * {@link AbstractBuildExecution#run(BuildListener)} to detect whether environments have yet to be torn down,
+     * or if it has been done already (in the {@link AbstractBuildExecution#doRun(BuildListener)} implementation).
+     */
+    private static class TearDownCheckEnvironment extends Environment {
+        private boolean tornDown = false;
+
+        @Override
+        public boolean tearDown(AbstractBuild build, BuildListener listener) throws IOException, InterruptedException {
+            this.tornDown = true;
+            return true;
+        }
+    }
+
+    /*
      * No need to lock the entire AbstractBuild on change set calculation
      */
     private transient Object changeSetLock = new Object();
-    
+
     /**
      * Gets the changes incorporated into this build.
      *
      * @return never null.
      */
     @Exported
-    @Nonnull public ChangeLogSet<? extends Entry> getChangeSet() {
+    @NonNull public ChangeLogSet<? extends ChangeLogSet.Entry> getChangeSet() {
         synchronized (changeSetLock) {
-            if (scm==null) {
-                scm = NullChangeLogParser.INSTANCE;                
+            if (scm == null) {
+                scm = NullChangeLogParser.INSTANCE;
             }
         }
 
-        ChangeLogSet<? extends Entry> cs = null;
-        if (changeSet!=null)
+        ChangeLogSet<? extends ChangeLogSet.Entry> cs = null;
+        if (changeSet != null)
             cs = changeSet.get();
 
-        if (cs==null)
+        if (cs == null)
             cs = calcChangeSet();
 
         // defensive check. if the calculation fails (such as through an exception),
         // set a dummy value so that it'll work the next time. the exception will
         // be still reported, giving the plugin developer an opportunity to fix it.
-        if (cs==null)
+        if (cs == null)
             cs = ChangeLogSet.createEmpty(this);
 
-        changeSet = new WeakReference<ChangeLogSet<? extends Entry>>(cs);
+        changeSet = new WeakReference<>(cs);
         return cs;
     }
 
     @Override
-    @Nonnull public List<ChangeLogSet<? extends ChangeLogSet.Entry>> getChangeSets() {
-        ChangeLogSet<? extends Entry> cs = getChangeSet();
-        return cs.isEmptySet() ? Collections.emptyList() : Collections.singletonList(cs);
+    @NonNull public List<ChangeLogSet<? extends ChangeLogSet.Entry>> getChangeSets() {
+        ChangeLogSet<? extends ChangeLogSet.Entry> cs = getChangeSet();
+        return cs.isEmptySet() ? Collections.emptyList() : List.of(cs);
     }
 
     /**
@@ -852,36 +938,40 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
         return changelogFile.exists();
     }
 
-    private ChangeLogSet<? extends Entry> calcChangeSet() {
+    private ChangeLogSet<? extends ChangeLogSet.Entry> calcChangeSet() {
         File changelogFile = new File(getRootDir(), "changelog.xml");
         if (!changelogFile.exists())
             return ChangeLogSet.createEmpty(this);
 
         try {
-            return scm.parse(this,changelogFile);
-        } catch (IOException e) {
-            LOGGER.log(WARNING, "Failed to parse "+changelogFile,e);
-        } catch (SAXException e) {
-            LOGGER.log(WARNING, "Failed to parse "+changelogFile,e);
+            return scm.parse(this, changelogFile);
+        } catch (IOException | SAXException e) {
+            LOGGER.log(WARNING, "Failed to parse " + changelogFile, e);
         }
         return ChangeLogSet.createEmpty(this);
     }
 
+    @NonNull
     @Override
-    public EnvVars getEnvironment(TaskListener log) throws IOException, InterruptedException {
+    public EnvVars getEnvironment(@NonNull TaskListener log) throws IOException, InterruptedException {
         EnvVars env = super.getEnvironment(log);
         FilePath ws = getWorkspace();
-        if (ws!=null)   // if this is done very early on in the build, workspace may not be decided yet. see HUDSON-3997
+        if (ws != null) { // if this is done very early on in the build, workspace may not be decided yet. see JENKINS-3997
             env.put("WORKSPACE", ws.getRemote());
+            FilePath tempDir = WorkspaceList.tempDir(ws);
+            if (tempDir != null) {
+                env.put("WORKSPACE_TMP", tempDir.getRemote()); // JENKINS-60634
+            }
+        }
 
-        project.getScm().buildEnvVars(this,env);
+        project.getScm().buildEnvVars(this, env);
 
-        if (buildEnvironments!=null)
+        if (buildEnvironments != null)
             for (Environment e : buildEnvironments)
                 e.buildEnvVars(env);
 
         for (EnvironmentContributingAction a : getActions(EnvironmentContributingAction.class))
-            a.buildEnvVars(this,env);
+            a.buildEnvVars(this, env);
 
         EnvVars.resolve(env);
 
@@ -890,24 +980,24 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
 
     /**
      * During the build, expose the environments contributed by {@link BuildWrapper}s and others.
-     * 
+     *
      * <p>
      * Since 1.444, executor thread that's doing the build can access mutable underlying list,
      * which allows the caller to add/remove environments. The recommended way of adding
      * environment is through {@link BuildWrapper}, but this might be handy for build steps
      * who wants to expose additional environment variables to the rest of the build.
-     * 
+     *
      * @return can be empty list, but never null. Immutable.
      * @since 1.437
      */
     public EnvironmentList getEnvironments() {
         Executor e = Executor.currentExecutor();
-        if (e!=null && e.getCurrentExecutable()==this) {
-            if (buildEnvironments==null)    buildEnvironments = new ArrayList<Environment>();
-            return new EnvironmentList(buildEnvironments); 
+        if (e != null && e.getCurrentExecutable() == this) {
+            if (buildEnvironments == null)    buildEnvironments = new ArrayList<>();
+            return new EnvironmentList(buildEnvironments);
         }
-        
-        return new EnvironmentList(buildEnvironments==null ? Collections.<Environment>emptyList() : ImmutableList.copyOf(buildEnvironments));
+
+        return new EnvironmentList(buildEnvironments == null ? Collections.emptyList() : List.copyOf(buildEnvironments));
     }
 
     public Calendar due() {
@@ -918,12 +1008,12 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
      * {@inheritDoc}
      * The action may have a {@code summary.jelly} view containing a {@code <t:summary>} or other {@code <tr>}.
      */
-    @Override public void addAction(Action a) {
+    @Override public void addAction(@NonNull Action a) {
         super.addAction(a);
     }
-      
+
     @SuppressWarnings("deprecation")
-    public List<Action> getPersistentActions(){
+    public List<Action> getPersistentActions() {
         return super.getActions();
     }
 
@@ -936,7 +1026,7 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
      * @since 1.378
      */
     public Set<String> getSensitiveBuildVariables() {
-        Set<String> s = new HashSet<String>();
+        Set<String> s = new HashSet<>();
 
         ParametersAction parameters = getAction(ParametersAction.class);
         if (parameters != null) {
@@ -953,7 +1043,7 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
                 bw.makeSensitiveBuildVariables(this, s);
             }
         }
-        
+
         return s;
     }
 
@@ -972,26 +1062,26 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
      * @return
      *      The returned map is mutable so that subtypes can put more values.
      */
-    public Map<String,String> getBuildVariables() {
-        Map<String,String> r = new HashMap<String, String>();
+    public Map<String, String> getBuildVariables() {
+        Map<String, String> r = new HashMap<>();
 
         ParametersAction parameters = getAction(ParametersAction.class);
-        if (parameters!=null) {
+        if (parameters != null) {
             // this is a rather round about way of doing this...
             for (ParameterValue p : parameters) {
                 String v = p.createVariableResolver(this).resolve(p.getName());
-                if (v!=null) r.put(p.getName(),v);
+                if (v != null) r.put(p.getName(), v);
             }
         }
 
         // allow the BuildWrappers to contribute additional build variables
         if (project instanceof BuildableItemWithBuildWrappers) {
             for (BuildWrapper bw : ((BuildableItemWithBuildWrappers) project).getBuildWrappersList())
-                bw.makeBuildVariables(this,r);
+                bw.makeBuildVariables(this, r);
         }
 
         for (BuildVariableContributor bvc : BuildVariableContributor.all())
-            bvc.buildVariablesFor(this,r);
+            bvc.buildVariablesFor(this, r);
 
         return r;
     }
@@ -1000,7 +1090,7 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
      * Creates {@link VariableResolver} backed by {@link #getBuildVariables()}.
      */
     public final VariableResolver<String> getBuildVariableResolver() {
-        return new VariableResolver.ByMap<String>(getBuildVariables());
+        return new VariableResolver.ByMap<>(getBuildVariables());
     }
 
     /**
@@ -1009,7 +1099,7 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
     @Deprecated
     public Action getTestResultAction() {
         try {
-            return getAction(Jenkins.getInstance().getPluginManager().uberClassLoader.loadClass("hudson.tasks.test.AbstractTestResultAction").asSubclass(Action.class));
+            return getAction(Jenkins.get().getPluginManager().uberClassLoader.loadClass("hudson.tasks.test.AbstractTestResultAction").asSubclass(Action.class));
         } catch (ClassNotFoundException x) {
             return null;
         }
@@ -1021,7 +1111,7 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
     @Deprecated
     public Action getAggregatedTestResultAction() {
         try {
-            return getAction(Jenkins.getInstance().getPluginManager().uberClassLoader.loadClass("hudson.tasks.test.AggregatedTestResultAction").asSubclass(Action.class));
+            return getAction(Jenkins.get().getPluginManager().uberClassLoader.loadClass("hudson.tasks.test.AggregatedTestResultAction").asSubclass(Action.class));
         } catch (ClassNotFoundException x) {
             return null;
         }
@@ -1030,6 +1120,7 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
     /**
      * Invoked by {@link Executor} to performs a build.
      */
+    @Override
     public abstract void run();
 
 //
@@ -1043,22 +1134,22 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
         // if any of the downstream project is configured with 'keep dependency component',
         // we need to keep this log
         OUTER:
-        for (AbstractProject<?,?> p : getParent().getDownstreamProjects()) {
+        for (AbstractProject<?, ?> p : getParent().getDownstreamProjects()) {
             if (!p.isKeepDependencies()) continue;
 
-            AbstractBuild<?,?> fb = p.getFirstBuild();
-            if (fb==null)        continue; // no active record
+            AbstractBuild<?, ?> fb = p.getFirstBuild();
+            if (fb == null)        continue; // no active record
 
             // is there any active build that depends on us?
             for (int i : getDownstreamRelationship(p).listNumbersReverse()) {
                 // TODO: this is essentially a "find intersection between two sparse sequences"
                 // and we should be able to do much better.
 
-                if (i<fb.getNumber())
+                if (i < fb.getNumber())
                     continue OUTER; // all the other records are younger than the first record, so pointless to search.
 
-                AbstractBuild<?,?> b = p.getBuildByNumber(i);
-                if (b!=null)
+                AbstractBuild<?, ?> b = p.getBuildByNumber(i);
+                if (b != null)
                     return Messages.AbstractBuild_KeptBecause(p.hasPermission(Item.READ) ? b.toString() : "?");
             }
         }
@@ -1078,7 +1169,7 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
         RangeSet rs = new RangeSet();
 
         FingerprintAction f = getAction(FingerprintAction.class);
-        if (f==null)     return rs;
+        if (f == null)     return rs;
 
         // look for fingerprints that point to this build as the source, and merge them all
         for (Fingerprint e : f.getFingerprints().values()) {
@@ -1089,7 +1180,7 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
                 rs.add(e.getRangeSet(that));
             } else {
                 BuildPtr o = e.getOriginal();
-                if (o!=null && o.is(this))
+                if (o != null && o.is(this))
                     rs.add(e.getRangeSet(that));
             }
         }
@@ -1102,13 +1193,15 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
      * the actual build objects, in ascending order.
      * @since 1.150
      */
-    public Iterable<AbstractBuild<?,?>> getDownstreamBuilds(final AbstractProject<?,?> that) {
+    public Iterable<AbstractBuild<?, ?>> getDownstreamBuilds(final AbstractProject<?, ?> that) {
         final Iterable<Integer> nums = getDownstreamRelationship(that).listNumbers();
 
-        return new Iterable<AbstractBuild<?, ?>>() {
+        return new Iterable<>() {
+            @Override
             public Iterator<AbstractBuild<?, ?>> iterator() {
                 return Iterators.removeNull(
-                    new AdaptedIterator<Integer,AbstractBuild<?,?>>(nums) {
+                    new AdaptedIterator<>(nums) {
+                        @Override
                         protected AbstractBuild<?, ?> adapt(Integer item) {
                             return that.getBuildByNumber(item);
                         }
@@ -1127,7 +1220,7 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
      */
     public int getUpstreamRelationship(AbstractProject that) {
         FingerprintAction f = getAction(FingerprintAction.class);
-        if (f==null)     return -1;
+        if (f == null)     return -1;
 
         int n = -1;
 
@@ -1142,8 +1235,8 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
                 }
             } else {
                 BuildPtr o = e.getOriginal();
-                if (o!=null && o.belongsTo(that))
-                    n = Math.max(n,o.getNumber());
+                if (o != null && o.belongsTo(that))
+                    n = Math.max(n, o.getNumber());
             }
         }
 
@@ -1158,9 +1251,9 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
      *      null if no such upstream build was found, or it was found but the
      *      build record is already lost.
      */
-    public AbstractBuild<?,?> getUpstreamRelationshipBuild(AbstractProject<?,?> that) {
+    public AbstractBuild<?, ?> getUpstreamRelationshipBuild(AbstractProject<?, ?> that) {
         int n = getUpstreamRelationship(that);
-        if (n==-1)   return null;
+        if (n == -1)   return null;
         return that.getBuildByNumber(n);
     }
 
@@ -1172,11 +1265,11 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
      *      For each project with fingerprinting enabled, returns the range
      *      of builds (which can be empty if no build uses the artifact from this build or downstream is not {@link AbstractProject#isFingerprintConfigured}.)
      */
-    public Map<AbstractProject,RangeSet> getDownstreamBuilds() {
-        Map<AbstractProject,RangeSet> r = new HashMap<AbstractProject,RangeSet>();
+    public Map<AbstractProject, RangeSet> getDownstreamBuilds() {
+        Map<AbstractProject, RangeSet> r = new HashMap<>();
         for (AbstractProject p : getParent().getDownstreamProjects()) {
             if (p.isFingerprintConfigured())
-                r.put(p,getDownstreamRelationship(p));
+                r.put(p, getDownstreamRelationship(p));
         }
         return r;
     }
@@ -1187,7 +1280,7 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
      * @return empty if there is no {@link FingerprintAction} (even if there is an {@link Cause.UpstreamCause})
      * @see #getTransitiveUpstreamBuilds()
      */
-    public Map<AbstractProject,Integer> getUpstreamBuilds() {
+    public Map<AbstractProject, Integer> getUpstreamBuilds() {
         return _getUpstreamBuilds(getParent().getUpstreamProjects());
     }
 
@@ -1195,16 +1288,16 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
      * Works like {@link #getUpstreamBuilds()}  but also includes all the transitive
      * dependencies as well.
      */
-    public Map<AbstractProject,Integer> getTransitiveUpstreamBuilds() {
+    public Map<AbstractProject, Integer> getTransitiveUpstreamBuilds() {
         return _getUpstreamBuilds(getParent().getTransitiveUpstreamProjects());
     }
 
     private Map<AbstractProject, Integer> _getUpstreamBuilds(Collection<AbstractProject> projects) {
-        Map<AbstractProject,Integer> r = new HashMap<AbstractProject,Integer>();
+        Map<AbstractProject, Integer> r = new HashMap<>();
         for (AbstractProject p : projects) {
             int n = getUpstreamRelationship(p);
-            if (n>=0)
-                r.put(p,n);
+            if (n >= 0)
+                r.put(p, n);
         }
         return r;
     }
@@ -1213,23 +1306,23 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
      * Gets the changes in the dependency between the given build and this build.
      * @return empty if there is no {@link FingerprintAction}
      */
-    public Map<AbstractProject,DependencyChange> getDependencyChanges(AbstractBuild from) {
-        if (from==null)             return Collections.emptyMap(); // make it easy to call this from views
+    public Map<AbstractProject, DependencyChange> getDependencyChanges(AbstractBuild from) {
+        if (from == null)             return Collections.emptyMap(); // make it easy to call this from views
         FingerprintAction n = this.getAction(FingerprintAction.class);
         FingerprintAction o = from.getAction(FingerprintAction.class);
-        if (n==null || o==null)     return Collections.emptyMap();
+        if (n == null || o == null)     return Collections.emptyMap();
 
-        Map<AbstractProject,Integer> ndep = n.getDependencies(true);
-        Map<AbstractProject,Integer> odep = o.getDependencies(true);
+        Map<AbstractProject, Integer> ndep = n.getDependencies(true);
+        Map<AbstractProject, Integer> odep = o.getDependencies(true);
 
-        Map<AbstractProject,DependencyChange> r = new HashMap<AbstractProject,DependencyChange>();
+        Map<AbstractProject, DependencyChange> r = new HashMap<>();
 
-        for (Map.Entry<AbstractProject,Integer> entry : odep.entrySet()) {
+        for (Map.Entry<AbstractProject, Integer> entry : odep.entrySet()) {
             AbstractProject p = entry.getKey();
             Integer oldNumber = entry.getValue();
             Integer newNumber = ndep.get(p);
-            if (newNumber!=null && oldNumber.compareTo(newNumber)<0) {
-                r.put(p,new DependencyChange(p,oldNumber,newNumber));
+            if (newNumber != null && oldNumber.compareTo(newNumber) < 0) {
+                r.put(p, new DependencyChange(p, oldNumber, newNumber));
             }
         }
 
@@ -1259,7 +1352,7 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
 
         public final AbstractBuild to;
 
-        public DependencyChange(AbstractProject<?,?> project, int fromId, int toId) {
+        public DependencyChange(AbstractProject<?, ?> project, int fromId, int toId) {
             this.project = project;
             this.fromId = fromId;
             this.toId = toId;
@@ -1274,13 +1367,13 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
          * of IDs, but due to log rotations, some builds may be already unavailable.
          */
         public List<AbstractBuild> getBuilds() {
-            List<AbstractBuild> r = new ArrayList<AbstractBuild>();
+            List<AbstractBuild> r = new ArrayList<>();
 
-            AbstractBuild<?,?> b = project.getNearestBuild(fromId);
-            if (b!=null && b.getNumber()==fromId)
+            AbstractBuild<?, ?> b = project.getNearestBuild(fromId);
+            if (b != null && b.getNumber() == fromId)
                 b = b.getNextBuild(); // fromId exclusive
 
-            while (b!=null && b.getNumber()<=toId) {
+            while (b != null && b.getNumber() <= toId) {
                 r.add(b);
                 b = b.getNextBuild();
             }
@@ -1299,8 +1392,12 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
      */
     @Deprecated
     @RequirePOST // #doStop() should be preferred, but better to be safe
-    public void doStop(StaplerRequest req, StaplerResponse rsp) throws IOException, ServletException {
-        doStop().generateResponse(req,rsp,this);
+    public void doStop(StaplerRequest req, StaplerResponse rsp) throws IOException, javax.servlet.ServletException {
+        try {
+            doStop().generateResponse(StaplerRequest.toStaplerRequest2(req), StaplerResponse.toStaplerResponse2(rsp), this);
+        } catch (ServletException e) {
+            throw ServletExceptionWrapper.fromJakartaServletException(e);
+        }
     }
 
     /**
@@ -1308,15 +1405,15 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
      *
      * If we use this/executor/stop URL, it causes 404 if the build is already killed,
      * as {@link #getExecutor()} returns null.
-     * 
+     *
      * @since 1.489
      */
     @RequirePOST
     public synchronized HttpResponse doStop() throws IOException, ServletException {
         Executor e = getExecutor();
-        if (e==null)
+        if (e == null)
             e = getOneOffExecutor();
-        if (e!=null)
+        if (e != null)
             return e.doStop();
         else
             // nothing is building
@@ -1325,5 +1422,3 @@ public abstract class AbstractBuild<P extends AbstractProject<P,R>,R extends Abs
 
     private static final Logger LOGGER = Logger.getLogger(AbstractBuild.class.getName());
 }
-
-
