@@ -22,66 +22,69 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.model;
+
+import static hudson.init.InitMilestone.JOB_CONFIG_ADAPTED;
+import static hudson.model.Item.CANCEL;
+import static hudson.util.Iterators.reverse;
 
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.cache.Cache;
 import com.google.common.cache.CacheBuilder;
 import com.infradna.tool.bridge_method_injector.WithBridgeMethods;
+import com.thoughtworks.xstream.XStream;
+import com.thoughtworks.xstream.converters.basic.AbstractSingleValueConverter;
+import edu.umd.cs.findbugs.annotations.CheckForNull;
+import edu.umd.cs.findbugs.annotations.NonNull;
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import hudson.BulkChange;
 import hudson.Extension;
 import hudson.ExtensionList;
 import hudson.ExtensionPoint;
 import hudson.Util;
 import hudson.XmlFile;
-import hudson.init.Initializer;
-import static hudson.init.InitMilestone.JOB_LOADED;
-import static hudson.util.Iterators.reverse;
-
 import hudson.cli.declarative.CLIResolver;
+import hudson.init.Initializer;
+import hudson.model.Node.Mode;
 import hudson.model.labels.LabelAssignmentAction;
-import hudson.model.queue.AbstractQueueTask;
+import hudson.model.listeners.SaveableListener;
+import hudson.model.queue.CauseOfBlockage;
+import hudson.model.queue.CauseOfBlockage.BecauseLabelIsBusy;
+import hudson.model.queue.CauseOfBlockage.BecauseLabelIsOffline;
+import hudson.model.queue.CauseOfBlockage.BecauseNodeIsBusy;
+import hudson.model.queue.CauseOfBlockage.BecauseNodeIsOffline;
 import hudson.model.queue.Executables;
+import hudson.model.queue.FoldableAction;
+import hudson.model.queue.FutureImpl;
+import hudson.model.queue.MappingWorksheet;
+import hudson.model.queue.MappingWorksheet.Mapping;
 import hudson.model.queue.QueueListener;
+import hudson.model.queue.QueueSorter;
+import hudson.model.queue.QueueTaskDispatcher;
 import hudson.model.queue.QueueTaskFuture;
 import hudson.model.queue.ScheduleResult;
 import hudson.model.queue.ScheduleResult.Created;
 import hudson.model.queue.SubTask;
-import hudson.model.queue.FutureImpl;
-import hudson.model.queue.MappingWorksheet;
-import hudson.model.queue.MappingWorksheet.Mapping;
-import hudson.model.queue.QueueSorter;
-import hudson.model.queue.QueueTaskDispatcher;
 import hudson.model.queue.Tasks;
 import hudson.model.queue.WorkUnit;
-import hudson.model.Node.Mode;
-import hudson.model.listeners.SaveableListener;
-import hudson.model.queue.CauseOfBlockage;
-import hudson.model.queue.FoldableAction;
-import hudson.model.queue.CauseOfBlockage.BecauseLabelIsBusy;
-import hudson.model.queue.CauseOfBlockage.BecauseNodeIsOffline;
-import hudson.model.queue.CauseOfBlockage.BecauseLabelIsOffline;
-import hudson.model.queue.CauseOfBlockage.BecauseNodeIsBusy;
 import hudson.model.queue.WorkUnitContext;
 import hudson.security.ACL;
 import hudson.security.AccessControlled;
-import java.nio.file.Files;
-
-import hudson.util.Futures;
-import jenkins.security.QueueItemAuthenticatorProvider;
-import jenkins.util.SystemProperties;
-import jenkins.util.Timer;
+import hudson.security.Permission;
 import hudson.triggers.SafeTimerTask;
-import java.util.concurrent.TimeUnit;
-import hudson.util.XStream2;
 import hudson.util.ConsistentHash;
-import hudson.util.ConsistentHash.Hash;
-
-import java.io.BufferedReader;
+import hudson.util.Futures;
+import hudson.util.XStream2;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServletResponse;
 import java.io.File;
 import java.io.IOException;
 import java.lang.ref.WeakReference;
-import java.nio.charset.Charset;
+import java.nio.channels.ClosedByInterruptException;
+import java.nio.file.Files;
+import java.nio.file.InvalidPathException;
+import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Calendar;
@@ -95,45 +98,45 @@ import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.NoSuchElementException;
+import java.util.Objects;
 import java.util.Set;
 import java.util.TreeSet;
 import java.util.concurrent.Callable;
 import java.util.concurrent.Future;
-import java.util.concurrent.atomic.AtomicLong;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.locks.Condition;
 import java.util.concurrent.locks.ReentrantLock;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-
-import javax.annotation.Nonnull;
-import javax.annotation.concurrent.GuardedBy;
-import javax.servlet.ServletException;
-
+import java.util.stream.Collectors;
+import jenkins.console.WithConsoleUrl;
 import jenkins.model.Jenkins;
+import jenkins.model.queue.AsynchronousExecution;
+import jenkins.model.queue.CompositeCauseOfBlockage;
+import jenkins.model.queue.QueueIdStrategy;
+import jenkins.model.queue.QueueItem;
 import jenkins.security.QueueItemAuthenticator;
+import jenkins.security.QueueItemAuthenticatorProvider;
+import jenkins.security.stapler.StaplerAccessibleType;
 import jenkins.util.AtmostOneTaskExecutor;
-import org.acegisecurity.AccessDeniedException;
-import org.acegisecurity.Authentication;
-import org.jenkinsci.bytecode.AdaptField;
+import jenkins.util.Listeners;
+import jenkins.util.SystemProperties;
+import jenkins.util.Timer;
+import net.jcip.annotations.GuardedBy;
 import org.jenkinsci.remoting.RoleChecker;
+import org.kohsuke.accmod.Restricted;
+import org.kohsuke.accmod.restrictions.Beta;
+import org.kohsuke.accmod.restrictions.DoNotUse;
 import org.kohsuke.accmod.restrictions.NoExternalUse;
 import org.kohsuke.stapler.HttpResponse;
 import org.kohsuke.stapler.HttpResponses;
+import org.kohsuke.stapler.QueryParameter;
+import org.kohsuke.stapler.StaplerRequest2;
 import org.kohsuke.stapler.export.Exported;
 import org.kohsuke.stapler.export.ExportedBean;
-
-import org.kohsuke.accmod.Restricted;
-import org.kohsuke.accmod.restrictions.DoNotUse;
-
-import com.thoughtworks.xstream.XStream;
-import com.thoughtworks.xstream.converters.basic.AbstractSingleValueConverter;
-import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
-import javax.annotation.CheckForNull;
-import javax.annotation.Nonnegative;
-import jenkins.model.queue.AsynchronousExecution;
-import jenkins.model.queue.CompositeCauseOfBlockage;
-import org.kohsuke.stapler.QueryParameter;
 import org.kohsuke.stapler.interceptor.RequirePOST;
+import org.springframework.security.access.AccessDeniedException;
+import org.springframework.security.core.Authentication;
 
 /**
  * Build queue.
@@ -183,7 +186,7 @@ public class Queue extends ResourceController implements Saveable {
      * This consists of {@link Item}s that cannot be run yet
      * because its time has not yet come.
      */
-    private final Set<WaitingItem> waitingList = new TreeSet<WaitingItem>();
+    private final Set<WaitingItem> waitingList = new TreeSet<>();
 
     /**
      * {@link Task}s that can be built immediately
@@ -192,20 +195,20 @@ public class Queue extends ResourceController implements Saveable {
      * blocked via {@link QueueTaskDispatcher#canRun(Item)},
      * or otherwise blocked by {@link Task#isBuildBlocked()}.
      */
-    private final ItemList<BlockedItem> blockedProjects = new ItemList<BlockedItem>();
+    private final ItemList<BlockedItem> blockedProjects = new ItemList<>();
 
     /**
      * {@link Task}s that can be built immediately
      * that are waiting for available {@link Executor}.
      * This list is sorted in such a way that earlier items are built earlier.
      */
-    private final ItemList<BuildableItem> buildables = new ItemList<BuildableItem>();
+    private final ItemList<BuildableItem> buildables = new ItemList<>();
 
     /**
      * {@link Task}s that are being handed over to the executor, but execution
      * has not started yet.
      */
-    private final ItemList<BuildableItem> pendings = new ItemList<BuildableItem>();
+    private final ItemList<BuildableItem> pendings = new ItemList<>();
 
     private transient volatile Snapshot snapshot = new Snapshot(waitingList, blockedProjects, buildables, pendings);
 
@@ -214,7 +217,7 @@ public class Queue extends ResourceController implements Saveable {
      *
      * This map is forgetful, since we can't remember everything that executed in the past.
      */
-    private final Cache<Long,LeftItem> leftItems = CacheBuilder.newBuilder().expireAfterWrite(5*60, TimeUnit.SECONDS).build();
+    private final Cache<Long, LeftItem> leftItems = CacheBuilder.newBuilder().expireAfterWrite(5 * 60, TimeUnit.SECONDS).build();
 
     /**
      * Data structure created for each idle {@link Executor}.
@@ -274,7 +277,14 @@ public class Queue extends ResourceController implements Saveable {
                 return reason;
             }
             for (QueueTaskDispatcher d : QueueTaskDispatcher.all()) {
-                reason = d.canTake(node, item);
+                try {
+                    reason = d.canTake(node, item);
+                } catch (Throwable t) {
+                    // We cannot guarantee the task can be taken by the node because something wrong happened
+                    LOGGER.log(Level.WARNING, t, () -> String.format("Exception evaluating if the node '%s' can take the task '%s'", node.getNodeName(), item.task.getName()));
+                    reason = CauseOfBlockage.fromMessage(Messages._Queue_ExceptionCanTake());
+                }
+
                 if (reason != null) {
                     return reason;
                 }
@@ -295,6 +305,7 @@ public class Queue extends ResourceController implements Saveable {
         /**
          * Is this executor ready to accept some tasks?
          */
+        @Override
         public boolean isAvailable() {
             return workUnit == null && !executor.getOwner().isOffline() && executor.getOwner().isAcceptingTasks();
         }
@@ -310,15 +321,15 @@ public class Queue extends ResourceController implements Saveable {
 
         @Override
         public String toString() {
-            return String.format("JobOffer[%s #%d]",executor.getOwner().getName(), executor.getNumber());
+            return String.format("JobOffer[%s #%d]", executor.getOwner().getName(), executor.getNumber());
         }
     }
 
-    private volatile transient LoadBalancer loadBalancer;
+    private transient volatile LoadBalancer loadBalancer;
 
-    private volatile transient QueueSorter sorter;
+    private transient volatile QueueSorter sorter;
 
-    private transient final AtmostOneTaskExecutor<Void> maintainerThread = new AtmostOneTaskExecutor<Void>(new Callable<Void>() {
+    private final transient AtmostOneTaskExecutor<Void> maintainerThread = new AtmostOneTaskExecutor<>(new Callable<>() {
         @Override
         public Void call() throws Exception {
             maintain();
@@ -331,11 +342,11 @@ public class Queue extends ResourceController implements Saveable {
         }
     });
 
-    private transient final ReentrantLock lock = new ReentrantLock();
+    private final transient ReentrantLock lock = new ReentrantLock();
 
-    private transient final Condition condition = lock.newCondition();
+    private final transient Condition condition = lock.newCondition();
 
-    public Queue(@Nonnull LoadBalancer loadBalancer) {
+    public Queue(@NonNull LoadBalancer loadBalancer) {
         this.loadBalancer =  loadBalancer.sanitize();
         // if all the executors are busy doing something, then the queue won't be maintained in
         // timely fashion, so use another thread to make sure it happens.
@@ -346,8 +357,7 @@ public class Queue extends ResourceController implements Saveable {
         return loadBalancer;
     }
 
-    public void setLoadBalancer(@Nonnull LoadBalancer loadBalancer) {
-        if(loadBalancer==null)  throw new IllegalArgumentException();
+    public void setLoadBalancer(@NonNull LoadBalancer loadBalancer) {
         this.loadBalancer = loadBalancer.sanitize();
     }
 
@@ -362,9 +372,20 @@ public class Queue extends ResourceController implements Saveable {
     /**
      * Simple queue state persistence object.
      */
-    static class State {
-        public long counter;
-        public List<Item> items = new ArrayList<Item>();
+    @Restricted(Beta.class)
+    public static final class State {
+        public /* almost final */ List<Item> items = new ArrayList<>();
+        public /* almost final */ Map<String, Object> properties = new HashMap<>();
+
+        private Object readResolve() {
+            if (items == null) {
+                items = new ArrayList<>();
+            }
+            if (properties == null) {
+                properties = new HashMap<>();
+            }
+            return this;
+        }
     }
 
     /**
@@ -378,76 +399,57 @@ public class Queue extends ResourceController implements Saveable {
             blockedProjects.clear();
             buildables.clear();
             pendings.clear();
-            // first try the old format
-            File queueFile = getQueueFile();
-            if (queueFile.exists()) {
-                try (BufferedReader in = Files.newBufferedReader(Util.fileToPath(queueFile), Charset.defaultCharset())) {
-                    String line;
-                    while ((line = in.readLine()) != null) {
-                        AbstractProject j = Jenkins.getInstance().getItemByFullName(line, AbstractProject.class);
-                        if (j != null)
-                            j.scheduleBuild();
-                    }
+
+            File queueFile = getXMLQueueFile();
+            if (Files.exists(queueFile.toPath())) {
+                Object unmarshaledObj = new XmlFile(XSTREAM, queueFile).read();
+                List items;
+
+                State state;
+                if (unmarshaledObj instanceof State) {
+                    state = (State) unmarshaledObj;
+                    items = state.items;
+                } else {
+                    // backward compatibility - it's an old List queue.xml
+                    items = (List) unmarshaledObj;
+                    state = new State();
+                    state.items.addAll(items);
                 }
-                // discard the queue file now that we are done
-                queueFile.delete();
-            } else {
-                queueFile = getXMLQueueFile();
-                if (queueFile.exists()) {
-                    Object unmarshaledObj = new XmlFile(XSTREAM, queueFile).read();
-                    List items;
+                QueueIdStrategy.get().load(state);
 
-                    if (unmarshaledObj instanceof State) {
-                        State state = (State) unmarshaledObj;
-                        items = state.items;
-                        WaitingItem.COUNTER.set(state.counter);
-                    } else {
-                        // backward compatibility - it's an old List queue.xml
-                        items = (List) unmarshaledObj;
-                        long maxId = 0;
-                        for (Object o : items) {
-                            if (o instanceof Item) {
-                                maxId = Math.max(maxId, ((Item)o).id);
-                            }
+
+                for (Object o : items) {
+                    if (o instanceof Task) {
+                        // backward compatibility
+                        schedule((Task) o, 0);
+                    } else if (o instanceof Item) {
+                        Item item = (Item) o;
+
+                        if (item.task == null) {
+                            continue;   // botched persistence. throw this one away
                         }
-                        WaitingItem.COUNTER.set(maxId);
-                    }
 
-                    for (Object o : items) {
-                        if (o instanceof Task) {
-                            // backward compatibility
-                            schedule((Task)o, 0);
-                        } else if (o instanceof Item) {
-                            Item item = (Item)o;
-
-                            if (item.task == null) {
-                                continue;   // botched persistence. throw this one away
-                            }
-
-                            if (item instanceof WaitingItem) {
-                                item.enter(this);
-                            } else if (item instanceof BlockedItem) {
-                                item.enter(this);
-                            } else if (item instanceof BuildableItem) {
-                                item.enter(this);
-                            } else {
-                                throw new IllegalStateException("Unknown item type! " + item);
-                            }
+                        if (item instanceof WaitingItem) {
+                            item.enter(this);
+                        } else if (item instanceof BlockedItem) {
+                            item.enter(this);
+                        } else if (item instanceof BuildableItem) {
+                            item.enter(this);
+                        } else {
+                            throw new IllegalStateException("Unknown item type! " + item);
                         }
                     }
-
-                    // I just had an incident where all the executors are dead at AbstractProject._getRuns()
-                    // because runs is null. Debugger revealed that this is caused by a MatrixConfiguration
-                    // object that doesn't appear to be de-serialized properly.
-                    // I don't know how this problem happened, but to diagnose this problem better
-                    // when it happens again, save the old queue file for introspection.
-                    File bk = new File(queueFile.getPath() + ".bak");
-                    bk.delete();
-                    queueFile.renameTo(bk);
-                    queueFile.delete();
                 }
+
+                // I just had an incident where all the executors are dead at AbstractProject._getRuns()
+                // because runs is null. Debugger revealed that this is caused by a MatrixConfiguration
+                // object that doesn't appear to be de-serialized properly.
+                // I don't know how this problem happened, but to diagnose this problem better
+                // when it happens again, save the old queue file for introspection.
+                File bk = new File(queueFile.getPath() + ".bak");
+                Files.move(queueFile.toPath(), bk.toPath(), StandardCopyOption.REPLACE_EXISTING);
             }
-        } catch (IOException e) {
+        } catch (IOException | InvalidPathException e) {
             LOGGER.log(Level.WARNING, "Failed to load the queue file " + getXMLQueueFile(), e);
         } finally { updateSnapshot(); } } finally {
             lock.unlock();
@@ -457,8 +459,9 @@ public class Queue extends ResourceController implements Saveable {
     /**
      * Persists the queue contents to the disk.
      */
+    @Override
     public void save() {
-        if(BulkChange.contains(this))  return;
+        if (BulkChange.contains(this))  return;
         if (Jenkins.getInstanceOrNull() == null) {
             return;
         }
@@ -468,18 +471,17 @@ public class Queue extends ResourceController implements Saveable {
         try {
             // write out the queue state we want to save
             State state = new State();
-            state.counter = WaitingItem.COUNTER.longValue();
-
+            QueueIdStrategy.get().persist(state);
             // write out the tasks on the queue
-            for (Item item: getItems()) {
-                if(item.task instanceof TransientTask)  continue;
+            for (Item item : getItems()) {
+                if (item.task instanceof TransientTask)  continue;
                 state.items.add(item);
             }
 
             try {
                 queueFile.write(state);
             } catch (IOException e) {
-                LOGGER.log(Level.WARNING, "Failed to write out the queue file " + getXMLQueueFile(), e);
+                LOGGER.log(e instanceof ClosedByInterruptException ? Level.FINE : Level.WARNING, "Failed to write out the queue file " + getXMLQueueFile(), e);
             }
         } finally {
             lock.unlock();
@@ -491,10 +493,10 @@ public class Queue extends ResourceController implements Saveable {
      * Wipes out all the items currently in the queue, as if all of them are cancelled at once.
      */
     public void clear() {
-        Jenkins.getInstance().checkPermission(Jenkins.ADMINISTER);
+        Jenkins.get().checkPermission(Jenkins.ADMINISTER);
         lock.lock();
         try { try {
-            for (WaitingItem i : new ArrayList<WaitingItem>(
+            for (WaitingItem i : new ArrayList<>(
                     waitingList))   // copy the list as we'll modify it in the loop
                 i.cancel(this);
             blockedProjects.cancelAll();
@@ -506,11 +508,11 @@ public class Queue extends ResourceController implements Saveable {
         scheduleMaintenance();
     }
 
-    private File getQueueFile() {
-        return new File(Jenkins.get().getRootDir(), "queue.txt");
-    }
-
     /*package*/ File getXMLQueueFile() {
+        String id = SystemProperties.getString(Queue.class.getName() + ".id");
+        if (id != null) {
+            return new File(Jenkins.get().getRootDir(), "queue/" + id + ".xml");
+        }
         return new File(Jenkins.get().getRootDir(), "queue.xml");
     }
 
@@ -520,7 +522,7 @@ public class Queue extends ResourceController implements Saveable {
      */
     @Deprecated
     public boolean add(AbstractProject p) {
-        return schedule(p)!=null;
+        return schedule(p) != null;
     }
 
     /**
@@ -543,7 +545,7 @@ public class Queue extends ResourceController implements Saveable {
      */
     @Deprecated
     public boolean add(AbstractProject p, int quietPeriod) {
-        return schedule(p, quietPeriod)!=null;
+        return schedule(p, quietPeriod) != null;
     }
 
     /**
@@ -576,13 +578,10 @@ public class Queue extends ResourceController implements Saveable {
      *
      *      That said, one can still look at {@link Queue.Item#future}, {@link Queue.Item#getId()}, etc.
      */
-    public @Nonnull ScheduleResult schedule2(Task p, int quietPeriod, List<Action> actions) {
+    public @NonNull ScheduleResult schedule2(Task p, int quietPeriod, List<Action> actions) {
         // remove nulls
-        actions = new ArrayList<Action>(actions);
-        for (Iterator<Action> itr = actions.iterator(); itr.hasNext();) {
-            Action a =  itr.next();
-            if (a==null)    itr.remove();
-        }
+        actions = new ArrayList<>(actions);
+        actions.removeIf(Objects::isNull);
 
         lock.lock();
         try { try {
@@ -609,21 +608,21 @@ public class Queue extends ResourceController implements Saveable {
      *
      *      That said, one can still look at {@link WaitingItem#future}, {@link WaitingItem#getId()}, etc.
      */
-    private @Nonnull ScheduleResult scheduleInternal(Task p, int quietPeriod, List<Action> actions) {
+    private @NonNull ScheduleResult scheduleInternal(Task p, int quietPeriod, List<Action> actions) {
         lock.lock();
         try { try {
             Calendar due = new GregorianCalendar();
             due.add(Calendar.SECOND, quietPeriod);
 
             // Do we already have this task in the queue? Because if so, we won't schedule a new one.
-            List<Item> duplicatesInQueue = new ArrayList<Item>();
+            List<Item> duplicatesInQueue = new ArrayList<>();
             for (Item item : liveGetItems(p)) {
                 boolean shouldScheduleItem = false;
                 for (QueueAction action : item.getActions(QueueAction.class)) {
                     shouldScheduleItem |= action.shouldSchedule(actions);
                 }
                 for (QueueAction action : Util.filter(actions, QueueAction.class)) {
-                    shouldScheduleItem |= action.shouldSchedule((new ArrayList<Action>(item.getAllActions())));
+                    shouldScheduleItem |= action.shouldSchedule(new ArrayList<>(item.getAllActions()));
                 }
                 if (!shouldScheduleItem) {
                     duplicatesInQueue.add(item);
@@ -683,11 +682,11 @@ public class Queue extends ResourceController implements Saveable {
      */
     @Deprecated
     public boolean add(Task p, int quietPeriod) {
-    	return schedule(p, quietPeriod)!=null;
+        return schedule(p, quietPeriod) != null;
     }
 
     public @CheckForNull WaitingItem schedule(Task p, int quietPeriod) {
-    	return schedule(p, quietPeriod, new Action[0]);
+        return schedule(p, quietPeriod, new Action[0]);
     }
 
     /**
@@ -696,21 +695,21 @@ public class Queue extends ResourceController implements Saveable {
      */
     @Deprecated
     public boolean add(Task p, int quietPeriod, Action... actions) {
-    	return schedule(p, quietPeriod, actions)!=null;
+        return schedule(p, quietPeriod, actions) != null;
     }
 
     /**
      * Convenience wrapper method around {@link #schedule(Task, int, List)}
      */
     public @CheckForNull WaitingItem schedule(Task p, int quietPeriod, Action... actions) {
-    	return schedule2(p, quietPeriod, actions).getCreateItem();
+        return schedule2(p, quietPeriod, actions).getCreateItem();
     }
 
     /**
      * Convenience wrapper method around {@link #schedule2(Task, int, List)}
      */
-    public @Nonnull ScheduleResult schedule2(Task p, int quietPeriod, Action... actions) {
-    	return schedule2(p, quietPeriod, Arrays.asList(actions));
+    public @NonNull ScheduleResult schedule2(Task p, int quietPeriod, Action... actions) {
+        return schedule2(p, quietPeriod, Arrays.asList(actions));
     }
 
     /**
@@ -754,17 +753,24 @@ public class Queue extends ResourceController implements Saveable {
     }
 
     /**
-     * Called from {@code queue.jelly} and {@code entries.jelly}.
+     * Called from {@code queue.jelly} and {@code queue-items.jelly}.
      */
     @RequirePOST
     public HttpResponse doCancelItem(@QueryParameter long id) throws IOException, ServletException {
         Item item = getItem(id);
+        if (item != null && !hasReadPermission(item, true)) {
+            item = null;
+        }
         if (item != null) {
-            if(item.hasCancelPermission()){
-                cancel(item);
+            if (item.hasCancelPermission()) {
+                if (cancel(item)) {
+                    return HttpResponses.status(HttpServletResponse.SC_NO_CONTENT);
+                }
+                return HttpResponses.error(HttpServletResponse.SC_INTERNAL_SERVER_ERROR, "Could not cancel run for id " + id);
             }
+            return HttpResponses.error(422, "Item for id (" + id + ") is not cancellable");
         } // else too late, ignore (JENKINS-14813)
-        return HttpResponses.forwardToPreviousPage();
+        return HttpResponses.error(HttpServletResponse.SC_NOT_FOUND, "Provided id (" + id + ") not found");
     }
 
     public boolean isEmpty() {
@@ -783,22 +789,22 @@ public class Queue extends ResourceController implements Saveable {
      * Generally speaking the array is sorted such that the items that are most likely built sooner are
      * at the end.
      */
-    @Exported(inline=true)
+    @Exported(inline = true)
     public Item[] getItems() {
         Snapshot s = this.snapshot;
-        List<Item> r = new ArrayList<Item>();
+        List<Item> r = new ArrayList<>();
 
-        for(WaitingItem p : s.waitingList) {
+        for (WaitingItem p : s.waitingList) {
             r = checkPermissionsAndAddToList(r, p);
         }
-        for (BlockedItem p : s.blockedProjects){
+        for (BlockedItem p : s.blockedProjects) {
             r = checkPermissionsAndAddToList(r, p);
         }
         for (BuildableItem p : reverse(s.buildables)) {
             r = checkPermissionsAndAddToList(r, p);
         }
         for (BuildableItem p : reverse(s.pendings)) {
-            r= checkPermissionsAndAddToList(r, p);
+            r = checkPermissionsAndAddToList(r, p);
         }
         Item[] items = new Item[r.size()];
         r.toArray(items);
@@ -806,13 +812,27 @@ public class Queue extends ResourceController implements Saveable {
     }
 
     private List<Item> checkPermissionsAndAddToList(List<Item> r, Item t) {
-        if (t.task instanceof hudson.security.AccessControlled) {
-            if (((hudson.security.AccessControlled)t.task).hasPermission(hudson.model.Item.READ)
-                    || ((hudson.security.AccessControlled) t.task).hasPermission(hudson.security.Permission.READ)) {
-                r.add(t);
-            }
+        // TODO Changing the second arg to 'true' should reveal some tasks currently hidden for no obvious reason
+        if (hasReadPermission(t.task, false)) {
+            r.add(t);
         }
         return r;
+    }
+
+    private static boolean hasReadPermission(Item t, boolean valueIfNotAccessControlled) {
+        return hasReadPermission(t.task, valueIfNotAccessControlled);
+    }
+
+    private static boolean hasReadPermission(Queue.Task t, boolean valueIfNotAccessControlled) {
+        if (t instanceof AccessControlled) {
+            AccessControlled taskAC = (AccessControlled) t;
+            if (taskAC.hasPermission(hudson.model.Item.READ)
+                    || taskAC.hasPermission(Permission.READ)) { // TODO should be unnecessary given the 'implies' relationship
+                return true;
+            }
+            return false;
+        }
+        return valueIfNotAccessControlled;
     }
 
     /**
@@ -822,22 +842,22 @@ public class Queue extends ResourceController implements Saveable {
      * at the end.
      */
     @Restricted(NoExternalUse.class)
-    @Exported(inline=true)
+    @Exported(inline = true)
     public StubItem[] getDiscoverableItems() {
         Snapshot s = this.snapshot;
-        List<StubItem> r = new ArrayList<StubItem>();
+        List<StubItem> r = new ArrayList<>();
 
-        for(WaitingItem p : s.waitingList) {
+        for (WaitingItem p : s.waitingList) {
             r = filterDiscoverableItemListBasedOnPermissions(r, p);
         }
-        for (BlockedItem p : s.blockedProjects){
+        for (BlockedItem p : s.blockedProjects) {
             r = filterDiscoverableItemListBasedOnPermissions(r, p);
         }
         for (BuildableItem p : reverse(s.buildables)) {
             r = filterDiscoverableItemListBasedOnPermissions(r, p);
         }
         for (BuildableItem p : reverse(s.pendings)) {
-            r= filterDiscoverableItemListBasedOnPermissions(r, p);
+            r = filterDiscoverableItemListBasedOnPermissions(r, p);
         }
         StubItem[] items = new StubItem[r.size()];
         r.toArray(items);
@@ -846,7 +866,9 @@ public class Queue extends ResourceController implements Saveable {
 
     private List<StubItem> filterDiscoverableItemListBasedOnPermissions(List<StubItem> r, Item t) {
         if (t.task instanceof hudson.model.Item) {
-            if (!((hudson.model.Item)t.task).hasPermission(hudson.model.Item.READ) && ((hudson.model.Item)t.task).hasPermission(hudson.model.Item.DISCOVER)) {
+            hudson.model.Item taskAsItem = (hudson.model.Item) t.task;
+            if (!taskAsItem.hasPermission(hudson.model.Item.READ)
+                    && taskAsItem.hasPermission(hudson.model.Item.DISCOVER)) {
                 r.add(new StubItem(new StubTask(t.task)));
             }
         }
@@ -903,7 +925,7 @@ public class Queue extends ResourceController implements Saveable {
      */
     public List<BuildableItem> getBuildableItems(Computer c) {
         Snapshot snapshot = this.snapshot;
-        List<BuildableItem> result = new ArrayList<BuildableItem>();
+        List<BuildableItem> result = new ArrayList<>();
         _getBuildableItems(c, snapshot.buildables, result);
         _getBuildableItems(c, snapshot.pendings, result);
         return result;
@@ -924,7 +946,7 @@ public class Queue extends ResourceController implements Saveable {
      */
     public List<BuildableItem> getBuildableItems() {
         Snapshot snapshot = this.snapshot;
-        ArrayList<BuildableItem> r = new ArrayList<BuildableItem>(snapshot.buildables);
+        ArrayList<BuildableItem> r = new ArrayList<>(snapshot.buildables);
         r.addAll(snapshot.pendings);
         return r;
     }
@@ -933,16 +955,16 @@ public class Queue extends ResourceController implements Saveable {
      * Gets the snapshot of all {@link BuildableItem}s.
      */
     public List<BuildableItem> getPendingItems() {
-        return new ArrayList<BuildableItem>(snapshot.pendings);
+        return new ArrayList<>(snapshot.pendings);
     }
 
     /**
      * Gets the snapshot of all {@link BlockedItem}s.
      */
     protected List<BlockedItem> getBlockedItems() {
-        return new ArrayList<BlockedItem>(snapshot.blockedProjects);
+        return new ArrayList<>(snapshot.blockedProjects);
     }
-    
+
     /**
      * Returns the snapshot of all {@link LeftItem}s.
      *
@@ -968,7 +990,7 @@ public class Queue extends ResourceController implements Saveable {
      */
     public List<Item> getUnblockedItems() {
         Snapshot snapshot = this.snapshot;
-        List<Item> queuedNotBlocked = new ArrayList<Item>();
+        List<Item> queuedNotBlocked = new ArrayList<>();
         queuedNotBlocked.addAll(snapshot.waitingList);
         queuedNotBlocked.addAll(snapshot.buildables);
         queuedNotBlocked.addAll(snapshot.pendings);
@@ -983,7 +1005,7 @@ public class Queue extends ResourceController implements Saveable {
      */
     public Set<Task> getUnblockedTasks() {
         List<Item> items = getUnblockedItems();
-        Set<Task> unblockedTasks = new HashSet<Task>(items.size());
+        Set<Task> unblockedTasks = new HashSet<>(items.size());
         for (Queue.Item t : items)
             unblockedTasks.add(t.task);
         return unblockedTasks;
@@ -1005,9 +1027,9 @@ public class Queue extends ResourceController implements Saveable {
      * @param l Label to be checked. If null, any label will be accepted.
      *    If you want to count {@link BuildableItem}s without assigned labels,
      *    use {@link #strictCountBuildableItemsFor(hudson.model.Label)}.
-     * @return Number of {@link BuildableItem}s for the specified label. 
+     * @return Number of {@link BuildableItem}s for the specified label.
      */
-    public @Nonnegative int countBuildableItemsFor(@CheckForNull Label l) {
+    public /* @java.annotation.Nonnegative */ int countBuildableItemsFor(@CheckForNull Label l) {
         Snapshot snapshot = this.snapshot;
         int r = 0;
         for (BuildableItem bi : snapshot.buildables)
@@ -1020,7 +1042,7 @@ public class Queue extends ResourceController implements Saveable {
                     r++;
         return r;
     }
-    
+
     /**
      * How many {@link BuildableItem}s are assigned for the given label?
      * <p>
@@ -1031,7 +1053,7 @@ public class Queue extends ResourceController implements Saveable {
      * @return Number of {@link BuildableItem}s for the specified label.
      * @since 1.615
      */
-    public @Nonnegative int strictCountBuildableItemsFor(@CheckForNull Label l) {
+    public /* @java.annotation.Nonnegative */ int strictCountBuildableItemsFor(@CheckForNull Label l) {
         Snapshot _snapshot = this.snapshot;
         int r = 0;
         for (BuildableItem bi : _snapshot.buildables)
@@ -1088,7 +1110,7 @@ public class Queue extends ResourceController implements Saveable {
     private List<Item> liveGetItems(Task t) {
         lock.lock();
         try {
-            List<Item> result = new ArrayList<Item>();
+            List<Item> result = new ArrayList<>();
             result.addAll(blockedProjects.getAll(t));
             result.addAll(buildables.getAll(t));
             // Do not include pendings—we have already finalized WorkUnitContext.actions.
@@ -1116,7 +1138,7 @@ public class Queue extends ResourceController implements Saveable {
      */
     public List<Item> getItems(Task t) {
         Snapshot snapshot = this.snapshot;
-        List<Item> result = new ArrayList<Item>();
+        List<Item> result = new ArrayList<>();
         for (Item item : snapshot.blockedProjects) {
             if (item.task.equals(t)) {
                 result.add(item);
@@ -1144,7 +1166,7 @@ public class Queue extends ResourceController implements Saveable {
      * Returns true if this queue contains the said project.
      */
     public boolean contains(Task t) {
-        return getItem(t)!=null;
+        return getItem(t) != null;
     }
 
     /**
@@ -1193,12 +1215,18 @@ public class Queue extends ResourceController implements Saveable {
         }
 
         for (QueueTaskDispatcher d : QueueTaskDispatcher.all()) {
-            causeOfBlockage = d.canRun(i);
+            try {
+                causeOfBlockage = d.canRun(i);
+            } catch (Throwable t) {
+                // We cannot guarantee the task can be run because something wrong happened
+                LOGGER.log(Level.WARNING, t, () -> String.format("Exception evaluating if the queue can run the task '%s'", i.task.getName()));
+                causeOfBlockage = CauseOfBlockage.fromMessage(Messages._Queue_ExceptionCanRun());
+            }
             if (causeOfBlockage != null)
                 return causeOfBlockage;
         }
 
-        if(!(i instanceof BuildableItem)) {
+        if (!(i instanceof BuildableItem)) {
             // Make sure we don't queue two tasks of the same project to be built
             // unless that project allows concurrent builds. Once item is buildable it's ok.
             //
@@ -1226,7 +1254,7 @@ public class Queue extends ResourceController implements Saveable {
     private CauseOfBlockage getCauseOfBlockageForTask(Task task) {
         CauseOfBlockage causeOfBlockage = task.getCauseOfBlockage();
         if (causeOfBlockage != null) {
-            return task.getCauseOfBlockage();
+            return causeOfBlockage;
         }
 
         if (!canRun(task.getResourceList())) {
@@ -1320,11 +1348,12 @@ public class Queue extends ResourceController implements Saveable {
         }
     }
     /**
-     * Wraps a {@link Runnable} with the  {@link Queue} lock held. 
+     * Wraps a {@link Runnable} with the  {@link Queue} lock held.
      *
      * @param runnable the operation to wrap.
      * @since 1.618
      */
+
     public static Runnable wrapWithLock(Runnable runnable) {
         final Jenkins jenkins = Jenkins.getInstanceOrNull();
         // TODO confirm safe to assume non-null and use getInstance()
@@ -1333,7 +1362,7 @@ public class Queue extends ResourceController implements Saveable {
     }
 
     /**
-     * Wraps a {@link hudson.remoting.Callable} with the  {@link Queue} lock held. 
+     * Wraps a {@link hudson.remoting.Callable} with the  {@link Queue} lock held.
      *
      * @param callable the operation to wrap.
      * @since 1.618
@@ -1346,7 +1375,7 @@ public class Queue extends ResourceController implements Saveable {
     }
 
     /**
-     * Wraps a {@link java.util.concurrent.Callable} with the {@link Queue} lock held. 
+     * Wraps a {@link java.util.concurrent.Callable} with the {@link Queue} lock held.
      *
      * @param callable the operation to wrap.
      * @since 1.618
@@ -1355,10 +1384,11 @@ public class Queue extends ResourceController implements Saveable {
         final Jenkins jenkins = Jenkins.getInstanceOrNull();
         // TODO confirm safe to assume non-null and use getInstance()
         final Queue queue = jenkins == null ? null : jenkins.getQueue();
-        return queue == null ? callable : new LockedJUCCallable<V>(callable);
+        return queue == null ? callable : new LockedJUCCallable<>(callable);
     }
 
     @Override
+    @SuppressFBWarnings(value = "WA_AWAIT_NOT_IN_LOOP", justification = "the caller does indeed call this method in a loop")
     protected void _await() throws InterruptedException {
         condition.await();
     }
@@ -1374,6 +1404,7 @@ public class Queue extends ResourceController implements Saveable {
      * @param runnable the operation to perform.
      * @since 1.592
      */
+    @Override
     protected void _withLock(Runnable runnable) {
         lock.lock();
         try {
@@ -1414,6 +1445,7 @@ public class Queue extends ResourceController implements Saveable {
      * @throws T the exception of the callable
      * @since 1.592
      */
+    @Override
     protected <V, T extends Throwable> V _withLock(hudson.remoting.Callable<V, T> callable) throws T {
         lock.lock();
         try {
@@ -1433,6 +1465,7 @@ public class Queue extends ResourceController implements Saveable {
      * @throws Exception if the callable throws an exception.
      * @since 1.592
      */
+    @Override
     protected <V> V _withLock(java.util.concurrent.Callable<V> callable) throws Exception {
         lock.lock();
         try {
@@ -1465,10 +1498,10 @@ public class Queue extends ResourceController implements Saveable {
             LOGGER.log(Level.FINE, "Queue maintenance started on {0} with {1}", new Object[] {this, snapshot});
 
             // The executors that are currently waiting for a job to run.
-            Map<Executor, JobOffer> parked = new HashMap<Executor, JobOffer>();
+            Map<Executor, JobOffer> parked = new HashMap<>();
 
-            {// update parked (and identify any pending items whose executor has disappeared)
-                List<BuildableItem> lostPendings = new ArrayList<BuildableItem>(pendings);
+            { // update parked (and identify any pending items whose executor has disappeared)
+                List<BuildableItem> lostPendings = new ArrayList<>(pendings);
                 for (Computer c : jenkins.getComputers()) {
                     for (Executor e : c.getAllExecutors()) {
                         if (e.isInterrupted()) {
@@ -1492,7 +1525,7 @@ public class Queue extends ResourceController implements Saveable {
                     }
                 }
                 // pending -> buildable
-                for (BuildableItem p: lostPendings) {
+                for (BuildableItem p : lostPendings) {
                     if (LOGGER.isLoggable(Level.FINE)) {
                         LOGGER.log(Level.FINE,
                             "BuildableItem {0}: pending -> buildable as the assigned executor disappeared",
@@ -1506,14 +1539,14 @@ public class Queue extends ResourceController implements Saveable {
 
             final QueueSorter s = sorter;
 
-            {// blocked -> buildable
+            { // blocked -> buildable
                 // copy as we'll mutate the list and we want to process in a potentially different order
                 List<BlockedItem> blockedItems = new ArrayList<>(blockedProjects.values());
                 // if facing a cycle of blocked tasks, ensure we process in the desired sort order
                 if (s != null) {
                     s.sortBlockedItems(blockedItems);
                 } else {
-                    Collections.sort(blockedItems, QueueSorter.DEFAULT_BLOCKED_ITEM_COMPARATOR);
+                    blockedItems.sort(QueueSorter.DEFAULT_BLOCKED_ITEM_COMPARATOR);
                 }
                 for (BlockedItem p : blockedItems) {
                     String taskDisplayName = LOGGER.isLoggable(Level.FINEST) ? p.task.getFullDisplayName() : null;
@@ -1578,13 +1611,13 @@ public class Queue extends ResourceController implements Saveable {
                     LOGGER.log(Level.WARNING, "s.sortBuildableItems() threw Throwable: {0}", e);
                 }
             }
-            
+
             // Ensure that identification of blocked tasks is using the live state: JENKINS-27708 & JENKINS-27871
             updateSnapshot();
-            
+
             // allocate buildable jobs to executors
-            for (BuildableItem p : new ArrayList<BuildableItem>(
-                    buildables)) {// copy as we'll mutate the list in the loop
+            for (BuildableItem p : new ArrayList<>(
+                    buildables)) { // copy as we'll mutate the list in the loop
                 // one last check to make sure this build is not blocked.
                 CauseOfBlockage causeOfBlockage = getCauseOfBlockageForItem(p);
                 if (causeOfBlockage != null) {
@@ -1610,9 +1643,16 @@ public class Queue extends ResourceController implements Saveable {
                 } else {
 
                     List<JobOffer> candidates = new ArrayList<>(parked.size());
-                    List<CauseOfBlockage> reasons = new ArrayList<>(parked.size());
+                    Map<Node, CauseOfBlockage> reasonMap = new HashMap<>();
                     for (JobOffer j : parked.values()) {
-                        CauseOfBlockage reason = j.getCauseOfBlockage(p);
+                        Node offerNode = j.getNode();
+                        CauseOfBlockage reason;
+                        if (reasonMap.containsKey(offerNode)) {
+                            reason = reasonMap.get(offerNode);
+                        } else {
+                            reason = j.getCauseOfBlockage(p);
+                            reasonMap.put(offerNode, reason);
+                        }
                         if (reason == null) {
                             LOGGER.log(Level.FINEST,
                                     "{0} is a potential candidate for task {1}",
@@ -1620,7 +1660,6 @@ public class Queue extends ResourceController implements Saveable {
                             candidates.add(j);
                         } else {
                             LOGGER.log(Level.FINEST, "{0} rejected {1}: {2}", new Object[] {j, taskDisplayName, reason});
-                            reasons.add(reason);
                         }
                     }
 
@@ -1632,6 +1671,7 @@ public class Queue extends ResourceController implements Saveable {
                         // check if we can execute other projects
                         LOGGER.log(Level.FINER, "Failed to map {0} to executors. candidates={1} parked={2}",
                                 new Object[]{p, candidates, parked.values()});
+                        List<CauseOfBlockage> reasons = reasonMap.values().stream().filter(Objects::nonNull).collect(Collectors.toList());
                         p.transientCausesOfBlockage = reasons.isEmpty() ? null : reasons;
                         continue;
                     }
@@ -1656,8 +1696,8 @@ public class Queue extends ResourceController implements Saveable {
                     // of getCauseOfBlockageForItem(p) will become a bottleneck before updateSnapshot() will. Additionally
                     // since the snapshot itself only ever has at most one reference originating outside of the stack
                     // it should remain in the eden space and thus be cheap to GC.
-                    // See https://jenkins-ci.org/issue/27708?focusedCommentId=225819&page=com.atlassian.jira.plugin.system.issuetabpanels:comment-tabpanel#comment-225819
-                    // or https://jenkins-ci.org/issue/27708?focusedCommentId=225906&page=com.atlassian.jira.plugin.system.issuetabpanels:comment-tabpanel#comment-225906
+                    // See https://issues.jenkins.io/browse/JENKINS-27708?focusedCommentId=225819&page=com.atlassian.jira.plugin.system.issuetabpanels:comment-tabpanel#comment-225819
+                    // or https://issues.jenkins.io/browse/JENKINS-27708?focusedCommentId=225906&page=com.atlassian.jira.plugin.system.issuetabpanels:comment-tabpanel#comment-225906
                     // for alternative fixes of this issue.
                     updateSnapshot();
                 }
@@ -1679,7 +1719,7 @@ public class Queue extends ResourceController implements Saveable {
 
                 Runnable runnable = makeFlyWeightTaskBuildable(p);
                 LOGGER.log(Level.FINEST, "Converting flyweight task: {0} into a BuildableRunnable", taskDisplayName);
-                if(runnable != null){
+                if (runnable != null) {
                     return runnable;
                 }
 
@@ -1705,31 +1745,36 @@ public class Queue extends ResourceController implements Saveable {
      * @return a Runnable if there is an executor that can take the task, null otherwise
      */
     @CheckForNull
-    private Runnable makeFlyWeightTaskBuildable(final BuildableItem p){
+    private Runnable makeFlyWeightTaskBuildable(final BuildableItem p) {
         //we double check if this is a flyweight task
         if (p.task instanceof FlyweightTask) {
-            Jenkins h = Jenkins.getInstance();
+            Jenkins h = Jenkins.get();
 
             Label lbl = p.getAssignedLabel();
 
-            if (lbl != null && lbl.equals(h.getSelfLabel())) {
+            Computer masterComputer = h.toComputer();
+            if (lbl != null && lbl.equals(h.getSelfLabel()) && masterComputer != null) {
+                // the flyweight task is bound to the master
                 if (h.canTake(p) == null) {
-                    return createFlyWeightTaskRunnable(p, h.toComputer());
+                    return createFlyWeightTaskRunnable(p, masterComputer);
                 } else {
                     return null;
                 }
             }
 
-            Map<Node, Integer> hashSource = new HashMap<Node, Integer>(h.getNodes().size());
+            if (lbl == null && h.canTake(p) == null && masterComputer != null && masterComputer.isOnline() && masterComputer.isAcceptingTasks()) {
+                // The flyweight task is not tied to a specific label, so execute on master if possible.
+                // This will ensure that actual agent disconnects do not impact flyweight tasks randomly assigned to them.
+                return createFlyWeightTaskRunnable(p, masterComputer);
+            }
 
-            // Even if master is configured with zero executors, we may need to run a flyweight task like MatrixProject on it.
-            hashSource.put(h, Math.max(h.getNumExecutors() * 100, 1));
+            Map<Node, Integer> hashSource = new HashMap<>(h.getNodes().size());
 
             for (Node n : h.getNodes()) {
                 hashSource.put(n, n.getNumExecutors() * 100);
             }
 
-            ConsistentHash<Node> hash = new ConsistentHash<Node>(NODE_HASH);
+            ConsistentHash<Node> hash = new ConsistentHash<>(NODE_HASH);
             hash.addAll(hashSource);
 
             String fullDisplayName = p.task.getFullDisplayName();
@@ -1738,7 +1783,7 @@ public class Queue extends ResourceController implements Saveable {
                 if (c == null || c.isOffline()) {
                     continue;
                 }
-                if (lbl!=null && !lbl.contains(n)) {
+                if (lbl != null && !lbl.contains(n)) {
                     continue;
                 }
                 if (n.canTake(p) != null) {
@@ -1751,24 +1796,18 @@ public class Queue extends ResourceController implements Saveable {
         return null;
     }
 
-    private Runnable createFlyWeightTaskRunnable(final BuildableItem p, final Computer c) {
+    private Runnable createFlyWeightTaskRunnable(final BuildableItem p, final @NonNull Computer c) {
         if (LOGGER.isLoggable(Level.FINEST)) {
             LOGGER.log(Level.FINEST, "Creating flyweight task {0} for computer {1}",
                     new Object[]{p.task.getFullDisplayName(), c.getName()});
         }
-        return new Runnable() {
-            @Override public void run() {
-                c.startFlyWeightTask(new WorkUnitContext(p).createWorkUnit(p.task));
-                makePending(p);
-            }
+        return () -> {
+            c.startFlyWeightTask(new WorkUnitContext(p).createWorkUnit(p.task));
+            makePending(p);
         };
     }
 
-    private static Hash<Node> NODE_HASH = new Hash<Node>() {
-        public String hash(Node node) {
-            return node.getNodeName();
-        }
-    };
+    private static final ConsistentHash.Hash<Node> NODE_HASH = Node::getNodeName;
 
     private boolean makePending(BuildableItem p) {
         // LOGGER.info("Making "+p.task+" pending"); // REMOVE
@@ -1789,7 +1828,7 @@ public class Queue extends ResourceController implements Saveable {
      * @since 1.598
      */
     public static boolean isBlockedByShutdown(Task task) {
-        return Jenkins.getInstance().isQuietingDown() && !(task instanceof NonBlockingTask);
+        return Jenkins.get().isQuietingDown() && !(task instanceof NonBlockingTask);
     }
 
     public Api getApi() {
@@ -1829,11 +1868,6 @@ public class Queue extends ResourceController implements Saveable {
      * Pending {@link Task}s are persisted when Hudson shuts down, so
      * it needs to be persistable via XStream. To create a non-persisted
      * transient Task, extend {@link TransientTask} marker interface.
-     *
-     * <p>
-     * Plugins are encouraged to extend from {@link AbstractQueueTask}
-     * instead of implementing this interface directly, to maintain
-     * compatibility with future changes to this interface.
      *
      * <p>
      * Plugins are encouraged to implement {@link AccessControlled} otherwise
@@ -1897,28 +1931,48 @@ public class Queue extends ResourceController implements Saveable {
         String getFullDisplayName();
 
         /**
+         * Returns task-specific key which is used by the {@link LoadBalancer} to choose one particular executor
+         * amongst all the free executors on all possibly suitable nodes.
+         * NOTE: To be able to re-use the same node during the next run this key should not change from one run to
+         * another. You probably want to compute that key based on the job's name.
+         *
+         * @return by default: {@link #getFullDisplayName()}
+         * @see hudson.model.LoadBalancer
+         */
+        default String getAffinityKey() { return getFullDisplayName(); }
+
+        /**
          * Checks the permission to see if the current user can abort this executable.
          * Returns normally from this method if it's OK.
          * <p>
-         * NOTE: If you have implemented {@link AccessControlled} this should just be
+         * NOTE: If you have implemented {@link AccessControlled} this defaults to
          * {@code checkPermission(hudson.model.Item.CANCEL);}
          *
          * @throws AccessDeniedException if the permission is not granted.
          */
-        void checkAbortPermission();
+        default void checkAbortPermission() {
+            if (this instanceof AccessControlled) {
+                ((AccessControlled) this).checkPermission(CANCEL);
+            }
+        }
 
         /**
          * Works just like {@link #checkAbortPermission()} except it indicates the status by a return value,
          * instead of exception.
          * Also used by default for {@link hudson.model.Queue.Item#hasCancelPermission}.
          * <p>
-         * NOTE: If you have implemented {@link AccessControlled} this should just be
+         * NOTE: If you have implemented {@link AccessControlled} this returns by default
          * {@code return hasPermission(hudson.model.Item.CANCEL);}
          *
          * @return false
          *      if the user doesn't have the permission.
          */
-        boolean hasAbortPermission();
+        default boolean hasAbortPermission() {
+            if (this instanceof AccessControlled) {
+                return ((AccessControlled) this).hasPermission(CANCEL);
+            }
+            return true;
+        }
 
         /**
          * Returns the URL of this task relative to the context root of the application.
@@ -1957,7 +2011,7 @@ public class Queue extends ResourceController implements Saveable {
          * @since 1.377
          */
         default Collection<? extends SubTask> getSubTasks() {
-            return Collections.singleton(this);
+            return Set.of(this);
         }
 
         /**
@@ -1968,13 +2022,26 @@ public class Queue extends ResourceController implements Saveable {
          * When the task execution touches other objects inside Jenkins, the access control is performed
          * based on whether this {@link Authentication} is allowed to use them.
          *
-         * @return by default, {@link ACL#SYSTEM}
-         * @since 1.520
+         * @return by default, {@link ACL#SYSTEM2}
+         * @since 2.266
          * @see QueueItemAuthenticator
          * @see Tasks#getDefaultAuthenticationOf(Queue.Task)
          */
-        default @Nonnull Authentication getDefaultAuthentication() {
-            return ACL.SYSTEM;
+        default @NonNull Authentication getDefaultAuthentication2() {
+            if (Util.isOverridden(Queue.Task.class, getClass(), "getDefaultAuthentication")) {
+                return getDefaultAuthentication().toSpring();
+            } else {
+                return ACL.SYSTEM2;
+            }
+        }
+
+        /**
+         * @deprecated use {@link #getDefaultAuthentication2()}
+         * @since 1.520
+         */
+        @Deprecated
+        default @NonNull org.acegisecurity.Authentication getDefaultAuthentication() {
+            return org.acegisecurity.Authentication.fromSpring(getDefaultAuthentication2());
         }
 
         /**
@@ -1990,13 +2057,27 @@ public class Queue extends ResourceController implements Saveable {
          * older versions of Jenkins may not have this method implemented. Called private method _getDefaultAuthenticationOf(Task) on {@link Tasks}
          * to avoid {@link AbstractMethodError}.
          *
-         * @since 1.592
+         * @since 2.266
          * @see QueueItemAuthenticator
          * @see Tasks#getDefaultAuthenticationOf(Queue.Task, Queue.Item)
          */
-        default @Nonnull Authentication getDefaultAuthentication(Queue.Item item) {
-            return getDefaultAuthentication();
+        default @NonNull Authentication getDefaultAuthentication2(Queue.Item item) {
+            if (Util.isOverridden(Queue.Task.class, getClass(), "getDefaultAuthentication", Queue.Item.class)) {
+                return getDefaultAuthentication(item).toSpring();
+            } else {
+                return getDefaultAuthentication2();
+            }
         }
+
+        /**
+         * @deprecated use {@link #getDefaultAuthentication2(Queue.Item)}
+         * @since 1.592
+         */
+        @Deprecated
+        default @NonNull org.acegisecurity.Authentication getDefaultAuthentication(Queue.Item item) {
+            return org.acegisecurity.Authentication.fromSpring(getDefaultAuthentication2(item));
+        }
+
     }
 
     /**
@@ -2007,7 +2088,8 @@ public class Queue extends ResourceController implements Saveable {
      * Implementation must have {@code executorCell.jelly}, which is
      * used to render the HTML that indicates this executable is executing.
      */
-    public interface Executable extends Runnable {
+    @StaplerAccessibleType
+    public interface Executable extends Runnable, WithConsoleUrl {
         /**
          * Task from which this executable was created.
          *
@@ -2016,7 +2098,22 @@ public class Queue extends ResourceController implements Saveable {
          * {@link AbstractMethodError}.
          * Use {@link Executables#getParentOf(Queue.Executable)} that avoids this.
          */
-        @Nonnull SubTask getParent();
+        @NonNull SubTask getParent();
+
+        /**
+         * An umbrella executable (such as a {@link Run}) of which this is one part.
+         * Some invariants:
+         * <ul>
+         * <li>{@code getParent().getOwnerTask() == getParent() || getParentExecutable().getParent() == getParent().getOwnerTask()}
+         * <li>{@code getParent().getOwnerExecutable() == null || getParentExecutable() == getParent().getOwnerExecutable()}
+         * </ul>
+         * @return a <em>distinct</em> executable (never {@code this}, unlike the default of {@link SubTask#getOwnerTask}!); or null if this executable was already at top level
+         * @since 2.313, but implementations can already implement this with a lower core dependency.
+         * @see SubTask#getOwnerExecutable
+         */
+        default @CheckForNull Executable getParentExecutable() {
+            return null;
+        }
 
         /**
          * Called by {@link Executor} to perform the task.
@@ -2036,6 +2133,16 @@ public class Queue extends ResourceController implements Saveable {
         }
 
         /**
+         * Handles cases such as {@code PlaceholderExecutable} for Pipeline node steps.
+         * @return by default, that of {@link #getParentExecutable} if defined
+         */
+        @Override
+        default String getConsoleUrl() {
+            Executable parent = getParentExecutable();
+            return parent != null ? parent.getConsoleUrl() : null;
+        }
+
+        /**
          * Used to render the HTML. Should be a human readable text of what this executable is.
          */
         @Override String toString();
@@ -2045,7 +2152,7 @@ public class Queue extends ResourceController implements Saveable {
      * Item in a queue.
      */
     @ExportedBean(defaultVisibility = 999)
-    public static abstract class Item extends Actionable {
+    public abstract static class Item extends Actionable implements QueueItem {
 
         private final long id;
 
@@ -2053,15 +2160,14 @@ public class Queue extends ResourceController implements Saveable {
          * Unique ID (per master) that tracks the {@link Task} as it moves through different stages
          * in the queue (each represented by different subtypes of {@link Item} and into any subsequent
          * {@link Run} instance (see {@link Run#getQueueId()}).
-         * @return
          * @since 1.601
          */
         @Exported
+        @Override
         public long getId() {
             return id;
         }
 
-        @AdaptField(was=int.class, name="id")
         @Deprecated
         public int getIdLegacy() {
             if (id > Integer.MAX_VALUE) {
@@ -2073,15 +2179,22 @@ public class Queue extends ResourceController implements Saveable {
         }
 
 
-		/**
+        /**
          * Project to be built.
          */
         @Exported
+        @NonNull
         public final Task task;
 
         private /*almost final*/ transient FutureImpl future;
 
         private final long inQueueSince;
+
+        @Override
+        @NonNull
+        public Task getTask() {
+            return task;
+        }
 
         /**
          * Build is blocked because another build is in progress,
@@ -2103,6 +2216,7 @@ public class Queue extends ResourceController implements Saveable {
          * True if the item is starving for an executor for too long.
          */
         @Exported
+        @Override
         public boolean isStuck() { return false; }
 
         /**
@@ -2118,6 +2232,7 @@ public class Queue extends ResourceController implements Saveable {
          * Returns a human readable presentation of how long this item is already in the queue.
          * E.g. something like '3 minutes 40 seconds'
          */
+        @Override
         public String getInQueueForString() {
             long duration = System.currentTimeMillis() - this.inQueueSince;
             return Util.getTimeSpanString(duration);
@@ -2143,7 +2258,7 @@ public class Queue extends ResourceController implements Saveable {
         public Label getAssignedLabel() {
             for (LabelAssignmentAction laa : getActions(LabelAssignmentAction.class)) {
                 Label l = laa.getAssignedLabel(task);
-                if (l!=null)    return l;
+                if (l != null)    return l;
             }
             return task.getAssignedLabel();
         }
@@ -2152,16 +2267,16 @@ public class Queue extends ResourceController implements Saveable {
          * Test if the specified {@link SubTask} needs to be run on a node with a particular label.
          * <p>
          * This method takes {@link LabelAssignmentAction} into account, the first
-         * non-null assignment will be returned. 
+         * non-null assignment will be returned.
          * Otherwise falls back to {@link SubTask#getAssignedLabel()}
          * @param st {@link SubTask} to be checked.
          * @return Required {@link Label}. Otherwise null, indicating it can run on anywhere.
 
          */
-        public @CheckForNull Label getAssignedLabelFor(@Nonnull SubTask st) {
+        public @CheckForNull Label getAssignedLabelFor(@NonNull SubTask st) {
             for (LabelAssignmentAction laa : getActions(LabelAssignmentAction.class)) {
                 Label l = laa.getAssignedLabel(st);
-                if (l!=null)    return l;
+                if (l != null)    return l;
             }
             return st.getAssignedLabel();
         }
@@ -2174,12 +2289,13 @@ public class Queue extends ResourceController implements Saveable {
          */
         public final List<Cause> getCauses() {
             CauseAction ca = getAction(CauseAction.class);
-            if (ca!=null)
+            if (ca != null)
                 return Collections.unmodifiableList(ca.getCauses());
             return Collections.emptyList();
         }
 
         @Restricted(DoNotUse.class) // used from Jelly
+        @Override
         public String getCausesDescription() {
             List<Cause> causes = getCauses();
             StringBuilder s = new StringBuilder();
@@ -2189,26 +2305,22 @@ public class Queue extends ResourceController implements Saveable {
             return s.toString();
         }
 
-        protected Item(Task task, List<Action> actions, long id, FutureImpl future) {
-            this.task = task;
-            this.id = id;
-            this.future = future;
-            this.inQueueSince = System.currentTimeMillis();
-            for (Action action: actions) addAction(action);
+        protected Item(@NonNull Task task, @NonNull List<Action> actions, long id, FutureImpl future) {
+            this(task, actions, id, future, System.currentTimeMillis());
         }
 
-        protected Item(Task task, List<Action> actions, long id, FutureImpl future, long inQueueSince) {
+        protected Item(@NonNull Task task, @NonNull List<Action> actions, long id, FutureImpl future, long inQueueSince) {
             this.task = task;
             this.id = id;
             this.future = future;
             this.inQueueSince = inQueueSince;
-            for (Action action: actions) addAction(action);
+            for (Action action : actions) addAction(action);
         }
 
         @SuppressWarnings("deprecation") // JENKINS-51584
         protected Item(Item item) {
             // do not use item.getAllActions() here as this will persist actions from a TransientActionFactory
-            this(item.task, new ArrayList<Action>(item.getActions()), item.id, item.future, item.inQueueSince);
+            this(item.task, new ArrayList<>(item.getActions()), item.id, item.future, item.inQueueSince);
         }
 
         /**
@@ -2220,16 +2332,17 @@ public class Queue extends ResourceController implements Saveable {
          */
         @Exported
         public String getUrl() {
-            return "queue/item/"+id+'/';
+            return "queue/item/" + id + '/';
         }
 
         /**
          * Gets a human-readable status message describing why it's in the queue.
          */
         @Exported
+        @Override
         public final String getWhy() {
             CauseOfBlockage cob = getCauseOfBlockage();
-            return cob!=null ? cob.getShortDescription() : null;
+            return cob != null ? cob.getShortDescription() : null;
         }
 
         /**
@@ -2242,42 +2355,30 @@ public class Queue extends ResourceController implements Saveable {
          * @return String
          */
         @Exported
+        @Override
         public String getParams() {
-        	StringBuilder s = new StringBuilder();
-        	for (ParametersAction pa : getActions(ParametersAction.class)) {
+            StringBuilder s = new StringBuilder();
+            for (ParametersAction pa : getActions(ParametersAction.class)) {
                 for (ParameterValue p : pa.getParameters()) {
                     s.append('\n').append(p.getShortDescription());
                 }
-        	}
-        	return s.toString();
+            }
+            return s.toString();
         }
 
-        /**
-         * Checks whether a scheduled item may be canceled.
-         * @return by default, the same as {@link hudson.model.Queue.Task#hasAbortPermission}
-         */
-        public boolean hasCancelPermission() {
-            return task.hasAbortPermission();
+        @Override
+        public String getSearchUrl() {
+            return null;
         }
-
-        public String getDisplayName() {
-			// TODO Auto-generated method stub
-			return null;
-		}
-
-		public String getSearchUrl() {
-			// TODO Auto-generated method stub
-			return null;
-		}
 
         /** @deprecated Use {@link #doCancelItem} instead. */
         @Deprecated
         @RequirePOST
-        public HttpResponse doCancelQueue() throws IOException, ServletException {
-            if(hasCancelPermission()){
-                Jenkins.getInstance().getQueue().cancel(this);
+        public HttpResponse doCancelQueue() {
+            if (hasCancelPermission()) {
+                Jenkins.get().getQueue().cancel(this);
             }
-            return HttpResponses.forwardToPreviousPage();
+            return HttpResponses.status(HttpServletResponse.SC_NO_CONTENT);
         }
 
         /**
@@ -2285,19 +2386,28 @@ public class Queue extends ResourceController implements Saveable {
          *
          * When the task execution touches other objects inside Jenkins, the access control is performed
          * based on whether this {@link Authentication} is allowed to use them. Implementers, if you are unsure,
-         * return the identity of the user who queued the task, or {@link ACL#SYSTEM} to bypass the access control
+         * return the identity of the user who queued the task, or {@link ACL#SYSTEM2} to bypass the access control
          * and run as the super user.
          *
-         * @since 1.520
+         * @since 2.266
          */
-        @Nonnull
-        public Authentication authenticate() {
+        @NonNull
+        public Authentication authenticate2() {
             for (QueueItemAuthenticator auth : QueueItemAuthenticatorProvider.authenticators()) {
-                Authentication a = auth.authenticate(this);
-                if (a!=null)
+                Authentication a = auth.authenticate2(this);
+                if (a != null)
                     return a;
             }
-            return task.getDefaultAuthentication(this);
+            return task.getDefaultAuthentication2(this);
+        }
+
+        /**
+         * @deprecated use {@link #authenticate2}
+         * @since 1.520
+         */
+        @Deprecated
+        public org.acegisecurity.Authentication authenticate() {
+            return org.acegisecurity.Authentication.fromSpring(authenticate2());
         }
 
         @Restricted(DoNotUse.class) // only for Stapler export
@@ -2316,7 +2426,11 @@ public class Queue extends ResourceController implements Saveable {
             }
         }
 
-        private Object readResolve() {
+        public HttpResponse doIndex(StaplerRequest2 req) {
+            return HttpResponses.text("Queue item exists. For details check, for example, " + req.getRequestURI() + "api/json?tree=cancelled,executable[url]");
+        }
+
+        protected Object readResolve() {
             this.future = new FutureImpl(task);
             return this;
         }
@@ -2363,9 +2477,9 @@ public class Queue extends ResourceController implements Saveable {
     @ExportedBean(defaultVisibility = 999)
     public static class StubTask {
 
-        private String name;
+        private final String name;
 
-        public StubTask(@Nonnull Queue.Task base) {
+        public StubTask(@NonNull Queue.Task base) {
             this.name = base.getName();
         }
 
@@ -2381,7 +2495,8 @@ public class Queue extends ResourceController implements Saveable {
      */
     @Restricted(NoExternalUse.class)
     @ExportedBean(defaultVisibility = 999)
-    public class StubItem {
+    @SuppressFBWarnings(value = "URF_UNREAD_PUBLIC_OR_PROTECTED_FIELD", justification = "read by Stapler")
+    public static class StubItem {
 
         @Exported public StubTask task;
 
@@ -2390,7 +2505,7 @@ public class Queue extends ResourceController implements Saveable {
         }
 
     }
-    
+
     /**
      * An optional interface for actions on Queue.Item.
      * Lets the action cooperate in queue management.
@@ -2398,11 +2513,11 @@ public class Queue extends ResourceController implements Saveable {
      * @since 1.300-ish.
      */
     public interface QueueAction extends Action {
-    	/**
-    	 * Returns whether the new item should be scheduled.
-    	 * An action should return true if the associated task is 'different enough' to warrant a separate execution.
-    	 */
-	    boolean shouldSchedule(List<Action> actions);
+        /**
+         * Returns whether the new item should be scheduled.
+         * An action should return true if the associated task is 'different enough' to warrant a separate execution.
+         */
+        boolean shouldSchedule(List<Action> actions);
     }
 
     /**
@@ -2419,30 +2534,28 @@ public class Queue extends ResourceController implements Saveable {
      *
      * @since 1.316
      */
-    public static abstract class QueueDecisionHandler implements ExtensionPoint {
-    	/**
-    	 * Returns whether the new item should be scheduled.
+    public abstract static class QueueDecisionHandler implements ExtensionPoint {
+        /**
+         * Returns whether the new item should be scheduled.
          *
          * @param actions
          *      List of actions that are to be made available as {@link AbstractBuild#getActions()}
          *      upon the start of the build. This list is live, and can be mutated.
-    	 */
-    	public abstract boolean shouldSchedule(Task p, List<Action> actions);
+         */
+        public abstract boolean shouldSchedule(Task p, List<Action> actions);
 
-    	/**
-    	 * All registered {@link QueueDecisionHandler}s
-    	 */
-    	public static ExtensionList<QueueDecisionHandler> all() {
-    		return ExtensionList.lookup(QueueDecisionHandler.class);
-    	}
+        /**
+         * All registered {@link QueueDecisionHandler}s
+         */
+        public static ExtensionList<QueueDecisionHandler> all() {
+            return ExtensionList.lookup(QueueDecisionHandler.class);
+        }
     }
 
     /**
      * {@link Item} in the {@link Queue#waitingList} stage.
      */
     public static final class WaitingItem extends Item implements Comparable<WaitingItem> {
-	private static final AtomicLong COUNTER = new AtomicLong(0);
-
         /**
          * This item can be run after this time.
          */
@@ -2450,46 +2563,31 @@ public class Queue extends ResourceController implements Saveable {
         public Calendar timestamp;
 
         public WaitingItem(Calendar timestamp, Task project, List<Action> actions) {
-            super(project, actions, COUNTER.incrementAndGet(), new FutureImpl(project));
+            super(project, actions, QueueIdStrategy.get().generateIdFor(project, actions), new FutureImpl(project));
             this.timestamp = timestamp;
         }
 
-        static int getCurrentCounterValue() {
-            return COUNTER.intValue();
-        }
-
+        @Override
         public int compareTo(WaitingItem that) {
             int r = this.timestamp.getTime().compareTo(that.timestamp.getTime());
             if (r != 0) return r;
 
-            if (this.getId() < that.getId()) {
-                return -1;
-            } else if (this.getId() == that.getId()) {
-                return 0;
-            } else {
-                return 1;
-            }
+            return Long.compare(this.getId(), that.getId());
         }
 
+        @Override
         public CauseOfBlockage getCauseOfBlockage() {
             long diff = timestamp.getTimeInMillis() - System.currentTimeMillis();
-            if (diff > 0)
+            if (diff >= 0)
                 return CauseOfBlockage.fromMessage(Messages._Queue_InQuietPeriod(Util.getTimeSpanString(diff)));
             else
-                return CauseOfBlockage.fromMessage(Messages._Queue_Unknown());
+                return CauseOfBlockage.fromMessage(Messages._Queue_FinishedWaiting());
         }
 
         @Override
         /*package*/ void enter(Queue q) {
             if (q.waitingList.add(this)) {
-                for (QueueListener ql : QueueListener.all()) {
-                    try {
-                        ql.onEnterWaiting(this);
-                    } catch (Throwable e) {
-                        // don't let this kill the queue
-                        LOGGER.log(Level.WARNING, "QueueListener failed while processing "+this,e);
-                    }
-                }
+                Listeners.notify(QueueListener.class, true, l -> l.onEnterWaiting(this));
             }
         }
 
@@ -2497,14 +2595,7 @@ public class Queue extends ResourceController implements Saveable {
         /*package*/ boolean leave(Queue q) {
             boolean r = q.waitingList.remove(this);
             if (r) {
-                for (QueueListener ql : QueueListener.all()) {
-                    try {
-                        ql.onLeaveWaiting(this);
-                    } catch (Throwable e) {
-                        // don't let this kill the queue
-                        LOGGER.log(Level.WARNING, "QueueListener failed while processing "+this,e);
-                    }
-                }
+                Listeners.notify(QueueListener.class, true, l -> l.onLeaveWaiting(this));
             }
             return r;
         }
@@ -2515,7 +2606,7 @@ public class Queue extends ResourceController implements Saveable {
     /**
      * Common part between {@link BlockedItem} and {@link BuildableItem}.
      */
-    public static abstract class NotWaitingItem extends Item {
+    public abstract static class NotWaitingItem extends Item {
         /**
          * When did this job exit the {@link Queue#waitingList} phase?
          */
@@ -2561,6 +2652,16 @@ public class Queue extends ResourceController implements Saveable {
             this.causeOfBlockage = causeOfBlockage;
         }
 
+        @Restricted(NoExternalUse.class)
+        public boolean isCauseOfBlockageNull() {
+            if (causeOfBlockage == null) {
+                return true;
+            } else {
+                return false;
+            }
+        }
+
+        @Override
         public CauseOfBlockage getCauseOfBlockage() {
             if (causeOfBlockage != null) {
                 return causeOfBlockage;
@@ -2570,31 +2671,19 @@ public class Queue extends ResourceController implements Saveable {
             return getCauseOfBlockageForItem(this);
         }
 
+                    @Override
         /*package*/ void enter(Queue q) {
             LOGGER.log(Level.FINE, "{0} is blocked", this);
             blockedProjects.add(this);
-            for (QueueListener ql : QueueListener.all()) {
-                try {
-                    ql.onEnterBlocked(this);
-                } catch (Throwable e) {
-                    // don't let this kill the queue
-                    LOGGER.log(Level.WARNING, "QueueListener failed while processing "+this,e);
-                }
-            }
+            Listeners.notify(QueueListener.class, true, l -> l.onEnterBlocked(this));
         }
 
+                    @Override
         /*package*/ boolean leave(Queue q) {
             boolean r = blockedProjects.remove(this);
             if (r) {
                 LOGGER.log(Level.FINE, "{0} no longer blocked", this);
-                for (QueueListener ql : QueueListener.all()) {
-                    try {
-                        ql.onLeaveBlocked(this);
-                    } catch (Throwable e) {
-                        // don't let this kill the queue
-                        LOGGER.log(Level.WARNING, "QueueListener failed while processing "+this,e);
-                    }
-                }
+                Listeners.notify(QueueListener.class, true, l -> l.onLeaveBlocked(this));
             }
             return r;
         }
@@ -2603,7 +2692,7 @@ public class Queue extends ResourceController implements Saveable {
     /**
      * {@link Item} in the {@link Queue#buildables} stage.
      */
-    public final static class BuildableItem extends NotWaitingItem {
+    public static final class BuildableItem extends NotWaitingItem {
         /**
          * Set to true when this is added to the {@link Queue#pendings} list.
          */
@@ -2623,9 +2712,10 @@ public class Queue extends ResourceController implements Saveable {
             super(ni);
         }
 
+        @Override
         public CauseOfBlockage getCauseOfBlockage() {
-            Jenkins jenkins = Jenkins.getInstance();
-            if(isBlockedByShutdown(task))
+            Jenkins jenkins = Jenkins.get();
+            if (isBlockedByShutdown(task))
                 return CauseOfBlockage.fromMessage(Messages._Queue_HudsonIsAboutToShutDown());
 
             List<CauseOfBlockage> causesOfBlockage = transientCausesOfBlockage;
@@ -2657,18 +2747,18 @@ public class Queue extends ResourceController implements Saveable {
         @Override
         public boolean isStuck() {
             Label label = getAssignedLabel();
-            if(label!=null && label.isOffline())
+            if (label != null && label.isOffline())
                 // no executor online to process this job. definitely stuck.
                 return true;
 
             long d = task.getEstimatedDuration();
-            long elapsed = System.currentTimeMillis()-buildableStartMilliseconds;
-            if(d>=0) {
+            long elapsed = System.currentTimeMillis() - buildableStartMilliseconds;
+            if (d >= 0) {
                 // if we were running elsewhere, we would have done this build ten times.
-                return elapsed > Math.max(d,60000L)*10;
+                return elapsed > Math.max(d, 60000L) * 10;
             } else {
                 // more than a day in the queue
-                return TimeUnit.MILLISECONDS.toHours(elapsed)>24;
+                return TimeUnit.MILLISECONDS.toHours(elapsed) > 24;
             }
         }
 
@@ -2680,14 +2770,7 @@ public class Queue extends ResourceController implements Saveable {
         @Override
         /*package*/ void enter(Queue q) {
             q.buildables.add(this);
-            for (QueueListener ql : QueueListener.all()) {
-                try {
-                    ql.onEnterBuildable(this);
-                } catch (Throwable e) {
-                    // don't let this kill the queue
-                    LOGGER.log(Level.WARNING, "QueueListener failed while processing "+this,e);
-                }
-            }
+            Listeners.notify(QueueListener.class, true, l -> l.onEnterBuildable(this));
         }
 
         @Override
@@ -2695,14 +2778,7 @@ public class Queue extends ResourceController implements Saveable {
             boolean r = q.buildables.remove(this);
             if (r) {
                 LOGGER.log(Level.FINE, "{0} no longer blocked", this);
-                for (QueueListener ql : QueueListener.all()) {
-                    try {
-                        ql.onLeaveBuildable(this);
-                    } catch (Throwable e) {
-                        // don't let this kill the queue
-                        LOGGER.log(Level.WARNING, "QueueListener failed while processing "+this,e);
-                    }
-                }
+                Listeners.notify(QueueListener.class, true, l -> l.onLeaveBuildable(this));
             }
             return r;
         }
@@ -2714,7 +2790,7 @@ public class Queue extends ResourceController implements Saveable {
      *
      * @since 1.519
      */
-    public final static class LeftItem extends Item {
+    public static final class LeftItem extends Item {
         public final WorkUnitContext outcome;
 
         /**
@@ -2744,7 +2820,7 @@ public class Queue extends ResourceController implements Saveable {
          */
         @Exported
         public @CheckForNull Executable getExecutable() {
-            return outcome!=null ? outcome.getPrimaryWorkUnit().getExecutable() : null;
+            return outcome != null ? outcome.getPrimaryWorkUnit().getExecutable() : null;
         }
 
         /**
@@ -2752,20 +2828,13 @@ public class Queue extends ResourceController implements Saveable {
          */
         @Exported
         public boolean isCancelled() {
-            return outcome==null;
+            return outcome == null;
         }
 
         @Override
         void enter(Queue q) {
-            q.leftItems.put(getId(),this);
-            for (QueueListener ql : QueueListener.all()) {
-                try {
-                    ql.onLeft(this);
-                } catch (Throwable e) {
-                    // don't let this kill the queue
-                    LOGGER.log(Level.WARNING, "QueueListener failed while processing "+this,e);
-                }
-            }
+            q.leftItems.put(getId(), this);
+            Listeners.notify(QueueListener.class, true, l -> l.onLeft(this));
         }
 
         @Override
@@ -2785,69 +2854,67 @@ public class Queue extends ResourceController implements Saveable {
     static {
         XSTREAM.registerConverter(new AbstractSingleValueConverter() {
 
-			@Override
-			@SuppressWarnings("unchecked")
-			public boolean canConvert(Class klazz) {
-				return hudson.model.Item.class.isAssignableFrom(klazz);
-			}
+            @Override
+            public boolean canConvert(Class klazz) {
+                return hudson.model.Item.class.isAssignableFrom(klazz);
+            }
 
-			@Override
-			public Object fromString(String string) {
-                Object item = Jenkins.getInstance().getItemByFullName(string);
-                if(item==null)  throw new NoSuchElementException("No such job exists: "+string);
+            @Override
+            public Object fromString(String string) {
+                Object item = Jenkins.get().getItemByFullName(string);
+                if (item == null)  throw new NoSuchElementException("No such job exists: " + string);
                 return item;
-			}
+            }
 
-			@Override
-			public String toString(Object item) {
-				return ((hudson.model.Item) item).getFullName();
-			}
+            @Override
+            public String toString(Object item) {
+                return ((hudson.model.Item) item).getFullName();
+            }
         });
         XSTREAM.registerConverter(new AbstractSingleValueConverter() {
 
-			@SuppressWarnings("unchecked")
-			@Override
-			public boolean canConvert(Class klazz) {
-				return Run.class.isAssignableFrom(klazz);
-			}
+            @Override
+            public boolean canConvert(Class klazz) {
+                return Run.class.isAssignableFrom(klazz);
+            }
 
-			@Override
-			public Object fromString(String string) {
-				String[] split = string.split("#");
-				String projectName = split[0];
-				int buildNumber = Integer.parseInt(split[1]);
-				Job<?,?> job = (Job<?,?>) Jenkins.getInstance().getItemByFullName(projectName);
-                if(job==null)  throw new NoSuchElementException("No such job exists: "+projectName);
-				Run<?,?> run = job.getBuildByNumber(buildNumber);
-                if(run==null)  throw new NoSuchElementException("No such build: "+string);
-				return run;
-			}
+            @Override
+            public Object fromString(String string) {
+                String[] split = string.split("#");
+                String projectName = split[0];
+                int buildNumber = Integer.parseInt(split[1]);
+                Job<?, ?> job = (Job<?, ?>) Jenkins.get().getItemByFullName(projectName);
+                if (job == null)  throw new NoSuchElementException("No such job exists: " + projectName);
+                Run<?, ?> run = job.getBuildByNumber(buildNumber);
+                if (run == null)  throw new NoSuchElementException("No such build: " + string);
+                return run;
+            }
 
-			@Override
-			public String toString(Object object) {
-				Run<?,?> run = (Run<?,?>) object;
-				return run.getParent().getFullName() + "#" + run.getNumber();
-			}
+            @Override
+            public String toString(Object object) {
+                Run<?, ?> run = (Run<?, ?>) object;
+                return run.getParent().getFullName() + "#" + run.getNumber();
+            }
         });
 
-        /**
-         * Reconnect every reference to {@link Queue} by the singleton.
+        /*
+         * Reconnect every reference to Queue by the singleton.
          */
         XSTREAM.registerConverter(new AbstractSingleValueConverter() {
-			@Override
-			public boolean canConvert(Class klazz) {
-				return Queue.class.isAssignableFrom(klazz);
-			}
+            @Override
+            public boolean canConvert(Class klazz) {
+                return Queue.class.isAssignableFrom(klazz);
+            }
 
-			@Override
-			public Object fromString(String string) {
-                return Jenkins.getInstance().getQueue();
-			}
+            @Override
+            public Object fromString(String string) {
+                return Jenkins.get().getQueue();
+            }
 
-			@Override
-			public String toString(Object item) {
+            @Override
+            public String toString(Object item) {
                 return "queue";
-			}
+            }
         });
     }
 
@@ -2859,7 +2926,7 @@ public class Queue extends ResourceController implements Saveable {
         private final WeakReference<Queue> queue;
 
         MaintainTask(Queue queue) {
-            this.queue = new WeakReference<Queue>(queue);
+            this.queue = new WeakReference<>(queue);
         }
 
         private void periodic() {
@@ -2867,6 +2934,7 @@ public class Queue extends ResourceController implements Saveable {
             Timer.get().scheduleWithFixedDelay(this, interval, interval, TimeUnit.MILLISECONDS);
         }
 
+        @Override
         protected void doRun() {
             Queue q = queue.get();
             if (q != null)
@@ -2880,56 +2948,56 @@ public class Queue extends ResourceController implements Saveable {
      * {@link ArrayList} of {@link Item} with more convenience methods.
      */
     private class ItemList<T extends Item> extends ArrayList<T> {
-    	public T get(Task task) {
-    		for (T item: this) {
-    			if (item.task.equals(task)) {
-    				return item;
-    			}
-    		}
-    		return null;
-    	}
+        public T get(Task task) {
+            for (T item : this) {
+                if (item.task.equals(task)) {
+                    return item;
+                }
+            }
+            return null;
+        }
 
-    	public List<T> getAll(Task task) {
-    		List<T> result = new ArrayList<T>();
-    		for (T item: this) {
-    			if (item.task.equals(task)) {
-    				result.add(item);
-    			}
-    		}
-    		return result;
-    	}
+        public List<T> getAll(Task task) {
+            List<T> result = new ArrayList<>();
+            for (T item : this) {
+                if (item.task.equals(task)) {
+                    result.add(item);
+                }
+            }
+            return result;
+        }
 
-    	public boolean containsKey(Task task) {
-    		return get(task) != null;
-    	}
+        public boolean containsKey(Task task) {
+            return get(task) != null;
+        }
 
-    	public T remove(Task task) {
-    		Iterator<T> it = iterator();
-    		while (it.hasNext()) {
-    			T t = it.next();
-    			if (t.task.equals(task)) {
-    				it.remove();
-    				return t;
-    			}
-    		}
-    		return null;
-    	}
+        public T remove(Task task) {
+            Iterator<T> it = iterator();
+            while (it.hasNext()) {
+                T t = it.next();
+                if (t.task.equals(task)) {
+                    it.remove();
+                    return t;
+                }
+            }
+            return null;
+        }
 
-    	public void put(Task task, T item) {
-    		assert item.task.equals(task);
-    		add(item);
-    	}
+        public void put(Task task, T item) {
+            assert item.task.equals(task);
+            add(item);
+        }
 
-    	public ItemList<T> values() {
-    		return this;
-    	}
+        public ItemList<T> values() {
+            return this;
+        }
 
         /**
          * Works like {@link #remove(Task)} but also marks the {@link Item} as cancelled.
          */
         public T cancel(Task p) {
             T x = get(p);
-            if(x!=null) x.cancel(Queue.this);
+            if (x != null) x.cancel(Queue.this);
             return x;
         }
 
@@ -2937,7 +3005,7 @@ public class Queue extends ResourceController implements Saveable {
                 justification = "It will invoke the inherited clear() method according to Java semantics. "
                               + "FindBugs recommends suppressing warnings in such case")
         public void cancelAll() {
-            for (T t : new ArrayList<T>(this))
+            for (T t : new ArrayList<>(this))
                 t.cancel(Queue.this);
             clear();
         }
@@ -2949,12 +3017,12 @@ public class Queue extends ResourceController implements Saveable {
         private final List<BuildableItem> buildables;
         private final List<BuildableItem> pendings;
 
-        public Snapshot(Set<WaitingItem> waitingList, List<BlockedItem> blockedProjects, List<BuildableItem> buildables,
+        Snapshot(Set<WaitingItem> waitingList, List<BlockedItem> blockedProjects, List<BuildableItem> buildables,
                         List<BuildableItem> pendings) {
-            this.waitingList = new LinkedHashSet<WaitingItem>(waitingList);
-            this.blockedProjects = new ArrayList<BlockedItem>(blockedProjects);
-            this.buildables = new ArrayList<BuildableItem>(buildables);
-            this.pendings = new ArrayList<BuildableItem>(pendings);
+            this.waitingList = new LinkedHashSet<>(waitingList);
+            this.blockedProjects = new ArrayList<>(blockedProjects);
+            this.buildables = new ArrayList<>(buildables);
+            this.pendings = new ArrayList<>(pendings);
         }
 
         @Override
@@ -2962,7 +3030,7 @@ public class Queue extends ResourceController implements Saveable {
             return "Queue.Snapshot{waitingList=" + waitingList + ";blockedProjects=" + blockedProjects + ";buildables=" + buildables + ";pendings=" + pendings + "}";
         }
     }
-    
+
     private static class LockedRunnable implements Runnable  {
         private final Runnable delegate;
 
@@ -3003,11 +3071,11 @@ public class Queue extends ResourceController implements Saveable {
         }
     }
 
-    private static class LockedHRCallable<V,T extends Throwable> implements hudson.remoting.Callable<V,T> {
+    private static class LockedHRCallable<V, T extends Throwable> implements hudson.remoting.Callable<V, T> {
         private static final long serialVersionUID = 1L;
-        private final hudson.remoting.Callable<V,T> delegate;
+        private final hudson.remoting.Callable<V, T> delegate;
 
-        private LockedHRCallable(hudson.remoting.Callable<V,T> delegate) {
+        private LockedHRCallable(hudson.remoting.Callable<V, T> delegate) {
             this.delegate = delegate;
         }
 
@@ -3024,19 +3092,24 @@ public class Queue extends ResourceController implements Saveable {
 
     @CLIResolver
     public static Queue getInstance() {
-        return Jenkins.getInstance().getQueue();
+        return Jenkins.get().getQueue();
     }
 
     /**
      * Restores the queue content during the start up.
      */
-    @Initializer(after=JOB_LOADED)
+    @Initializer(after = JOB_CONFIG_ADAPTED)
     public static void init(Jenkins h) {
-        h.getQueue().load();
+        Queue queue = h.getQueue();
+        Item[] items = queue.getItems();
+        if (items.length > 0) {
+            LOGGER.warning(() -> "Loading queue will discard previously scheduled items: " + Arrays.toString(items));
+        }
+        queue.load();
     }
 
     /**
-     * Schedule {@code Queue.save()} call for near future once items change. Ignore all changes until the time the save
+     * Schedule {@link Queue#save()} call for near future once items change. Ignore all changes until the time the save
      * takes place.
      *
      * Once queue is restored after a crash, items stages might not be accurate until the next #maintain() - this is not
@@ -3096,7 +3169,7 @@ public class Queue extends ResourceController implements Saveable {
         }
 
         @VisibleForTesting @Restricted(NoExternalUse.class)
-        /*package*/ @Nonnull Future<?> getNextSave() {
+        /*package*/ @NonNull Future<?> getNextSave() {
             synchronized (lock) {
                 return nextSave == null
                         ? Futures.precomputed(null)
