@@ -1,18 +1,18 @@
 /*
  * The MIT License
- * 
+ *
  * Copyright (c) 2004-2009, Sun Microsystems, Inc., Kohsuke Kawaguchi
- * 
+ *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
  * in the Software without restriction, including without limitation the rights
  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  * copies of the Software, and to permit persons to whom the Software is
  * furnished to do so, subject to the following conditions:
- * 
+ *
  * The above copyright notice and this permission notice shall be included in
  * all copies or substantial portions of the Software.
- * 
+ *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -21,28 +21,26 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.model;
 
+import edu.umd.cs.findbugs.annotations.CheckForNull;
+import edu.umd.cs.findbugs.annotations.NonNull;
 import hudson.util.FormValidation;
 import hudson.views.ListViewColumn;
 import hudson.views.ListViewColumnDescriptor;
 import hudson.views.ViewJobFilter;
-import java.lang.reflect.ParameterizedType;
-import java.lang.reflect.Type;
 import java.util.Iterator;
 import java.util.List;
-import javax.annotation.CheckForNull;
-import javax.annotation.Nonnull;
+import java.util.Objects;
 import jenkins.model.DirectlyModifiableTopLevelItemGroup;
 import jenkins.model.Jenkins;
-import org.apache.commons.lang.StringUtils;
-import org.jvnet.tiger_types.Types;
 import org.kohsuke.accmod.Restricted;
 import org.kohsuke.accmod.restrictions.DoNotUse;
 import org.kohsuke.stapler.AncestorInPath;
 import org.kohsuke.stapler.QueryParameter;
 import org.kohsuke.stapler.Stapler;
-import org.kohsuke.stapler.StaplerRequest;
+import org.kohsuke.stapler.StaplerRequest2;
 
 /**
  * {@link Descriptor} for {@link View}.
@@ -56,6 +54,7 @@ public abstract class ViewDescriptor extends Descriptor<View> {
      * in the view creation screen. The string should look like
      * "Abc Def Ghi".
      */
+    @NonNull
     @Override
     public String getDisplayName() {
         return super.getDisplayName();
@@ -73,7 +72,7 @@ public abstract class ViewDescriptor extends Descriptor<View> {
      * Jelly fragment included in the "new view" page.
      */
     public final String getNewViewDetailPage() {
-        return '/'+clazz.getName().replace('.','/').replace('$','/')+"/newViewDetail.jelly";
+        return '/' + clazz.getName().replace('.', '/').replace('$', '/') + "/newViewDetail.jelly";
     }
 
     protected ViewDescriptor(Class<? extends View> clazz) {
@@ -93,7 +92,7 @@ public abstract class ViewDescriptor extends Descriptor<View> {
             DirectlyModifiableTopLevelItemGroup modifiableContainer = (DirectlyModifiableTopLevelItemGroup) container;
             Iterator<String> it = candidates.getValues().iterator();
             while (it.hasNext()) {
-                TopLevelItem item = Jenkins.getInstance().getItem(it.next(), container, TopLevelItem.class);
+                TopLevelItem item = Jenkins.get().getItem(it.next(), container, TopLevelItem.class);
                 if (item == null) {
                     continue; // ?
                 }
@@ -109,7 +108,7 @@ public abstract class ViewDescriptor extends Descriptor<View> {
      * Possible {@link ListViewColumnDescriptor}s that can be used with this view.
      */
     public List<Descriptor<ListViewColumn>> getColumnsDescriptors() {
-        StaplerRequest request = Stapler.getCurrentRequest();
+        StaplerRequest2 request = Stapler.getCurrentRequest2();
         if (request != null) {
             View view = request.findAncestorObject(clazz);
             return view == null ? DescriptorVisibilityFilter.applyType(clazz, ListViewColumn.all())
@@ -122,7 +121,7 @@ public abstract class ViewDescriptor extends Descriptor<View> {
      * Possible {@link ViewJobFilter} types that can be used with this view.
      */
     public List<Descriptor<ViewJobFilter>> getJobFiltersDescriptors() {
-        StaplerRequest request = Stapler.getCurrentRequest();
+        StaplerRequest2 request = Stapler.getCurrentRequest2();
         if (request != null) {
             View view = request.findAncestorObject(clazz);
             return view == null ? DescriptorVisibilityFilter.applyType(clazz, ViewJobFilter.all())
@@ -140,16 +139,16 @@ public abstract class ViewDescriptor extends Descriptor<View> {
      * @since 2.37
      */
     @SuppressWarnings("unused") // expose utility check method to subclasses
-    protected FormValidation checkDisplayName(@Nonnull View view, @CheckForNull String value) {
-        if (StringUtils.isBlank(value)) {
+    protected FormValidation checkDisplayName(@NonNull View view, @CheckForNull String value) {
+        if (value == null || value.isBlank()) {
             // no custom name, no need to check
             return FormValidation.ok();
         }
-        for (View v: view.owner.getViews()) {
+        for (View v : view.owner.getViews()) {
             if (v.getViewName().equals(view.getViewName())) {
                 continue;
             }
-            if (StringUtils.equals(v.getDisplayName(), value)) {
+            if (Objects.equals(v.getDisplayName(), value)) {
                 return FormValidation.warning(Messages.View_DisplayNameNotUniqueWarning(value));
             }
         }
