@@ -21,11 +21,12 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.util;
 
-import javax.servlet.http.HttpServletRequest;
-import java.io.UnsupportedEncodingException;
+import jakarta.servlet.http.HttpServletRequest;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -38,7 +39,7 @@ import java.util.Map;
  * <p>
  * This class is even useful on the server side, as {@link HttpServletRequest#getParameter(String)}
  * can try to parse into the payload (and that can cause an exception if the payload is already consumed.
- * See HUDSON-8056.)
+ * See JENKINS-8056.)
  *
  * <p>
  * So if you are handling the payload yourself and only want to access the query parameters,
@@ -48,26 +49,20 @@ import java.util.Map;
  * @since 1.394
  */
 public class QueryParameterMap {
-    private final Map<String,List<String>> store = new HashMap<String, List<String>>();
+    private final Map<String, List<String>> store = new HashMap<>();
 
     /**
      * @param queryString
      *      String that looks like {@code abc=def&ghi=jkl}
      */
     public QueryParameterMap(String queryString) {
-        if (queryString==null || queryString.length()==0)   return;
-        try {
-            for (String param : queryString.split("&")) {
-                String[] kv = param.split("=");
-                String key = URLDecoder.decode(kv[0], "UTF-8");
-                String value = URLDecoder.decode(kv[1], "UTF-8");
-                List<String> values = store.get(key);
-                if (values == null)
-                    store.put(key, values = new ArrayList<String>());
-                values.add(value);
-            }
-        } catch (UnsupportedEncodingException e) {
-            throw new AssertionError(e);
+        if (queryString == null || queryString.isEmpty())   return;
+        for (String param : queryString.split("&")) {
+            String[] kv = param.split("=");
+            String key = URLDecoder.decode(kv[0], StandardCharsets.UTF_8);
+            String value = URLDecoder.decode(kv[1], StandardCharsets.UTF_8);
+            List<String> values = store.computeIfAbsent(key, k -> new ArrayList<>());
+            values.add(value);
         }
     }
 
@@ -75,13 +70,21 @@ public class QueryParameterMap {
         this(req.getQueryString());
     }
 
+    /**
+     * @deprecated use {@link #QueryParameterMap(HttpServletRequest)}
+     */
+    @Deprecated
+    public QueryParameterMap(javax.servlet.http.HttpServletRequest req) {
+        this(req.getQueryString());
+    }
+
     public String get(String name) {
         List<String> v = store.get(name);
-        return v!=null?v.get(0):null;
+        return v != null ? v.get(0) : null;
     }
 
     public List<String> getAll(String name) {
         List<String> v = store.get(name);
-        return v!=null? Collections.unmodifiableList(v) : Collections.<String>emptyList();
+        return v != null ? Collections.unmodifiableList(v) : Collections.emptyList();
     }
 }
