@@ -21,43 +21,42 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package jenkins.install;
 
 import static java.util.logging.Level.SEVERE;
 import static java.util.logging.Level.WARNING;
 
-import java.io.File;
-import java.io.IOException;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
-import java.util.logging.Logger;
-
-import javax.annotation.CheckForNull;
-import javax.annotation.Nonnull;
-import javax.inject.Provider;
-
-import org.apache.commons.io.FileUtils;
-import org.apache.commons.lang.StringUtils;
-import org.kohsuke.accmod.Restricted;
-import org.kohsuke.accmod.restrictions.NoExternalUse;
-
-import com.google.common.base.Function;
-import com.thoughtworks.xstream.XStream;
-
+import edu.umd.cs.findbugs.annotations.CheckForNull;
+import edu.umd.cs.findbugs.annotations.NonNull;
 import hudson.Functions;
-import hudson.Main;
+import hudson.Util;
 import hudson.model.UpdateCenter.DownloadJob.InstallationStatus;
 import hudson.model.UpdateCenter.DownloadJob.Installing;
 import hudson.model.UpdateCenter.InstallationJob;
 import hudson.model.UpdateCenter.UpdateCenterJob;
 import hudson.util.VersionNumber;
+import hudson.util.XStream2;
+import jakarta.inject.Provider;
+import java.io.File;
+import java.io.IOException;
+import java.io.UncheckedIOException;
+import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
+import java.util.function.Function;
 import java.util.logging.Level;
+import java.util.logging.Logger;
 import jenkins.model.Jenkins;
 import jenkins.util.SystemProperties;
 import jenkins.util.xml.XMLUtils;
+import org.kohsuke.accmod.Restricted;
+import org.kohsuke.accmod.restrictions.NoExternalUse;
 
 /**
  * Jenkins install utilities.
@@ -78,37 +77,39 @@ public class InstallUtil {
      * Simple chain pattern using iterator.next()
      */
     private static class ProviderChain<T> implements Provider<T> {
-        private final Iterator<Function<Provider<T>,T>> functions;
-        public ProviderChain(Iterator<Function<Provider<T>,T>> functions) {
+        private final Iterator<Function<Provider<T>, T>> functions;
+
+        ProviderChain(Iterator<Function<Provider<T>, T>> functions) {
             this.functions = functions;
         }
+
         @Override
         public T get() {
             return functions.next().apply(this);
         }
     }
-    
+
     /**
      * Proceed to the state following the provided one
      */
     public static void proceedToNextStateFrom(InstallState prior) {
         InstallState next = getNextInstallState(prior);
         if (next != null) {
-            Jenkins.getInstance().setInstallState(next);
+            Jenkins.get().setInstallState(next);
         }
     }
-    
+
     /**
      * Returns the next state during a transition from the current install state
      */
     /*package*/ static InstallState getNextInstallState(InstallState current) {
-        List<Function<Provider<InstallState>,InstallState>> installStateFilterChain = new ArrayList<>();
+        List<Function<Provider<InstallState>, InstallState>> installStateFilterChain = new ArrayList<>();
         for (InstallStateFilter setupExtension : InstallStateFilter.all()) {
             installStateFilterChain.add(next -> setupExtension.getNextInstallState(current, next));
         }
         // Terminal condition: getNextState() on the current install state
         installStateFilterChain.add(input -> {
-            // Initially, install state is unknown and 
+            // Initially, install state is unknown and
             // needs to be determined
             if (current == null || InstallState.UNKNOWN.equals(current)) {
                 return getDefaultInstallState();
@@ -126,11 +127,11 @@ public class InstallUtil {
             }
             return states.get(current);
         });
-        
+
         ProviderChain<InstallState> chain = new ProviderChain<>(installStateFilterChain.iterator());
         return chain.get();
     }
-    
+
     private static InstallState getDefaultInstallState() {
         // Support a simple state override. Useful for testing.
         String stateOverride = System.getProperty("jenkins.install.state", System.getenv("jenkins.install.state"));
@@ -138,21 +139,21 @@ public class InstallUtil {
             try {
                 return InstallState.valueOf(stateOverride.toUpperCase());
             } catch (RuntimeException e) {
-                throw new IllegalStateException("Unknown install state override specified on the commandline: '" + stateOverride + "'.");
+                throw new IllegalStateException("Unknown install state override specified on the commandline: '" + stateOverride + "'.", e);
             }
         }
-        
+
         // Support a 3-state flag for running or disabling the setup wizard
         String shouldRunFlag = SystemProperties.getString("jenkins.install.runSetupWizard");
         boolean shouldRun = "true".equalsIgnoreCase(shouldRunFlag);
         boolean shouldNotRun = "false".equalsIgnoreCase(shouldRunFlag);
-        
+
         // install wizard will always run if environment specified
         if (!shouldRun) {
             if (Functions.getIsUnitTest()) {
                 return InstallState.TEST;
             }
-            
+
             if (SystemProperties.getBoolean("hudson.Main.development")) {
                 return InstallState.DEVELOPMENT;
             }
@@ -160,32 +161,16 @@ public class InstallUtil {
 
         VersionNumber lastRunVersion = new VersionNumber(getLastExecVersion());
 
-        // Neither the top level config or the lastExecVersionFile have a version
-        // stored in them, which means it's a new install.
-        if (FORCE_NEW_INSTALL_VERSION.equals(lastRunVersion) || lastRunVersion.compareTo(NEW_INSTALL_VERSION) == 0) {
-            Jenkins j = Jenkins.getInstance();
-            
+        // has the setup wizard been completed?
+        if (!SetupWizard.getUpdateStateFile().exists()) {
+            Jenkins j = Jenkins.get();
+
             // Allow for skipping
-            if(shouldNotRun) {
-                try {
-                    InstallState.INITIAL_SETUP_COMPLETED.initializeState();
-                    return j.getInstallState();
-                } catch (RuntimeException e) {
-                    throw e;
-                } catch (Exception e) {
-                    throw new RuntimeException(e);
-                }
+            if (shouldNotRun) {
+                InstallState.INITIAL_SETUP_COMPLETED.initializeState();
+                return j.getInstallState();
             }
 
-            if (!FORCE_NEW_INSTALL_VERSION.equals(lastRunVersion)) {
-                // Edge case: used Jenkins 1 but did not save the system config page,
-                // the version is not persisted and returns 1.0, so try to check if
-                // they actually did anything
-                if (!j.getItemMap().isEmpty() || !j.getNodes().isEmpty()) {
-                    return InstallState.UPGRADE;
-                }
-            }
-            
             return InstallState.INITIAL_SECURITY_SETUP;
         }
 
@@ -221,14 +206,14 @@ public class InstallUtil {
      * @return The last saved Jenkins instance version.
      * @see #saveLastExecVersion()
      */
-    public static @Nonnull String getLastExecVersion() {
+    public static @NonNull String getLastExecVersion() {
         File lastExecVersionFile = getLastExecVersionFile();
         if (lastExecVersionFile.exists()) {
             try {
-                String version = FileUtils.readFileToString(lastExecVersionFile);
+                String version = Files.readString(Util.fileToPath(lastExecVersionFile), Charset.defaultCharset());
                 // JENKINS-37438 blank will force the setup
                 // wizard regardless of current state of the system
-                if (StringUtils.isBlank(version)) {
+                if (version == null || version.isBlank()) {
                     return FORCE_NEW_INSTALL_VERSION.toString();
                 }
                 return version;
@@ -249,7 +234,7 @@ public class InstallUtil {
             if (configFile.exists()) {
                 try {
                     String lastVersion = XMLUtils.getValue("/hudson/version", configFile);
-                    if (lastVersion.length() > 0) {
+                    if (!lastVersion.isEmpty()) {
                         LOGGER.log(Level.FINE, "discovered serialized lastVersion {0}", lastVersion);
                         return lastVersion;
                     }
@@ -265,25 +250,25 @@ public class InstallUtil {
      * Save a specific version as the last execute version.
      * @param version The version to save.
      */
-    static void saveLastExecVersion(@Nonnull String version) {
+    static void saveLastExecVersion(@NonNull String version) {
         File lastExecVersionFile = getLastExecVersionFile();
         try {
-            FileUtils.write(lastExecVersionFile, version);
+            Files.writeString(Util.fileToPath(lastExecVersionFile), version, Charset.defaultCharset());
         } catch (IOException e) {
             LOGGER.log(SEVERE, "Failed to save " + lastExecVersionFile.getAbsolutePath(), e);
         }
     }
 
     static File getConfigFile() {
-        return new File(Jenkins.getInstance().getRootDir(), "config.xml");
+        return new File(Jenkins.get().getRootDir(), "config.xml");
     }
 
     static File getLastExecVersionFile() {
-        return new File(Jenkins.getInstance().getRootDir(), "jenkins.install.InstallUtil.lastExecVersion");
+        return new File(Jenkins.get().getRootDir(), "jenkins.install.InstallUtil.lastExecVersion");
     }
 
     static File getInstallingPluginsFile() {
-        return new File(Jenkins.getInstance().getRootDir(), "jenkins.install.InstallUtil.installingPlugins");
+        return new File(Jenkins.get().getRootDir(), "jenkins.install.InstallUtil.installingPlugins");
     }
 
     private static String getCurrentExecVersion() {
@@ -298,40 +283,43 @@ public class InstallUtil {
      * Returns a list of any plugins that are persisted in the installing list
      */
     @SuppressWarnings("unchecked")
-	public static synchronized @CheckForNull Map<String,String> getPersistedInstallStatus() {
+    public static synchronized @CheckForNull Map<String, String> getPersistedInstallStatus() {
         File installingPluginsFile = getInstallingPluginsFile();
-        if(installingPluginsFile == null || !installingPluginsFile.exists()) {
-		return null;
+        if (installingPluginsFile == null || !installingPluginsFile.exists()) {
+            return null;
         }
-        return (Map<String,String>)new XStream().fromXML(installingPluginsFile);
+        return (Map<String, String>) new XStream2().fromXML(installingPluginsFile);
     }
 
     /**
      * Persists a list of installing plugins; this is used in the case Jenkins fails mid-installation and needs to be restarted
-     * @param installingPlugins
      */
     public static synchronized void persistInstallStatus(List<UpdateCenterJob> installingPlugins) {
         File installingPluginsFile = getInstallingPluginsFile();
-	if(installingPlugins == null || installingPlugins.isEmpty()) {
-		installingPluginsFile.delete();
-		return;
-	}
-	LOGGER.fine("Writing install state to: " + installingPluginsFile.getAbsolutePath());
-	Map<String,String> statuses = new HashMap<String,String>();
-	for(UpdateCenterJob j : installingPlugins) {
-		if(j instanceof InstallationJob && j.getCorrelationId() != null) { // only include install jobs with a correlation id (directly selected)
-			InstallationJob ij = (InstallationJob)j;
-			InstallationStatus status = ij.status;
-			String statusText = status.getType();
-			if(status instanceof Installing) { // flag currently installing plugins as pending
-				statusText = "Pending";
-			}
-			statuses.put(ij.plugin.name, statusText);
-		}
-	}
+        if (installingPlugins == null || installingPlugins.isEmpty()) {
+            try {
+                Files.deleteIfExists(installingPluginsFile.toPath());
+            } catch (IOException e) {
+                throw new UncheckedIOException(e);
+            }
+            return;
+        }
+        LOGGER.fine("Writing install state to: " + installingPluginsFile.getAbsolutePath());
+        Map<String, String> statuses = new HashMap<>();
+        for (UpdateCenterJob j : installingPlugins) {
+            if (j instanceof InstallationJob && j.getCorrelationId() != null) { // only include install jobs with a correlation id (directly selected)
+                InstallationJob ij = (InstallationJob) j;
+                InstallationStatus status = ij.status;
+                String statusText = status.getType();
+                if (status instanceof Installing) { // flag currently installing plugins as pending
+                    statusText = "Pending";
+                }
+                statuses.put(ij.plugin.name, statusText);
+            }
+        }
         try {
-		String installingPluginXml = new XStream().toXML(statuses);
-            FileUtils.write(installingPluginsFile, installingPluginXml);
+            String installingPluginXml = new XStream2().toXML(statuses);
+            Files.writeString(Util.fileToPath(installingPluginsFile), installingPluginXml, StandardCharsets.UTF_8);
         } catch (IOException e) {
             LOGGER.log(SEVERE, "Failed to save " + installingPluginsFile.getAbsolutePath(), e);
         }
@@ -340,7 +328,7 @@ public class InstallUtil {
     /**
      * Call to remove any active install status
      */
-	public static void clearInstallStatus() {
-		persistInstallStatus(null);
-	}
+    public static void clearInstallStatus() {
+        persistInstallStatus(null);
+    }
 }
