@@ -21,12 +21,8 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package jenkins.util;
-
-import java.io.Serializable;
-import java.util.Map;
-
-import org.apache.commons.lang.StringUtils;
 
 import com.thoughtworks.xstream.XStream;
 import com.thoughtworks.xstream.converters.Converter;
@@ -34,6 +30,8 @@ import com.thoughtworks.xstream.converters.MarshallingContext;
 import com.thoughtworks.xstream.converters.UnmarshallingContext;
 import com.thoughtworks.xstream.io.HierarchicalStreamReader;
 import com.thoughtworks.xstream.io.HierarchicalStreamWriter;
+import java.io.Serializable;
+import java.util.Map;
 
 /**
  * {@link TreeString} is an alternative string representation that saves the
@@ -45,8 +43,6 @@ import com.thoughtworks.xstream.io.HierarchicalStreamWriter;
  * @author Kohsuke Kawaguchi
  * @since 1.473
  */
-// CHECKSTYLE:OFF
-@SuppressWarnings("PMD")
 public final class TreeString implements Serializable {
     private static final long serialVersionUID = 3621959682117480904L;
 
@@ -68,7 +64,7 @@ public final class TreeString implements Serializable {
     }
 
     /* package */TreeString(final TreeString parent, final String label) {
-        assert parent == null || label.length() > 0; // if there's a parent,
+        assert parent == null || !label.isEmpty(); // if there's a parent,
                                                      // label can't be empty.
 
         this.parent = parent;
@@ -117,15 +113,15 @@ public final class TreeString implements Serializable {
             return false;
         }
         return rhs.getClass() == TreeString.class
-                && ((TreeString)rhs).getLabel().equals(getLabel());
+                && ((TreeString) rhs).getLabel().equals(getLabel());
     }
 
     @Override
     public int hashCode() {
         int h = parent == null ? 0 : parent.hashCode();
 
-        for (int i = 0; i < label.length; i++) {
-            h = 31 * h + label[i];
+        for (char c : label) {
+            h = 31 * h + c;
         }
 
         assert toString().hashCode() == h;
@@ -168,7 +164,8 @@ public final class TreeString implements Serializable {
     }
 
     public boolean isBlank() {
-        return StringUtils.isBlank(toString());
+        String string = toString();
+        return string == null || string.isBlank();
     }
 
     public static String toString(final TreeString t) {
@@ -193,31 +190,29 @@ public final class TreeString implements Serializable {
      * Default {@link Converter} implementation for XStream that does interning
      * scoped to one unmarshalling.
      */
-    @SuppressWarnings("all")
     public static final class ConverterImpl implements Converter {
         public ConverterImpl(final XStream xs) {}
 
+        @Override
         public void marshal(final Object source, final HierarchicalStreamWriter writer,
                 final MarshallingContext context) {
             writer.setValue(source == null ? null : source.toString());
         }
 
+        @Override
         public Object unmarshal(final HierarchicalStreamReader reader, final UnmarshallingContext context) {
-            TreeStringBuilder builder = (TreeStringBuilder)context.get(TreeStringBuilder.class);
+            TreeStringBuilder builder = (TreeStringBuilder) context.get(TreeStringBuilder.class);
             if (builder == null) {
                 context.put(TreeStringBuilder.class, builder = new TreeStringBuilder());
 
                 // dedup at the end
                 final TreeStringBuilder _builder = builder;
-                context.addCompletionCallback(new Runnable() {
-                    public void run() {
-                        _builder.dedup();
-                    }
-                }, 0);
+                context.addCompletionCallback(_builder::dedup, 0);
             }
             return builder.intern(reader.getValue());
         }
 
+        @Override
         public boolean canConvert(final Class type) {
             return type == TreeString.class;
         }
