@@ -1,138 +1,78 @@
 package hudson.cli;
 
-import static org.hamcrest.CoreMatchers.equalTo;
-import static org.hamcrest.CoreMatchers.is;
-import static org.hamcrest.CoreMatchers.containsString;
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.junit.Assert.fail;
-import static org.powermock.api.mockito.PowerMockito.mock;
-import static org.powermock.api.mockito.PowerMockito.mockStatic;
-import static org.powermock.api.mockito.PowerMockito.when;
-import hudson.model.Item;
-import hudson.model.ItemGroup;
-import hudson.model.TopLevelItem;
-import hudson.model.ViewTest.CompositeView;
-import hudson.model.View;
+import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.is;
+import static org.junit.Assert.assertThrows;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.mockStatic;
+import static org.mockito.Mockito.when;
 
+import hudson.model.TopLevelItem;
+import hudson.model.View;
+import hudson.model.ViewTest.CompositeView;
 import java.io.ByteArrayOutputStream;
+import java.io.IOException;
 import java.io.PrintStream;
+import java.io.UncheckedIOException;
+import java.nio.charset.Charset;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
-
-
+import java.util.Set;
 import jenkins.model.Jenkins;
-import jenkins.model.ModifiableTopLevelItemGroup;
-
 import org.hamcrest.Description;
 import org.hamcrest.TypeSafeMatcher;
 import org.junit.Before;
-import org.junit.Ignore;
 import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.mockito.MockedStatic;
 import org.mockito.Mockito;
-import org.powermock.core.classloader.annotations.PrepareForTest;
-import org.powermock.core.classloader.annotations.SuppressStaticInitializationFor;
-import org.powermock.modules.junit4.PowerMockRunner;
 
-@RunWith(PowerMockRunner.class)
-@PrepareForTest(Jenkins.class)
-@SuppressStaticInitializationFor("hudson.cli.CLICommand")
 public class ListJobsCommandTest {
 
-    private /*final*/ Jenkins jenkins;
     private /*final*/ ListJobsCommand command;
     private final ByteArrayOutputStream stdout = new ByteArrayOutputStream();
     private final ByteArrayOutputStream stderr = new ByteArrayOutputStream();
 
     @Before
     public void setUp() {
-
-        jenkins = mock(Jenkins.class);
-        mockStatic(Jenkins.class);
-        when(Jenkins.getInstance()).thenReturn(jenkins);
-        when(Jenkins.getActiveInstance()).thenReturn(jenkins);
         command = mock(ListJobsCommand.class, Mockito.CALLS_REAL_METHODS);
         command.stdout = new PrintStream(stdout);
         command.stderr = new PrintStream(stderr);
     }
 
     @Test
-    public void failForNonexistingName() throws Exception {
+    public void failForNonexistentName() {
+        Jenkins jenkins = mock(Jenkins.class);
 
-        when(jenkins.getView("NoSuchViewOrItemGroup")).thenReturn(null);
-        when(jenkins.getItemByFullName("NoSuchViewOrItemGroup")).thenReturn(null);
+        try (MockedStatic<Jenkins> mocked = mockStatic(Jenkins.class)) {
+            mocked.when(Jenkins::get).thenReturn(jenkins);
+            when(jenkins.getView("NoSuchViewOrItemGroup")).thenReturn(null);
+            when(jenkins.getItemByFullName("NoSuchViewOrItemGroup")).thenReturn(null);
 
-        try {
-            runWith("NoSuchViewOrItemGroup");
-            fail("Exception should be thrown in the previous call.");
-        } catch (IllegalArgumentException e) { // Expected
+            final IllegalArgumentException e = assertThrows(IllegalArgumentException.class, () -> runWith("NoSuchViewOrItemGroup"));
             assertThat(e.getMessage(), containsString("No view or item group with the given name 'NoSuchViewOrItemGroup' found."));
+            assertThat(stdout, is(empty()));
         }
-        assertThat(stdout, is(empty()));
-    }
-
-    /*
-    @Test
-    @Issue("JENKINS-18393")
-    public void failForMatrixProject() throws Exception {
-
-        final MatrixProject matrix = mock(MatrixProject.class);
-        final MatrixConfiguration config = mock(MatrixConfiguration.class);
-        when(matrix.getItems()).thenReturn(Arrays.asList(config));
-
-        when(jenkins.getView("MatrixJob")).thenReturn(null);
-        when(jenkins.getItemByFullName("MatrixJob")).thenReturn(matrix);
-
-        assertThat(runWith("MatrixJob"), equalTo(-1));
-        assertThat(stdout, is(empty()));
-        assertThat(stderr.toString(), containsString("No view or item group with the given name found"));
-    }
-    */
-
-    @Ignore("TODO enable when you figure out why ListJobsCommandTest$1Folder$$EnhancerByMockitoWithCGLIB$$f124784a calls ReturnsEmptyValues, or just use MockFolder and move to the test module with JenkinsRule")
-    @Test
-    public void getAllJobsFromFolders() throws Exception {
-
-        abstract class Folder implements ModifiableTopLevelItemGroup, TopLevelItem {
-        }
-
-        final Folder folder = mock(Folder.class);
-        final Folder nestedFolder = mock(Folder.class);
-        when(folder.getDisplayName()).thenReturn("Folder");
-        when(nestedFolder.getDisplayName()).thenReturn("NestedFolder");
-
-        final TopLevelItem job = job("job");
-        final TopLevelItem nestedJob = job("nestedJob");
-        when(job.hasPermission(Item.READ)).thenReturn(true);
-        when(nestedJob.hasPermission(Item.READ)).thenReturn(true);
-        when(job.getRelativeNameFrom((ItemGroup<TopLevelItem>) folder)).thenReturn("job");
-        when(nestedJob.getRelativeNameFrom((ItemGroup<TopLevelItem>) folder)).thenReturn("nestedJob");
-
-        when(folder.getItems()).thenReturn(Arrays.asList(nestedFolder, job));
-        when(nestedFolder.getItems()).thenReturn(Arrays.asList(nestedJob));
-
-        when(jenkins.getView("OuterFolder")).thenReturn(null);
-        when(jenkins.getItemByFullName("OuterFolder")).thenReturn(folder);
-
-        assertThat(runWith("OuterFolder"), equalTo(0));
-        assertThat(stdout, listsJobs("job", "nestedJob"));
-        assertThat(stderr, is(empty()));
     }
 
     @Test
     public void getAllJobsForEmptyName() throws Exception {
 
-        final Collection<TopLevelItem> jenkinsJobs = Arrays.asList(
+        final List<TopLevelItem> jenkinsJobs = Arrays.asList(
                 job("some-job"), job("some-other-job")
         );
+        Jenkins jenkins = mock(Jenkins.class);
+        try (MockedStatic<Jenkins> mocked = mockStatic(Jenkins.class)) {
+            mocked.when(Jenkins::get).thenReturn(jenkins);
+            when(jenkins.getItems()).thenReturn(jenkinsJobs);
 
-        when(jenkins.getItems()).thenReturn((List<TopLevelItem>) jenkinsJobs);
-
-        assertThat(runWith(null), equalTo(0));
-        assertThat(stderr, is(empty()));
-        assertThat(stdout, listsJobs("some-job", "some-other-job"));
+            assertThat(runWith(null), equalTo(0));
+            assertThat(stderr, is(empty()));
+            assertThat(stdout, listsJobs("some-job", "some-other-job"));
+        }
     }
 
     @Test
@@ -145,11 +85,15 @@ public class ListJobsCommandTest {
         final View customView = view();
         when(customView.getItems()).thenReturn(viewJobs);
 
-        when(jenkins.getView("CustomView")).thenReturn(customView);
+        Jenkins jenkins = mock(Jenkins.class);
+        try (MockedStatic<Jenkins> mocked = mockStatic(Jenkins.class)) {
+            mocked.when(Jenkins::get).thenReturn(jenkins);
+            when(jenkins.getView("CustomView")).thenReturn(customView);
 
-        assertThat(runWith("CustomView"), equalTo(0));
-        assertThat(stderr, is(empty()));
-        assertThat(stdout, listsJobs("some-job", "some-other-job"));
+            assertThat(runWith("CustomView"), equalTo(0));
+            assertThat(stderr, is(empty()));
+            assertThat(stdout, listsJobs("some-job", "some-other-job"));
+        }
     }
 
     @Test
@@ -168,13 +112,17 @@ public class ListJobsCommandTest {
         when(rootView.getViews()).thenReturn(Arrays.asList(leftView, rightView));
         when(rootView.getItems()).thenReturn(Arrays.asList(rootJob, sharedJob));
         when(leftView.getItems()).thenReturn(Arrays.asList(leftJob, sharedJob));
-        when(rightView.getItems()).thenReturn(Arrays.asList(rightJob));
+        when(rightView.getItems()).thenReturn(List.of(rightJob));
 
-        when(jenkins.getView("Root")).thenReturn(rootView);
+        Jenkins jenkins = mock(Jenkins.class);
+        try (MockedStatic<Jenkins> mocked = mockStatic(Jenkins.class)) {
+            mocked.when(Jenkins::get).thenReturn(jenkins);
+            when(jenkins.getView("Root")).thenReturn(rootView);
 
-        assertThat(runWith("Root"), equalTo(0));
-        assertThat(stderr, is(empty()));
-        assertThat(stdout, listsJobs("rootJob", "leftJob", "rightJob", "sharedJob"));
+            assertThat(runWith("Root"), equalTo(0));
+            assertThat(stderr, is(empty()));
+            assertThat(stdout, listsJobs("rootJob", "leftJob", "rightJob", "sharedJob"));
+        }
     }
 
     private View view() {
@@ -205,12 +153,19 @@ public class ListJobsCommandTest {
 
     private TypeSafeMatcher<ByteArrayOutputStream> empty() {
 
-        return new TypeSafeMatcher<ByteArrayOutputStream>() {
+        return new TypeSafeMatcher<>() {
 
             @Override
             protected boolean matchesSafely(ByteArrayOutputStream item) {
-
-                return item.toString().isEmpty();
+                Charset charset;
+                try {
+                    charset = command.getClientCharset();
+                } catch (IOException e) {
+                    throw new UncheckedIOException(e);
+                } catch (InterruptedException e) {
+                    throw new RuntimeException(e);
+                }
+                return item.toString(charset).isEmpty();
             }
 
             @Override
@@ -223,16 +178,22 @@ public class ListJobsCommandTest {
 
     private TypeSafeMatcher<ByteArrayOutputStream> listsJobs(final String... expected) {
 
-        return new TypeSafeMatcher<ByteArrayOutputStream>() {
+        return new TypeSafeMatcher<>() {
 
             @Override
             protected boolean matchesSafely(ByteArrayOutputStream item) {
 
-                final HashSet<String> jobs = new HashSet<String>(
-                        Arrays.asList(item.toString().split(System.getProperty("line.separator")))
-                );
+                Charset charset;
+                try {
+                    charset = command.getClientCharset();
+                } catch (IOException e) {
+                    throw new UncheckedIOException(e);
+                } catch (InterruptedException e) {
+                    throw new RuntimeException(e);
+                }
+                Set<String> jobs = new HashSet<>(Arrays.asList(item.toString(charset).split(System.lineSeparator())));
 
-                return new HashSet<String>(Arrays.asList(expected)).equals(jobs);
+                return new HashSet<>(Arrays.asList(expected)).equals(jobs);
             }
 
             @Override
