@@ -1,15 +1,18 @@
 package hudson.util;
 
-import org.apache.commons.io.FileUtils;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.ClassRule;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.TemporaryFolder;
-import org.jvnet.hudson.test.Issue;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.is;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertThrows;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assume.assumeFalse;
+import static org.junit.Assume.assumeThat;
 
-import javax.annotation.Nullable;
+import edu.umd.cs.findbugs.annotations.Nullable;
+import hudson.Functions;
 import java.io.File;
 import java.io.IOException;
 import java.nio.charset.Charset;
@@ -19,16 +22,13 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.attribute.PosixFilePermission;
 import java.util.Set;
-
-import static org.hamcrest.CoreMatchers.equalTo;
-import static org.hamcrest.core.Is.is;
-import static org.hamcrest.core.StringContains.containsString;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
-import static org.junit.Assume.assumeThat;
+import org.junit.After;
+import org.junit.Before;
+import org.junit.BeforeClass;
+import org.junit.ClassRule;
+import org.junit.Test;
+import org.junit.rules.TemporaryFolder;
+import org.jvnet.hudson.test.Issue;
 
 public class AtomicFileWriterTest {
     private static final String PREVIOUS = "previous value \n blah";
@@ -69,12 +69,18 @@ public class AtomicFileWriterTest {
     @Before
     public void setUp() throws IOException {
         af = tmp.newFile();
-        FileUtils.writeStringToFile(af, PREVIOUS);
+        Files.writeString(af.toPath(), PREVIOUS, Charset.defaultCharset());
         afw = new AtomicFileWriter(af.toPath(), Charset.defaultCharset());
+    }
+
+    @After
+    public void tearDown() throws IOException {
+        afw.abort();
     }
 
     @Test
     public void symlinkToDirectory() throws Exception {
+        assumeFalse(Functions.isWindows());
         final File folder = tmp.newFolder();
         final File containingSymlink = tmp.newFolder();
         final Path zeSymlink = Files.createSymbolicLink(Paths.get(containingSymlink.getAbsolutePath(), "ze_symlink"),
@@ -83,11 +89,11 @@ public class AtomicFileWriterTest {
 
         final Path childFileInSymlinkToDir = Paths.get(zeSymlink.toString(), "childFileInSymlinkToDir");
 
-        new AtomicFileWriter(childFileInSymlinkToDir, Charset.forName("UTF-8"));
+        new AtomicFileWriter(childFileInSymlinkToDir, StandardCharsets.UTF_8).abort();
     }
 
     @Test
-    public void createFile() throws Exception {
+    public void createFile() {
         // Verify the file we created exists
         assertTrue(Files.exists(afw.getTemporaryPath()));
     }
@@ -104,7 +110,7 @@ public class AtomicFileWriterTest {
 
         // Then
         assertEquals("File writer did not properly flush to temporary file",
-                expectedContent.length()*2+1, Files.size(afw.getTemporaryPath()));
+                expectedContent.length() * 2 + 1, Files.size(afw.getTemporaryPath()));
     }
 
     @Test
@@ -117,8 +123,8 @@ public class AtomicFileWriterTest {
         afw.commit();
 
         // Then
-        assertEquals(expectedContent.length()+3, Files.size(af.toPath()));
-        assertEquals(expectedContent+"hey", FileUtils.readFileToString(af));
+        assertEquals(expectedContent.length() + 3, Files.size(af.toPath()));
+        assertEquals(expectedContent + "hey", Files.readString(af.toPath(), Charset.defaultCharset()));
     }
 
     @Test
@@ -131,20 +137,16 @@ public class AtomicFileWriterTest {
 
         // Then
         assertTrue(Files.notExists(afw.getTemporaryPath()));
-        assertEquals(PREVIOUS, FileUtils.readFileToString(af));
+        assertEquals(PREVIOUS, Files.readString(af.toPath(), Charset.defaultCharset()));
     }
 
     @Test
     public void indexOutOfBoundsLeavesOriginalUntouched() throws Exception {
         // Given
-        try {
-            afw.write(expectedContent, 0, expectedContent.length() + 10);
-            fail("exception expected");
-        } catch (IndexOutOfBoundsException e) {
-        }
-
-        assertEquals(PREVIOUS, FileUtils.readFileToString(af));
+        assertThrows(IndexOutOfBoundsException.class, () -> afw.write(expectedContent, 0, expectedContent.length() + 10));
+        assertEquals(PREVIOUS, Files.readString(af.toPath(), Charset.defaultCharset()));
     }
+
     @Test
     public void badPath() throws Exception {
         final File newFile = tmp.newFile();
@@ -153,18 +155,15 @@ public class AtomicFileWriterTest {
         assertTrue(newFile.exists());
         assertFalse(parentExistsAndIsAFile.exists());
 
-        try {
-            new AtomicFileWriter(parentExistsAndIsAFile.toPath(), Charset.forName("UTF-8"));
-            fail("Expected a failure");
-        } catch (IOException e) {
-            assertThat(e.getMessage(),
-                       containsString("exists and is neither a directory nor a symlink to a directory"));
-        }
+        final IOException e = assertThrows(IOException.class,
+                () -> new AtomicFileWriter(parentExistsAndIsAFile.toPath(), StandardCharsets.UTF_8));
+        assertThat(e.getMessage(),
+                   containsString("exists and is neither a directory nor a symlink to a directory"));
     }
 
     @Issue("JENKINS-48407")
     @Test
-    public void checkPermissionsRespectUmask() throws IOException, InterruptedException {
+    public void checkPermissionsRespectUmask() throws IOException {
 
         final File newFile = tmp.newFile();
         boolean posixSupported = isPosixSupported(newFile);
