@@ -21,8 +21,10 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package jenkins.widgets;
 
+import hudson.model.Action;
 import hudson.model.Build;
 import hudson.model.FreeStyleBuild;
 import hudson.model.FreeStyleProject;
@@ -31,26 +33,23 @@ import hudson.model.MockItem;
 import hudson.model.ModelObject;
 import hudson.model.ParameterValue;
 import hudson.model.ParametersAction;
-import hudson.model.Queue;
 import hudson.model.Result;
 import hudson.model.Run;
 import hudson.model.StringParameterValue;
-
-import org.junit.Assert;
-import org.junit.Test;
-import org.jvnet.hudson.test.Issue;
-import org.mockito.Mockito;
-
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Lists;
+import java.util.Set;
+import java.util.stream.Collectors;
+import jenkins.model.queue.QueueItem;
+import org.junit.Assert;
+import org.junit.Test;
+import org.jvnet.hudson.test.Issue;
+import org.mockito.Mockito;
 
 /**
  * @author <a href="mailto:tom.fennelly@gmail.com">tom.fennelly@gmail.com</a>
@@ -65,13 +64,13 @@ public class HistoryPageFilterTest {
     @Test
     public void test_latest_empty_page() {
         HistoryPageFilter<ModelObject> historyPageFilter = newPage(5, null, null);
-        List<ModelObject> itemList = new ArrayList<>();
+        Iterable<ModelObject> itemList = Collections.emptyList();
 
         historyPageFilter.add(itemList);
-        Assert.assertEquals(false, historyPageFilter.hasUpPage);
-        Assert.assertEquals(false, historyPageFilter.hasDownPage);
-        Assert.assertEquals(true, historyPageFilter.queueItems.isEmpty());
-        Assert.assertEquals(true, historyPageFilter.runs.isEmpty());
+        Assert.assertFalse(historyPageFilter.hasUpPage);
+        Assert.assertFalse(historyPageFilter.hasDownPage);
+        Assert.assertTrue(historyPageFilter.queueItems.isEmpty());
+        Assert.assertTrue(historyPageFilter.runs.isEmpty());
     }
 
     /**
@@ -80,13 +79,13 @@ public class HistoryPageFilterTest {
     @Test
     public void test_latest_partial_page() throws IOException {
         HistoryPageFilter<ModelObject> historyPageFilter = newPage(5, null, null);
-        List<ModelObject> runs = newRuns(1, 2);
-        List<Queue.Item> queueItems = newQueueItems(3, 4);
+        Iterable<ModelObject> runs = newRuns(1, 2);
+        var queueItems = newQueueItems(3, 4);
 
         historyPageFilter.add(runs, queueItems);
 
-        Assert.assertEquals(false, historyPageFilter.hasUpPage);
-        Assert.assertEquals(false, historyPageFilter.hasDownPage);
+        Assert.assertFalse(historyPageFilter.hasUpPage);
+        Assert.assertFalse(historyPageFilter.hasDownPage);
         Assert.assertEquals(2, historyPageFilter.queueItems.size());
         Assert.assertEquals(2, historyPageFilter.runs.size());
 
@@ -104,13 +103,13 @@ public class HistoryPageFilterTest {
     @Test
     public void test_latest_longer_list() throws IOException {
         HistoryPageFilter<ModelObject> historyPageFilter = newPage(5, null, null);
-        List<ModelObject> runs = newRuns(1, 10);
-        List<Queue.Item> queueItems = newQueueItems(11, 12);
+        Iterable<ModelObject> runs = newRuns(1, 10);
+        var queueItems = newQueueItems(11, 12);
 
         historyPageFilter.add(runs, queueItems);
 
-        Assert.assertEquals(false, historyPageFilter.hasUpPage);
-        Assert.assertEquals(true, historyPageFilter.hasDownPage);
+        Assert.assertFalse(historyPageFilter.hasUpPage);
+        Assert.assertTrue(historyPageFilter.hasDownPage);
         Assert.assertEquals(2, historyPageFilter.queueItems.size());
         Assert.assertEquals(3, historyPageFilter.runs.size());
 
@@ -126,12 +125,12 @@ public class HistoryPageFilterTest {
     @Test
     public void test_olderThan_gt_newest() throws IOException {
         HistoryPageFilter<ModelObject> historyPageFilter = newPage(5, null, 11L);
-        List<ModelObject> itemList = newRuns(1, 10);
+        Iterable<ModelObject> itemList = newRuns(1, 10);
 
         historyPageFilter.add(itemList);
 
-        Assert.assertEquals(false, historyPageFilter.hasUpPage);
-        Assert.assertEquals(true, historyPageFilter.hasDownPage);
+        Assert.assertFalse(historyPageFilter.hasUpPage);
+        Assert.assertTrue(historyPageFilter.hasDownPage);
         Assert.assertEquals(5, historyPageFilter.runs.size());
 
         Assert.assertEquals(HistoryPageEntry.getEntryId(10), historyPageFilter.newestOnPage);
@@ -145,12 +144,12 @@ public class HistoryPageFilterTest {
     @Test
     public void test_olderThan_lt_oldest() throws IOException {
         HistoryPageFilter<ModelObject> historyPageFilter = newPage(5, null, 0L);
-        List<ModelObject> itemList = newRuns(1, 10);
+        Iterable<ModelObject> itemList = newRuns(1, 10);
 
         historyPageFilter.add(itemList);
 
-        Assert.assertEquals(true, historyPageFilter.hasUpPage);
-        Assert.assertEquals(false, historyPageFilter.hasDownPage);
+        Assert.assertTrue(historyPageFilter.hasUpPage);
+        Assert.assertFalse(historyPageFilter.hasDownPage);
         Assert.assertEquals(0, historyPageFilter.runs.size());
     }
 
@@ -161,12 +160,12 @@ public class HistoryPageFilterTest {
     @Test
     public void test_olderThan_leaving_part_page() throws IOException {
         HistoryPageFilter<ModelObject> historyPageFilter = newPage(5, null, 4L);
-        List<ModelObject> itemList = newRuns(1, 10);
+        Iterable<ModelObject> itemList = newRuns(1, 10);
 
         historyPageFilter.add(itemList);
 
-        Assert.assertEquals(true, historyPageFilter.hasUpPage);
-        Assert.assertEquals(false, historyPageFilter.hasDownPage);
+        Assert.assertTrue(historyPageFilter.hasUpPage);
+        Assert.assertFalse(historyPageFilter.hasDownPage);
 
         // Should only be 3 runs on the page (oldest 3)
         Assert.assertEquals(3, historyPageFilter.runs.size());
@@ -181,12 +180,12 @@ public class HistoryPageFilterTest {
     @Test
     public void test_olderThan_mid_page() throws IOException {
         HistoryPageFilter<ModelObject> historyPageFilter = newPage(5, null, 8L);
-        List<ModelObject> itemList = newRuns(1, 10);
+        Iterable<ModelObject> itemList = newRuns(1, 10);
 
         historyPageFilter.add(itemList);
 
-        Assert.assertEquals(true, historyPageFilter.hasUpPage);
-        Assert.assertEquals(true, historyPageFilter.hasDownPage);
+        Assert.assertTrue(historyPageFilter.hasUpPage);
+        Assert.assertTrue(historyPageFilter.hasDownPage);
         Assert.assertEquals(5, historyPageFilter.runs.size());
 
         Assert.assertEquals(HistoryPageEntry.getEntryId(7), historyPageFilter.newestOnPage);
@@ -199,12 +198,12 @@ public class HistoryPageFilterTest {
     @Test
     public void test_newerThan_gt_newest() throws IOException {
         HistoryPageFilter<ModelObject> historyPageFilter = newPage(5, 11L, null);
-        List<ModelObject> itemList = newRuns(1, 10);
+        Iterable<ModelObject> itemList = newRuns(1, 10);
 
         historyPageFilter.add(itemList);
 
-        Assert.assertEquals(false, historyPageFilter.hasUpPage);
-        Assert.assertEquals(true, historyPageFilter.hasDownPage);
+        Assert.assertFalse(historyPageFilter.hasUpPage);
+        Assert.assertTrue(historyPageFilter.hasDownPage);
         Assert.assertEquals(0, historyPageFilter.runs.size());
     }
 
@@ -215,12 +214,12 @@ public class HistoryPageFilterTest {
     @Test
     public void test_newerThan_lt_oldest() throws IOException {
         HistoryPageFilter<ModelObject> historyPageFilter = newPage(5, 0L, null);
-        List<ModelObject> itemList = newRuns(1, 10);
+        Iterable<ModelObject> itemList = newRuns(1, 10);
 
         historyPageFilter.add(itemList);
 
-        Assert.assertEquals(true, historyPageFilter.hasUpPage);
-        Assert.assertEquals(false, historyPageFilter.hasDownPage);
+        Assert.assertTrue(historyPageFilter.hasUpPage);
+        Assert.assertFalse(historyPageFilter.hasDownPage);
         Assert.assertEquals(5, historyPageFilter.runs.size());
 
         Assert.assertEquals(HistoryPageEntry.getEntryId(5), historyPageFilter.newestOnPage);
@@ -233,12 +232,12 @@ public class HistoryPageFilterTest {
     @Test
     public void test_newerThan_near_oldest() throws IOException {
         HistoryPageFilter<ModelObject> historyPageFilter = newPage(5, 3L, null);
-        List<ModelObject> itemList = newRuns(1, 10);
+        Iterable<ModelObject> itemList = newRuns(1, 10);
 
         historyPageFilter.add(itemList);
 
-        Assert.assertEquals(true, historyPageFilter.hasUpPage);
-        Assert.assertEquals(true, historyPageFilter.hasDownPage);
+        Assert.assertTrue(historyPageFilter.hasUpPage);
+        Assert.assertTrue(historyPageFilter.hasDownPage);
         Assert.assertEquals(5, historyPageFilter.runs.size());
 
         Assert.assertEquals(HistoryPageEntry.getEntryId(8), historyPageFilter.newestOnPage);
@@ -253,12 +252,12 @@ public class HistoryPageFilterTest {
     @Test
     public void test_newerThan_near_newest() throws IOException {
         HistoryPageFilter<ModelObject> historyPageFilter = newPage(5, 8L, null);
-        List<ModelObject> itemList = newRuns(1, 10);
+        Iterable<ModelObject> itemList = newRuns(1, 10);
 
         historyPageFilter.add(itemList);
 
-        Assert.assertEquals(false, historyPageFilter.hasUpPage);
-        Assert.assertEquals(true, historyPageFilter.hasDownPage);
+        Assert.assertFalse(historyPageFilter.hasUpPage);
+        Assert.assertTrue(historyPageFilter.hasDownPage);
         Assert.assertEquals(5, historyPageFilter.runs.size());
 
         Assert.assertEquals(HistoryPageEntry.getEntryId(10), historyPageFilter.newestOnPage);
@@ -272,13 +271,13 @@ public class HistoryPageFilterTest {
     @Test
     public void test_newerThan_doesntIncludeQueuedItems() throws IOException {
         HistoryPageFilter<ModelObject> historyPageFilter = newPage(5, 5L, null);
-        List<ModelObject> runs = newRuns(1, 10);
-        List<Queue.Item> queueItems = newQueueItems(11, 12);
+        Iterable<ModelObject> runs = newRuns(1, 10);
+        var queueItems = newQueueItems(11, 12);
 
         historyPageFilter.add(runs, queueItems);
 
-        Assert.assertEquals(true, historyPageFilter.hasUpPage);
-        Assert.assertEquals(true, historyPageFilter.hasDownPage);
+        Assert.assertTrue(historyPageFilter.hasUpPage);
+        Assert.assertTrue(historyPageFilter.hasDownPage);
         Assert.assertEquals(0, historyPageFilter.queueItems.size());
         Assert.assertEquals(5, historyPageFilter.runs.size());
 
@@ -293,15 +292,18 @@ public class HistoryPageFilterTest {
     @Test
     public void test_laterItemsNotEvaluated() throws IOException {
         HistoryPageFilter<ModelObject> historyPageFilter = newPage(5, null, null);
-        List<ModelObject> itemList = newRuns(6, 10);
+        List<ModelObject> itemList = new ArrayList<>();
+        for (ModelObject run : newRuns(6, 10)) {
+            itemList.add(run);
+        }
         for (int queueId = 5; queueId >= 1; queueId--) {
             itemList.add(new ExplodingMockRun(queueId));
         }
 
         historyPageFilter.add(itemList);
 
-        Assert.assertEquals(false, historyPageFilter.hasUpPage);
-        Assert.assertEquals(true, historyPageFilter.hasDownPage);
+        Assert.assertFalse(historyPageFilter.hasUpPage);
+        Assert.assertTrue(historyPageFilter.hasDownPage);
         Assert.assertEquals(5, historyPageFilter.runs.size());
 
         Assert.assertEquals(HistoryPageEntry.getEntryId(10), historyPageFilter.newestOnPage);
@@ -312,8 +314,8 @@ public class HistoryPageFilterTest {
     public void test_search_runs_by_build_number() throws IOException {
         //given
         HistoryPageFilter<ModelObject> historyPageFilter = newPage(5, null, null);
-        List<ModelObject> runs = newRuns(23, 24);
-        List<Queue.Item> queueItems = newQueueItems(25, 26);
+        Iterable<ModelObject> runs = newRuns(23, 24);
+        var queueItems = newQueueItems(25, 26);
         //and
         historyPageFilter.setSearchString("23");
 
@@ -328,50 +330,50 @@ public class HistoryPageFilterTest {
     @Test
     @Issue("JENKINS-42645")
     public void should_be_case_insensitive_by_default() throws IOException {
-        List<ModelObject> runs = Lists.<ModelObject>newArrayList(new MockRun(2, Result.FAILURE), new MockRun(1, Result.SUCCESS));
+        Iterable<ModelObject> runs = Arrays.asList(new MockRun(2, Result.FAILURE), new MockRun(1, Result.SUCCESS));
         assertOneMatchingBuildForGivenSearchStringAndRunItems("failure", runs);
     }
 
     @Test
     public void should_lower_case_search_string_in_case_insensitive_search() throws IOException {
-        List<ModelObject> runs = Lists.<ModelObject>newArrayList(new MockRun(2, Result.FAILURE), new MockRun(1, Result.SUCCESS));
+        Iterable<ModelObject> runs = Arrays.asList(new MockRun(2, Result.FAILURE), new MockRun(1, Result.SUCCESS));
         assertOneMatchingBuildForGivenSearchStringAndRunItems("FAILure", runs);
     }
 
     @Test
     @Issue("JENKINS-40718")
-    public void should_search_builds_by_build_variables() throws IOException {
-        List<ModelObject> runs = ImmutableList.<ModelObject>of(
-                new MockBuild(2).withBuildVariables(ImmutableMap.of("env", "dummyEnv")),
-                new MockBuild(1).withBuildVariables(ImmutableMap.of("env", "otherEnv")));
+    public void should_search_builds_by_build_variables() {
+        Iterable<ModelObject> runs = Arrays.asList(
+                new MockBuild(2).withBuildVariables(Map.of("env", "dummyEnv")),
+                new MockBuild(1).withBuildVariables(Map.of("env", "otherEnv")));
         assertOneMatchingBuildForGivenSearchStringAndRunItems("dummyEnv", runs);
     }
 
     @Test
     @Issue("JENKINS-40718")
     public void should_search_builds_by_build_params() throws IOException {
-        List<ModelObject> runs = ImmutableList.<ModelObject>of(
-                new MockBuild(2).withBuildParameters(ImmutableMap.of("env", "dummyEnv")),
-                new MockBuild(1).withBuildParameters(ImmutableMap.of("env", "otherEnv")));
+        Iterable<ModelObject> runs = Arrays.asList(
+                new MockBuild(2).withBuildParameters(Map.of("env", "dummyEnv")),
+                new MockBuild(1).withBuildParameters(Map.of("env", "otherEnv")));
         assertOneMatchingBuildForGivenSearchStringAndRunItems("dummyEnv", runs);
     }
 
     @Test
     @Issue("JENKINS-40718")
     public void should_ignore_sensitive_parameters_in_search_builds_by_build_params() throws IOException {
-        List<ModelObject> runs = ImmutableList.<ModelObject>of(
-                new MockBuild(2).withBuildParameters(ImmutableMap.of("plainPassword", "pass1plain")),
+        Iterable<ModelObject> runs = Arrays.asList(
+                new MockBuild(2).withBuildParameters(Map.of("plainPassword", "pass1plain")),
                 new MockBuild(1).withSensitiveBuildParameters("password", "pass1"));
         assertOneMatchingBuildForGivenSearchStringAndRunItems("pass1", runs);
     }
 
-    private void assertOneMatchingBuildForGivenSearchStringAndRunItems(String searchString, List<ModelObject> runs) {
+    private void assertOneMatchingBuildForGivenSearchStringAndRunItems(String searchString, Iterable<ModelObject> runs) {
         //given
         HistoryPageFilter<ModelObject> historyPageFilter = newPage(5, null, null);
         //and
         historyPageFilter.setSearchString(searchString);
         //and
-        List<Queue.Item> queueItems = newQueueItems(3, 4);
+        var queueItems = newQueueItems(3, 4);
 
         //when
         historyPageFilter.add(runs, queueItems);
@@ -381,15 +383,15 @@ public class HistoryPageFilterTest {
         Assert.assertEquals(HistoryPageEntry.getEntryId(2), historyPageFilter.runs.get(0).getEntryId());
     }
 
-    private List<Queue.Item> newQueueItems(long startId, long endId) {
-        List<Queue.Item> items = new ArrayList<>();
+    private List<QueueItem> newQueueItems(long startId, long endId) {
+        var items = new ArrayList<QueueItem>();
         for (long queueId = startId; queueId <= endId; queueId++) {
             items.add(new MockItem(queueId));
         }
         return items;
     }
 
-    private List<ModelObject> newRuns(long startId, long endId) throws IOException {
+    private Iterable<ModelObject> newRuns(long startId, long endId) throws IOException {
         // Runs should be in reverse order, newest first.
         List<ModelObject> runs = new ArrayList<>();
         for (long queueId = endId; queueId >= startId; queueId--) {
@@ -412,12 +414,12 @@ public class HistoryPageFilterTest {
     private static class MockRun extends Run {
         private final long queueId;
 
-        public MockRun(long queueId) throws IOException {
+        MockRun(long queueId) throws IOException {
             super(Mockito.mock(Job.class));
             this.queueId = queueId;
         }
 
-        public MockRun(long queueId, Result result) throws IOException {
+        MockRun(long queueId, Result result) throws IOException {
             this(queueId);
             this.result = result;
         }
@@ -446,11 +448,23 @@ public class HistoryPageFilterTest {
         public int getNumber() {
             return (int) queueId;
         }
+
+        @SuppressWarnings("deprecation") // avoid TransientActionFactory
+        @Override
+        public <T extends Action> T getAction(Class<T> type) {
+            for (Action a : getActions()) {
+                if (type.isInstance(a)) {
+                    return type.cast(a);
+                }
+            }
+            return null;
+        }
+
     }
 
     // A version of MockRun that will throw an exception if getQueueId or getNumber is called
     private static class ExplodingMockRun extends MockRun {
-        public ExplodingMockRun(long queueId) throws IOException {
+        ExplodingMockRun(long queueId) throws IOException {
             super(queueId);
         }
 
@@ -472,6 +486,7 @@ public class HistoryPageFilterTest {
         private final int buildNumber;
 
         private Map<String, String> buildVariables = Collections.emptyMap();
+        private Set<String> sensitiveBuildVariables = Collections.emptySet();
 
         private MockBuild(int buildNumber) {
             super(Mockito.mock(FreeStyleProject.class), Mockito.mock(Calendar.class));
@@ -488,29 +503,42 @@ public class HistoryPageFilterTest {
             return buildVariables;
         }
 
+        @Override
+        public Set<String> getSensitiveBuildVariables() {
+            return sensitiveBuildVariables; // TODO This is never actually set (bad Mock), actual test in test harness
+        }
+
         MockBuild withBuildVariables(Map<String, String> buildVariables) {
             this.buildVariables = buildVariables;
             return this;
         }
 
-        MockBuild withBuildParameters(Map<String, String> buildParametersAsMap) throws IOException {
+        MockBuild withBuildParameters(Map<String, String> buildParametersAsMap) {
             addAction(new ParametersAction(buildPropertiesMapToParameterValues(buildParametersAsMap), buildParametersAsMap.keySet()));
             return this;
         }
 
-        //TODO: Rewrite in functional style when Java 8 is available
         private List<ParameterValue> buildPropertiesMapToParameterValues(Map<String, String> buildParametersAsMap) {
-            List<ParameterValue> parameterValues = new ArrayList<>();
-            for (Map.Entry<String, String> parameter : buildParametersAsMap.entrySet()) {
-                parameterValues.add(new StringParameterValue(parameter.getKey(), parameter.getValue()));
-            }
-            return parameterValues;
+            return buildParametersAsMap.entrySet().stream()
+                    .map(parameter -> new StringParameterValue(parameter.getKey(), parameter.getValue()))
+                    .collect(Collectors.toList());
         }
 
-        MockBuild withSensitiveBuildParameters(String paramName, String paramValue) throws IOException {
-            addAction(new ParametersAction(ImmutableList.<ParameterValue>of(createSensitiveStringParameterValue(paramName, paramValue)),
-                    ImmutableList.of(paramName)));
+        MockBuild withSensitiveBuildParameters(String paramName, String paramValue) {
+            addAction(new ParametersAction(List.of(createSensitiveStringParameterValue(paramName, paramValue)),
+                    List.of(paramName)));
             return this;
+        }
+
+        @SuppressWarnings("deprecation") // avoid TransientActionFactory
+        @Override
+        public <T extends Action> T getAction(Class<T> type) {
+            for (Action a : getActions()) {
+                if (type.isInstance(a)) {
+                    return type.cast(a);
+                }
+            }
+            return null;
         }
 
         private StringParameterValue createSensitiveStringParameterValue(final String paramName, final String paramValue) {
