@@ -21,26 +21,30 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.model;
 
-import com.gargoylesoftware.htmlunit.ElementNotFoundException;
-import com.gargoylesoftware.htmlunit.FailingHttpStatusCodeException;
-import com.gargoylesoftware.htmlunit.HttpMethod;
-import com.gargoylesoftware.htmlunit.WebRequest;
-import com.gargoylesoftware.htmlunit.WebResponse;
-import com.gargoylesoftware.htmlunit.html.HtmlForm;
-import com.gargoylesoftware.htmlunit.html.HtmlInput;
-import com.gargoylesoftware.htmlunit.html.HtmlPage;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.allOf;
+import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.hasSize;
+import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.not;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertThrows;
+import static org.junit.Assert.assertTrue;
+
 import hudson.FilePath;
 import hudson.Functions;
 import hudson.Launcher;
 import hudson.Util;
-import hudson.maven.MavenModuleSet;
+import hudson.matrix.MatrixProject;
 import hudson.scm.NullSCM;
-import hudson.scm.SCM;
 import hudson.scm.SCMDescriptor;
 import hudson.security.GlobalMatrixAuthorizationStrategy;
-import hudson.tasks.ArtifactArchiver;
 import hudson.tasks.BatchFile;
 import hudson.tasks.BuildTrigger;
 import hudson.tasks.Shell;
@@ -50,21 +54,34 @@ import hudson.triggers.Trigger;
 import hudson.triggers.TriggerDescriptor;
 import hudson.util.OneShotEvent;
 import hudson.util.StreamTaskListener;
-import java.io.File;
-import java.io.IOException;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
-import java.util.Collections;
+import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.ResourceBundle;
+import java.util.Set;
 import java.util.Vector;
 import java.util.concurrent.Future;
 import jenkins.model.Jenkins;
-import org.apache.commons.io.FileUtils;
+import net.sf.json.JSONArray;
+import net.sf.json.JSONObject;
 import org.apache.commons.io.IOUtils;
-import static org.hamcrest.Matchers.*;
-import static org.junit.Assert.*;
-import org.junit.Assume;
+import org.htmlunit.ElementNotFoundException;
+import org.htmlunit.HttpMethod;
+import org.htmlunit.Page;
+import org.htmlunit.WebRequest;
+import org.htmlunit.WebResponse;
+import org.htmlunit.html.DomNode;
+import org.htmlunit.html.DomNodeList;
+import org.htmlunit.html.HtmlAnchor;
+import org.htmlunit.html.HtmlForm;
+import org.htmlunit.html.HtmlInput;
+import org.htmlunit.html.HtmlPage;
+import org.jenkinsci.plugins.matrixauth.AuthorizationType;
+import org.jenkinsci.plugins.matrixauth.PermissionEntry;
 import org.junit.Rule;
 import org.junit.Test;
 import org.jvnet.hudson.test.Issue;
@@ -72,7 +89,6 @@ import org.jvnet.hudson.test.JenkinsRule;
 import org.jvnet.hudson.test.MockAuthorizationStrategy;
 import org.jvnet.hudson.test.MockFolder;
 import org.jvnet.hudson.test.TestExtension;
-import org.jvnet.hudson.test.TestPluginManager;
 import org.jvnet.hudson.test.recipes.PresetData;
 import org.jvnet.hudson.test.recipes.PresetData.DataSet;
 import org.kohsuke.args4j.CmdLineException;
@@ -100,7 +116,7 @@ public class AbstractProjectTest {
         FreeStyleProject project = j.createFreeStyleProject();
         project.getBuildersList().add(Functions.isWindows() ? new BatchFile("echo hello") : new Shell("echo hello"));
 
-        FreeStyleBuild b = project.scheduleBuild2(0).get();
+        FreeStyleBuild b = j.buildAndAssertSuccess(project);
 
         assertTrue("Workspace should exist by now", b.getWorkspace().exists());
 
@@ -113,23 +129,20 @@ public class AbstractProjectTest {
      * Makes sure that the workspace deletion is protected.
      */
     @Test
-    @PresetData(DataSet.NO_ANONYMOUS_READACCESS)
     public void wipeWorkspaceProtected() throws Exception {
         FreeStyleProject project = j.createFreeStyleProject();
+        j.createDummySecurityRealm();
         project.getBuildersList().add(Functions.isWindows() ? new BatchFile("echo hello") : new Shell("echo hello"));
 
-        FreeStyleBuild b = project.scheduleBuild2(0).get();
+        FreeStyleBuild b = j.buildAndAssertSuccess(project);
 
-        assert b.getWorkspace().exists() : "Workspace should exist by now";
+        assertTrue("Workspace should exist by now", b.getWorkspace().exists());
 
         // make sure that the action link is protected
-        JenkinsRule.WebClient wc = j.createWebClient();
-        try {
-            wc.getPage(new WebRequest(new URL(wc.getContextPath() + project.getUrl() + "doWipeOutWorkspace"), HttpMethod.POST));
-            fail("Expected HTTP status code 403");
-        } catch (FailingHttpStatusCodeException e) {
-            assertEquals(HttpURLConnection.HTTP_FORBIDDEN, e.getStatusCode());
-        }
+        JenkinsRule.WebClient wc = j.createWebClient()
+                .withThrowExceptionOnFailingStatusCode(false);
+        Page page = wc.getPage(new WebRequest(new URI(wc.getContextPath() + project.getUrl() + "doWipeOutWorkspace").toURL(), HttpMethod.POST));
+        assertEquals(HttpURLConnection.HTTP_FORBIDDEN, page.getWebResponse().getStatusCode());
     }
 
     /**
@@ -139,7 +152,7 @@ public class AbstractProjectTest {
     @Test
     @PresetData(DataSet.ANONYMOUS_READONLY)
     public void wipeWorkspaceProtected2() throws Exception {
-        ((GlobalMatrixAuthorizationStrategy) j.jenkins.getAuthorizationStrategy()).add(AbstractProject.WORKSPACE, "anonymous");
+        ((GlobalMatrixAuthorizationStrategy) j.jenkins.getAuthorizationStrategy()).add(Item.WORKSPACE, new PermissionEntry(AuthorizationType.EITHER, "anonymous"));
 
         // make sure that the deletion is protected in the same way
         wipeWorkspaceProtected();
@@ -148,14 +161,9 @@ public class AbstractProjectTest {
         JenkinsRule.WebClient webClient = j.createWebClient();
         HtmlPage page = webClient.getPage(j.jenkins.getItem("test0"));
 
-        page = (HtmlPage) page.getAnchorByText("Workspace").click();
-        try {
-            String wipeOutLabel = ResourceBundle.getBundle("hudson/model/AbstractProject/sidepanel").getString("Wipe Out Workspace");
-            page.getAnchorByText(wipeOutLabel);
-            fail("shouldn't find a link");
-        } catch (ElementNotFoundException e) {
-            // OK
-        }
+        HtmlPage workspace = page.getAnchorByText("Workspace").click();
+        String wipeOutLabel = ResourceBundle.getBundle("hudson/model/AbstractProject/sidepanel").getString("Wipe Out Workspace");
+        assertThrows("shouldn't find a link", ElementNotFoundException.class, () -> workspace.getAnchorByText(wipeOutLabel));
     }
 
     /**
@@ -192,7 +200,7 @@ public class AbstractProjectTest {
 
         form = j.createWebClient().getPage(p, "configure").getFormByName("config");
         input = form.getInputByName("blockBuildWhenUpstreamBuilding");
-        assert input.isChecked() : "blockBuildWhenUpstreamBuilding check box is not checked.";
+        assertTrue("blockBuildWhenUpstreamBuilding check box is not checked.", input.isChecked());
     }
 
     /**
@@ -230,18 +238,14 @@ public class AbstractProjectTest {
             public boolean requiresWorkspaceForPolling() {
                 return true;
             }
+
             @Override
             public SCMDescriptor<?> getDescriptor() {
-                return new SCMDescriptor<SCM>(null) {
+                return new SCMDescriptor<>(null) {
                 };
             }
         });
-        Thread t = new Thread() {
-            @Override
-            public void run() {
-                p.pollSCMChanges(StreamTaskListener.fromStdout());
-            }
-        };
+        Thread t = new Thread(() -> p.poll(StreamTaskListener.fromStdout()));
         try {
             t.start();
             Future<FreeStyleBuild> f = p.scheduleBuild2(0);
@@ -261,65 +265,6 @@ public class AbstractProjectTest {
         }
     }
 
-    @Test
-    @Issue("JENKINS-1986")
-    public void buildSymlinks() throws Exception {
-        Assume.assumeFalse("If we're on Windows, don't bother doing this", Functions.isWindows());
-
-        FreeStyleProject job = j.createFreeStyleProject();
-        job.getBuildersList().add(new Shell("echo \"Build #$BUILD_NUMBER\"\n"));
-        FreeStyleBuild build = job.scheduleBuild2(0, new Cause.UserCause()).get();
-        File lastSuccessful = new File(job.getRootDir(), "lastSuccessful"),
-                lastStable = new File(job.getRootDir(), "lastStable");
-        // First build creates links
-        assertSymlinkForBuild(lastSuccessful, 1);
-        assertSymlinkForBuild(lastStable, 1);
-        FreeStyleBuild build2 = job.scheduleBuild2(0, new Cause.UserCause()).get();
-        // Another build updates links
-        assertSymlinkForBuild(lastSuccessful, 2);
-        assertSymlinkForBuild(lastStable, 2);
-        // Delete latest build should update links
-        build2.delete();
-        assertSymlinkForBuild(lastSuccessful, 1);
-        assertSymlinkForBuild(lastStable, 1);
-        // Delete all builds should remove links
-        build.delete();
-        assertFalse("lastSuccessful link should be removed", lastSuccessful.exists());
-        assertFalse("lastStable link should be removed", lastStable.exists());
-    }
-
-    private static void assertSymlinkForBuild(File file, int buildNumber)
-            throws IOException, InterruptedException {
-        assert file.exists() : "should exist and point to something that exists";
-        assert Util.isSymlink(file) : "should be symlink";
-        String s = FileUtils.readFileToString(new File(file, "log"));
-        assert s.contains("Build #" + buildNumber + "\n") : "link should point to build #$buildNumber, but link was: ${Util.resolveSymlink(file, TaskListener.NULL)}\nand log was:\n$s";
-    }
-
-    @Test
-    @Issue("JENKINS-2543")
-    public void symlinkForPostBuildFailure() throws Exception {
-        Assume.assumeFalse("If we're on Windows, don't bother doing this", Functions.isWindows());
-
-        // Links should be updated after post-build actions when final build result is known
-        FreeStyleProject job = j.createFreeStyleProject();
-        job.getBuildersList().add(new Shell("echo \"Build #$BUILD_NUMBER\"\n"));
-        FreeStyleBuild build = job.scheduleBuild2(0, new Cause.UserCause()).get();
-        assert Result.SUCCESS == build.getResult();
-        File lastSuccessful = new File(job.getRootDir(), "lastSuccessful"),
-                lastStable = new File(job.getRootDir(), "lastStable");
-        // First build creates links
-        assertSymlinkForBuild(lastSuccessful, 1);
-        assertSymlinkForBuild(lastStable, 1);
-        // Archive artifacts that don't exist to create failure in post-build action
-        job.getPublishersList().add(new ArtifactArchiver("*.foo", "", false, false));
-        build = job.scheduleBuild2(0, new Cause.UserCause()).get();
-        assert Result.FAILURE == build.getResult();
-        // Links should not be updated since build failed
-        assertSymlinkForBuild(lastSuccessful, 1);
-        assertSymlinkForBuild(lastStable, 1);
-    }
-
     /* TODO too slow, seems capable of causing testWorkspaceLock to time out:
     @Test
     @Issue("JENKINS-15156")
@@ -336,20 +281,20 @@ public class AbstractProjectTest {
     @Issue("JENKINS-18678")
     public void renameJobLostBuilds() throws Exception {
         FreeStyleProject p = j.createFreeStyleProject("initial");
-        j.assertBuildStatusSuccess(p.scheduleBuild2(0));
-        assertEquals(1, p.getBuilds().size());
+        j.buildAndAssertSuccess(p);
+        assertEquals(1, p.getBuilds().stream().count());
         p.renameTo("edited");
         p._getRuns().purgeCache();
-        assertEquals(1, p.getBuilds().size());
+        assertEquals(1, p.getBuilds().stream().count());
         MockFolder d = j.jenkins.createProject(MockFolder.class, "d");
         Items.move(p, d);
         assertEquals(p, j.jenkins.getItemByFullName("d/edited"));
         p._getRuns().purgeCache();
-        assertEquals(1, p.getBuilds().size());
+        assertEquals(1, p.getBuilds().stream().count());
         d.renameTo("d2");
         p = j.jenkins.getItemByFullName("d2/edited", FreeStyleProject.class);
         p._getRuns().purgeCache();
-        assertEquals(1, p.getBuilds().size());
+        assertEquals(1, p.getBuilds().stream().count());
     }
 
     @Test
@@ -358,9 +303,9 @@ public class AbstractProjectTest {
         j.createFreeStyleProject("j1");
         assertEquals("", deleteRedirectTarget("job/j1"));
         j.createFreeStyleProject("j2");
-        Jenkins.getInstance().addView(new AllView("v1"));
+        Jenkins.get().addView(new AllView("v1"));
         assertEquals("view/v1/", deleteRedirectTarget("view/v1/job/j2"));
-        MockFolder d = Jenkins.getInstance().createProject(MockFolder.class, "d");
+        MockFolder d = Jenkins.get().createProject(MockFolder.class, "d");
         d.addView(new AllView("v2"));
         for (String n : new String[] {"j3", "j4", "j5"}) {
             d.createProject(FreeStyleProject.class, n);
@@ -374,7 +319,7 @@ public class AbstractProjectTest {
     private String deleteRedirectTarget(String job) throws Exception {
         JenkinsRule.WebClient wc = j.createWebClient();
         String base = wc.getContextPath();
-        String loc = wc.getPage(wc.addCrumb(new WebRequest(new URL(base + job + "/doDelete"), HttpMethod.POST))).getUrl().toString();
+        String loc = wc.getPage(wc.addCrumb(new WebRequest(new URI(base + job + "/doDelete").toURL(), HttpMethod.POST))).getUrl().toString();
         assert loc.startsWith(base) : loc;
         return loc.substring(base.length());
     }
@@ -396,7 +341,7 @@ public class AbstractProjectTest {
     }
 
     /**
-     * Do the same as {@link #testQueueSuccessBehavior()} but over HTTP
+     * Do the same as {@link #queueSuccessBehavior()} but over HTTP
      */
     @Test
     @Issue("JENKINS-18407")
@@ -405,24 +350,27 @@ public class AbstractProjectTest {
         j.jenkins.setNumExecutors(0);
 
         FreeStyleProject p = j.createFreeStyleProject();
-        JenkinsRule.WebClient wc = j.createWebClient();
+        JenkinsRule.WebClient wc = j.createWebClient()
+                .withThrowExceptionOnFailingStatusCode(false);
 
-        WebResponse rsp = wc.getPage(j.getURL() + p.getUrl() + "build").getWebResponse();
-        assertEquals(201, rsp.getStatusCode());
+        WebResponse rsp = wc.getPage(wc.addCrumb(new WebRequest(new URL(j.getURL(), p.getUrl() +
+                "build?delay=0"),
+                HttpMethod.POST))).getWebResponse();
+        assertEquals(HttpURLConnection.HTTP_CREATED, rsp.getStatusCode());
         assertNotNull(rsp.getResponseHeaderValue("Location"));
 
-        WebResponse rsp2 = wc.getPage(j.getURL() + p.getUrl() + "build").getWebResponse();
-        assertEquals(201, rsp2.getStatusCode());
+        WebResponse rsp2 = wc.getPage(wc.addCrumb(new WebRequest(new URL(j.getURL(), p.getUrl() +
+                "build?delay=0"),
+                HttpMethod.POST))).getWebResponse();
+        assertEquals(HttpURLConnection.HTTP_CREATED, rsp2.getStatusCode());
         assertEquals(rsp.getResponseHeaderValue("Location"), rsp2.getResponseHeaderValue("Location"));
 
         p.makeDisabled(true);
 
-        try {
-            wc.getPage(j.getURL() + p.getUrl() + "build");
-            fail();
-        } catch (FailingHttpStatusCodeException e) {
-            // request should fail
-        }
+        WebResponse rsp3 = wc.getPage(wc.addCrumb(new WebRequest(new URL(j.getURL(), p.getUrl() +
+                "build?delay=0"),
+                HttpMethod.POST))).getWebResponse();
+        assertEquals(HttpURLConnection.HTTP_CONFLICT, rsp3.getStatusCode());
     }
 
     /**
@@ -431,7 +379,7 @@ public class AbstractProjectTest {
      */
     @Test
     public void vectorTriggers() throws Exception {
-        AbstractProject<?, ?> p = (AbstractProject) j.jenkins.createProjectFromXML("foo", getClass().getResourceAsStream("AbstractProjectTest/vectorTriggers.xml"));
+        AbstractProject<?, ?> p = (AbstractProject<?, ?>) j.jenkins.createProjectFromXML("foo", getClass().getResourceAsStream("AbstractProjectTest/vectorTriggers.xml"));
         assertEquals(1, p.triggers().size());
         Trigger<?> t = p.triggers().get(0);
         assertEquals(SCMTrigger.class, t.getClass());
@@ -441,7 +389,7 @@ public class AbstractProjectTest {
     @Test
     @Issue("JENKINS-18813")
     public void removeTrigger() throws Exception {
-        AbstractProject<?, ?> p = (AbstractProject) j.jenkins.createProjectFromXML("foo", getClass().getResourceAsStream("AbstractProjectTest/vectorTriggers.xml"));
+        AbstractProject<?, ?> p = (AbstractProject<?, ?>) j.jenkins.createProjectFromXML("foo", getClass().getResourceAsStream("AbstractProjectTest/vectorTriggers.xml"));
 
         TriggerDescriptor SCM_TRIGGER_DESCRIPTOR = (TriggerDescriptor) j.jenkins.getDescriptorOrDie(SCMTrigger.class);
         p.removeTrigger(SCM_TRIGGER_DESCRIPTOR);
@@ -451,7 +399,7 @@ public class AbstractProjectTest {
     @Test
     @Issue("JENKINS-18813")
     public void addTriggerSameType() throws Exception {
-        AbstractProject<?, ?> p = (AbstractProject) j.jenkins.createProjectFromXML("foo", getClass().getResourceAsStream("AbstractProjectTest/vectorTriggers.xml"));
+        AbstractProject<?, ?> p = (AbstractProject<?, ?>) j.jenkins.createProjectFromXML("foo", getClass().getResourceAsStream("AbstractProjectTest/vectorTriggers.xml"));
 
         SCMTrigger newTrigger = new SCMTrigger("H/5 * * * *");
         p.addTrigger(newTrigger);
@@ -465,7 +413,7 @@ public class AbstractProjectTest {
     @Test
     @Issue("JENKINS-18813")
     public void addTriggerDifferentType() throws Exception {
-        AbstractProject<?, ?> p = (AbstractProject) j.jenkins.createProjectFromXML("foo", getClass().getResourceAsStream("AbstractProjectTest/vectorTriggers.xml"));
+        AbstractProject<?, ?> p = (AbstractProject<?, ?>) j.jenkins.createProjectFromXML("foo", getClass().getResourceAsStream("AbstractProjectTest/vectorTriggers.xml"));
 
         TimerTrigger newTrigger = new TimerTrigger("20 * * * *");
         p.addTrigger(newTrigger);
@@ -480,24 +428,17 @@ public class AbstractProjectTest {
      */
     @Test
     public void configDotXmlSubmissionToDifferentType() throws Exception {
-        TestPluginManager tpm = (TestPluginManager) j.jenkins.pluginManager;
-        tpm.installDetachedPlugin("javadoc");
-        tpm.installDetachedPlugin("junit");
-        tpm.installDetachedPlugin("display-url-api");
-        tpm.installDetachedPlugin("mailer");
-        tpm.installDetachedPlugin("maven-plugin");
-
         j.jenkins.setCrumbIssuer(null);
         FreeStyleProject p = j.createFreeStyleProject();
 
-        HttpURLConnection con = postConfigDotXml(p, "<maven2-moduleset />");
+        HttpURLConnection con = postConfigDotXml(p, "<matrix-project />");
 
         // this should fail with a type mismatch error
         // the error message should report both what was submitted and what was expected
         assertEquals(500, con.getResponseCode());
-        String msg = IOUtils.toString(con.getErrorStream());
+        String msg = IOUtils.toString(con.getErrorStream(), StandardCharsets.UTF_8);
         System.out.println(msg);
-        assertThat(msg, allOf(containsString(FreeStyleProject.class.getName()), containsString(MavenModuleSet.class.getName())));
+        assertThat(msg, allOf(containsString(FreeStyleProject.class.getName()), containsString(MatrixProject.class.getName())));
 
         // control. this should work
         con = postConfigDotXml(p, "<project />");
@@ -507,10 +448,10 @@ public class AbstractProjectTest {
     private HttpURLConnection postConfigDotXml(FreeStyleProject p, String xml) throws Exception {
         HttpURLConnection con = (HttpURLConnection) new URL(j.getURL(), "job/" + p.getName() + "/config.xml").openConnection();
         con.setRequestMethod("POST");
-        con.setRequestProperty("Content-Type", "application/xml");
+        con.setRequestProperty("Content-Type", "application/xml; charset=utf-8");
         con.setDoOutput(true);
         try (OutputStream s = con.getOutputStream()) {
-            s.write(xml.getBytes());
+            s.write(xml.getBytes(StandardCharsets.UTF_8));
         }
         return con;
     }
@@ -530,7 +471,7 @@ public class AbstractProjectTest {
     @Test
     @Issue("JENKINS-27549")
     public void loadingWithNPEOnTriggerStart() throws Exception {
-        AbstractProject<?, ?> project = (AbstractProject) j.jenkins.createProjectFromXML("foo", getClass().getResourceAsStream("AbstractProjectTest/npeTrigger.xml"));
+        AbstractProject<?, ?> project = (AbstractProject<?, ?>) j.jenkins.createProjectFromXML("foo", getClass().getResourceAsStream("AbstractProjectTest/npeTrigger.xml"));
 
         assertEquals(1, project.triggers().size());
     }
@@ -538,21 +479,12 @@ public class AbstractProjectTest {
     @Test
     @Issue("JENKINS-30742")
     public void resolveForCLI() throws Exception {
-        try {
-            AbstractProject<?, ?> not_found = AbstractProject.resolveForCLI("never_created");
-            fail("Exception should occur before!");
-        } catch (CmdLineException e) {
-            assertEquals("No such job \u2018never_created\u2019 exists.", e.getMessage());
-        }
+        CmdLineException e = assertThrows(CmdLineException.class, () -> AbstractProject.resolveForCLI("never_created"));
+        assertEquals("No such job ‘never_created’ exists.", e.getMessage());
 
         AbstractProject<?, ?> project = j.jenkins.createProject(FreeStyleProject.class, "never_created");
-        try {
-            AbstractProject<?, ?> not_found = AbstractProject.resolveForCLI("never_created1");
-            fail("Exception should occur before!");
-        } catch (CmdLineException e) {
-            assertEquals("No such job \u2018never_created1\u2019 exists. Perhaps you meant \u2018never_created\u2019?", e.getMessage());
-        }
-
+        e = assertThrows(CmdLineException.class, () -> AbstractProject.resolveForCLI("never_created1"));
+        assertEquals("No such job ‘never_created1’ exists. Perhaps you meant ‘never_created’?", e.getMessage());
     }
 
     public static class MockBuildTriggerThrowsNPEOnStart extends Trigger<Item> {
@@ -577,10 +509,10 @@ public class AbstractProjectTest {
     public void upstreamDownstreamExportApi() throws Exception {
         FreeStyleProject us = j.createFreeStyleProject("upstream-project");
         FreeStyleProject ds = j.createFreeStyleProject("downstream-project");
-        us.getPublishersList().add(new BuildTrigger(Collections.singleton(ds), Result.SUCCESS));
+        us.getPublishersList().add(new BuildTrigger(Set.of(ds), Result.SUCCESS));
         j.jenkins.rebuildDependencyGraph();
-        assertEquals(Collections.singletonList(ds), us.getDownstreamProjects());
-        assertEquals(Collections.singletonList(us), ds.getUpstreamProjects());
+        assertEquals(List.of(ds), us.getDownstreamProjects());
+        assertEquals(List.of(us), ds.getUpstreamProjects());
         j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
         j.jenkins.setAuthorizationStrategy(new MockAuthorizationStrategy().
                 grant(Jenkins.READ).everywhere().toEveryone().
@@ -601,4 +533,138 @@ public class AbstractProjectTest {
         assertThat(api, not(containsString("upstream-project")));
     }
 
+    @Test
+    public void ensureWhenNonExistingLabelsProposalsAreMade() throws Exception {
+        j.jenkins.setCrumbIssuer(null);
+        FreeStyleProject p = j.createFreeStyleProject();
+
+        String label = "whatever";
+        HtmlPage htmlPage = this.requestCheckAssignedLabelString(p, label);
+        String responseContent = htmlPage.getWebResponse().getContentAsString();
+        /* Sample:
+         *
+         * <div class=warning><img src='/jenkins/static/03a3de4a/images/none.gif' height=16 width=1>There’s no agent/cloud that
+         *     matches this assignment. Did you mean ‘master’ instead of ‘whatever’?
+         * </div>
+         */
+        assertThat(responseContent, allOf(
+                containsString("warning"),
+                // as there is only the built-in node that is currently used, it's de facto the nearest to whatever
+                containsString("built-in"),
+                containsString("whatever")
+        ));
+    }
+
+    @Test
+    public void ensureLegitLabelsAreRetrievedCorrectly() throws Exception {
+        j.jenkins.setCrumbIssuer(null);
+        j.jenkins.setLabelString("existing");
+        FreeStyleProject p = j.createFreeStyleProject();
+
+        String label = "existing";
+        HtmlPage htmlPage = this.requestCheckAssignedLabelString(p, label);
+        String responseContent = htmlPage.getWebResponse().getContentAsString();
+        /* Sample:
+         *
+         * <div class=ok><img src='/jenkins/static/32591acf/images/none.gif' height=16 width=1>
+         *   <a href="http://localhost:5595/jenkins/label/existing/">Label existing</a>
+         *   is serviced by 1 node. Permissions or other restrictions provided by plugins may prevent
+         *   this job from running on those nodes.
+         * </div>
+         */
+        assertThat(responseContent, allOf(
+                containsString("ok"),
+                containsString("label/existing/\">")
+        ));
+    }
+
+    @Test
+    @Issue("SECURITY-1781")
+    public void dangerousLabelsAreEscaped() throws Exception {
+        j.jenkins.setCrumbIssuer(null);
+
+        // unescaped: "\"><img src=x onerror=alert(123)>"
+        String label = "\"\\\"><img src=x onerror=alert(123)>\"";
+        j.jenkins.setLabelString(label);
+        FreeStyleProject p = j.createFreeStyleProject();
+
+        HtmlPage htmlPage = this.requestCheckAssignedLabelString(p, label);
+        String responseContent = htmlPage.getWebResponse().getContentAsString();
+        /* Sample (before correction)
+         *
+         * <div class=ok><img src='/jenkins/static/793045c3/images/none.gif' height=16 width=1>
+         *   <a href="http://localhost:5718/jenkins/label/"><img src=x onerror=alert(123)>/">Label &quot;&gt;&lt;img src=x
+         *      onerror=alert(123)&gt;</a>
+         *   is serviced by 1 node. Permissions or other restrictions provided by plugins may prevent
+         *   this job from running on those nodes.
+         * </div>
+         */
+        /* Sample (after correction)
+         * <div class=ok><img src='/jenkins/static/e16858e2/images/none.gif' height=16 width=1>
+         *   <a href="http://localhost:6151/jenkins/label/%22%3E%3Cimg%20src=x%20onerror=alert(123)%3E/">
+         *     Label &quot;&gt;&lt;img src=x onerror=alert(123)&gt;</a>
+         *   is serviced by 1 node.
+         *   Permissions or other restrictions provided by plugins may prevent this job from running on those nodes.
+         * </div>
+         */
+        DomNodeList<DomNode> domNodes = htmlPage.getDocumentElement().querySelectorAll("*");
+        assertThat(domNodes, hasSize(4));
+        assertEquals("head", domNodes.get(0).getNodeName());
+        assertEquals("body", domNodes.get(1).getNodeName());
+        assertEquals("div", domNodes.get(2).getNodeName());
+        assertEquals("a", domNodes.get(3).getNodeName());
+
+        // only: "><img src=x onerror=alert(123)>
+        // the first double quote was escaped during creation (with the backslash)
+        String unquotedLabel = Label.parseExpression(label).getName();
+        HtmlAnchor anchor = (HtmlAnchor) domNodes.get(3);
+        assertThat(anchor.getHrefAttribute(), containsString(Util.rawEncode(unquotedLabel)));
+
+        assertThat(responseContent, containsString("ok"));
+    }
+
+    @Test
+    public void autoCompleteUpstreamProjects() throws Exception {
+        j.jenkins.setCrumbIssuer(null);
+        FreeStyleProject p1 = j.createFreeStyleProject("p1");
+        this.testAutoCompleteResponse(this.requestAutoCompleteUpstreamProjects(p1, "").getJSONObject(), "p1");
+        this.testAutoCompleteResponse(this.requestAutoCompleteUpstreamProjects(p1, "z").getJSONObject());
+        j.createFreeStyleProject("z1");
+        this.testAutoCompleteResponse(this.requestAutoCompleteUpstreamProjects(p1, "").getJSONObject(), "p1", "z1");
+        this.testAutoCompleteResponse(this.requestAutoCompleteUpstreamProjects(p1, "z").getJSONObject(), "z1");
+        j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
+        j.jenkins.setAuthorizationStrategy(new MockAuthorizationStrategy().
+                grant(Jenkins.READ).everywhere().toEveryone().
+                grant(Item.READ).everywhere().to("alice").
+                grant(Item.READ).onItems(p1).to("bob"));
+        this.testAutoCompleteResponse(this.requestAutoCompleteUpstreamProjectsWithUser(p1, "", "alice").getJSONObject(), "p1", "z1");
+        this.testAutoCompleteResponse(this.requestAutoCompleteUpstreamProjectsWithUser(p1, "", "bob").getJSONObject(), "p1");
+    }
+
+    private HtmlPage requestCheckAssignedLabelString(FreeStyleProject p, String label) throws Exception {
+        return j.createWebClient().goTo(p.getUrl() + p.getDescriptor().getDescriptorUrl() + "/checkAssignedLabelString?value=" + Util.rawEncode(label));
+    }
+
+    private JenkinsRule.JSONWebResponse requestAutoCompleteUpstreamProjects(FreeStyleProject p, String value) throws Exception {
+        return j.getJSON(p.getUrl() + p.getDescriptor().getDescriptorUrl() + "/autoCompleteUpstreamProjects?value=" + Util.rawEncode(value));
+    }
+
+    private JenkinsRule.JSONWebResponse requestAutoCompleteUpstreamProjectsWithUser(FreeStyleProject p, String value, String user) throws Exception {
+        String relativeUrl = p.getUrl() + p.getDescriptor().getDescriptorUrl() + "/autoCompleteUpstreamProjects?value=" + Util.rawEncode(value);
+        Page page = j.createWebClient().withBasicCredentials(user).goTo(relativeUrl, "application/json");
+        return new JenkinsRule.JSONWebResponse(page.getWebResponse());
+    }
+
+    private void testAutoCompleteResponse(JSONObject responseBody, String... projects) {
+        assertThat(responseBody.containsKey("suggestions"), is(true));
+        JSONArray suggestions = responseBody.getJSONArray("suggestions");
+        assertThat(suggestions.size(), is(projects.length));
+        List<JSONObject> expected = new ArrayList<>();
+        for (String p : projects) {
+            JSONObject o = new JSONObject();
+            o.put("name", p);
+            expected.add(o);
+        }
+        assertThat(suggestions.containsAll(expected), is(true));
+    }
 }
