@@ -1,23 +1,20 @@
 package hudson.model;
 
-import hudson.model.FreeStyleBuild;
-import hudson.model.FreeStyleProject;
-import hudson.model.Result;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertTrue;
+
 import hudson.model.utils.AbortExceptionPublisher;
 import hudson.model.utils.IOExceptionPublisher;
 import hudson.model.utils.ResultWriterPublisher;
 import hudson.model.utils.TrueFalsePublisher;
 import hudson.tasks.ArtifactArchiver;
-import org.apache.commons.io.FileUtils;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import org.junit.Rule;
 import org.junit.Test;
 import org.jvnet.hudson.test.Issue;
 import org.jvnet.hudson.test.JenkinsRule;
-
-import java.io.File;
-
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
 
 /**
  * Freestyle publishers statuses tests
@@ -43,12 +40,10 @@ public class FreestyleJobPublisherTest {
         artifactArchiver.setOnlyIfSuccessful(false);
         p.getPublishersList().add(artifactArchiver); // transfer file to build dir
 
-        FreeStyleBuild b = p.scheduleBuild2(0).get();
-        assertEquals("Build must fail, because we used FalsePublisher", b.getResult(), Result.FAILURE);
-        File file = new File(b.getArtifactsDir(), "result.txt");
-        assertTrue("ArtifactArchiver is executed even prior publisher fails", file.exists());
-        assertTrue("Publisher, after publisher with return false status, must see FAILURE status",
-                FileUtils.readFileToString(file).equals(Result.FAILURE.toString()));
+        FreeStyleBuild b = j.buildAndAssertStatus(Result.FAILURE, p);
+        Path path = b.getArtifactsDir().toPath().resolve("result.txt");
+        assertTrue("ArtifactArchiver is executed even prior publisher fails", Files.exists(path));
+        assertEquals("Publisher, after publisher with return false status, must see FAILURE status", Files.readString(path, StandardCharsets.UTF_8), Result.FAILURE.toString());
     }
 
     /**
@@ -66,15 +61,13 @@ public class FreestyleJobPublisherTest {
         artifactArchiver.setOnlyIfSuccessful(false);
         p.getPublishersList().add(artifactArchiver); // transfer file to build dir
 
-        FreeStyleBuild b = p.scheduleBuild2(0).get();
+        FreeStyleBuild b = j.buildAndAssertStatus(Result.FAILURE, p);
 
-        assertEquals("Build must fail, because we used AbortExceptionPublisher", b.getResult(), Result.FAILURE);
         j.assertLogNotContains("\tat", b); // log must not contain stacktrace
         j.assertLogContains("Threw AbortException from publisher!", b); // log must contain exact error message
-        File file = new File(b.getArtifactsDir(), "result.txt");
-        assertTrue("ArtifactArchiver is executed even prior publisher fails", file.exists());
-        assertTrue("Third publisher must see FAILURE status",
-                FileUtils.readFileToString(file).equals(Result.FAILURE.toString()));
+        Path path = b.getArtifactsDir().toPath().resolve("result.txt");
+        assertTrue("ArtifactArchiver is executed even prior publisher fails", Files.exists(path));
+        assertEquals("Third publisher must see FAILURE status", Files.readString(path, StandardCharsets.UTF_8), Result.FAILURE.toString());
     }
 
     /**
@@ -92,14 +85,12 @@ public class FreestyleJobPublisherTest {
         artifactArchiver.setOnlyIfSuccessful(false);
         p.getPublishersList().add(artifactArchiver); // transfer file to build dir
 
-        FreeStyleBuild b = p.scheduleBuild2(0).get();
+        FreeStyleBuild b = j.buildAndAssertStatus(Result.FAILURE, p);
 
-        assertEquals("Build must fail, because we used FalsePublisher", b.getResult(), Result.FAILURE);
         j.assertLogContains("\tat hudson.model.utils.IOExceptionPublisher", b); // log must contain stacktrace
         j.assertLogContains("Threw IOException from publisher!", b); // log must contain exact error message
-        File file = new File(b.getArtifactsDir(), "result.txt");
-        assertTrue("ArtifactArchiver is executed even prior publisher fails", file.exists());
-        assertTrue("Third publisher must see FAILURE status",
-                FileUtils.readFileToString(file).equals(Result.FAILURE.toString()));
+        Path path = b.getArtifactsDir().toPath().resolve("result.txt");
+        assertTrue("ArtifactArchiver is executed even prior publisher fails", Files.exists(path));
+        assertEquals("Third publisher must see FAILURE status", Files.readString(path, StandardCharsets.UTF_8), Result.FAILURE.toString());
     }
 }
