@@ -21,12 +21,26 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.model;
 
-import com.gargoylesoftware.htmlunit.Page;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.anyOf;
+import static org.hamcrest.Matchers.containsInAnyOrder;
+import static org.hamcrest.Matchers.hasItem;
+import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.not;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertThrows;
+import static org.junit.Assume.assumeThat;
+
+import edu.umd.cs.findbugs.annotations.CheckForNull;
+import edu.umd.cs.findbugs.annotations.NonNull;
 import groovy.util.XmlSlurper;
 import hudson.DescriptorExtensionList;
 import hudson.ExtensionList;
+import hudson.security.ProjectMatrixAuthorizationStrategy;
 import hudson.security.csrf.CrumbIssuer;
 import hudson.slaves.ComputerLauncher;
 import hudson.slaves.DumbSlave;
@@ -35,24 +49,15 @@ import hudson.slaves.NodeProperty;
 import hudson.slaves.NodePropertyDescriptor;
 import hudson.slaves.RetentionStrategy;
 import hudson.util.FormValidation;
-import static hudson.util.FormValidation.Kind.WARNING;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.HashSet;
 import java.util.Set;
-import javax.annotation.CheckForNull;
-import javax.annotation.Nonnull;
 import org.apache.commons.io.IOUtils;
-import static org.hamcrest.Matchers.anyOf;
-import static org.hamcrest.Matchers.containsInAnyOrder;
-import static org.hamcrest.Matchers.hasItem;
-import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.not;
-import static org.junit.Assert.*;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assume.assumeThat;
+import org.htmlunit.Page;
 import org.junit.Rule;
 import org.junit.Test;
 import org.jvnet.hudson.test.Issue;
@@ -107,7 +112,7 @@ public class SlaveTest {
         con.setRequestProperty("Content-Type", "application/xml;charset=UTF-8");
         con.setRequestProperty(CrumbIssuer.DEFAULT_CRUMB_NAME, "test");
         con.setDoOutput(true);
-        con.getOutputStream().write(xml.getBytes("UTF-8"));
+        con.getOutputStream().write(xml.getBytes(StandardCharsets.UTF_8));
         con.getOutputStream().close();
         IOUtils.copy(con.getInputStream(), System.out);
     }
@@ -117,9 +122,9 @@ public class SlaveTest {
         DumbSlave.DescriptorImpl d = j.jenkins.getDescriptorByType(DumbSlave.DescriptorImpl.class);
         assertEquals(FormValidation.ok(), d.doCheckRemoteFS("c:\\"));
         assertEquals(FormValidation.ok(), d.doCheckRemoteFS("/tmp"));
-        assertEquals(WARNING, d.doCheckRemoteFS("relative/path").kind);
-        assertEquals(WARNING, d.doCheckRemoteFS("/net/foo/bar/zot").kind);
-        assertEquals(WARNING, d.doCheckRemoteFS("\\\\machine\\folder\\foo").kind);
+        assertEquals(FormValidation.Kind.WARNING, d.doCheckRemoteFS("relative/path").kind);
+        assertEquals(FormValidation.Kind.WARNING, d.doCheckRemoteFS("/net/foo/bar/zot").kind);
+        assertEquals(FormValidation.Kind.WARNING, d.doCheckRemoteFS("\\\\machine\\folder\\foo").kind);
     }
 
     @Test
@@ -152,19 +157,13 @@ public class SlaveTest {
         assertJnlpJarUrlFails(slave, "./../foo/bar");
     }
 
-    private void assertJnlpJarUrlFails(@Nonnull Slave slave, @Nonnull String url) throws Exception {
+    private void assertJnlpJarUrlFails(@NonNull Slave slave, @NonNull String url) throws Exception {
         // Raw access to API
         Slave.JnlpJar jnlpJar = slave.getComputer().getJnlpJars(url);
-        try {
-            jnlpJar.getURL();
-        } catch (MalformedURLException ex) {
-            // we expect the exception here
-            return;
-        }
-        fail("Expected the MalformedURLException for " + url);
+        assertThrows(MalformedURLException.class, jnlpJar::getURL);
     }
 
-    private void assertJnlpJarUrlIsAllowed(@Nonnull Slave slave, @Nonnull String url) throws Exception {
+    private void assertJnlpJarUrlIsAllowed(@NonNull Slave slave, @NonNull String url) throws Exception {
         // Raw access to API
         Slave.JnlpJar jnlpJar = slave.getComputer().getJnlpJars(url);
         assertNotNull(jnlpJar.getURL());
@@ -172,13 +171,13 @@ public class SlaveTest {
 
         // Access from a Web client
         JenkinsRule.WebClient client = j.createWebClient();
-        assertEquals(200, client.getPage(client.getContextPath() + "jnlpJars/" + URLEncoder.encode(url, "UTF-8")).getWebResponse().getStatusCode());
+        assertEquals(200, client.getPage(client.getContextPath() + "jnlpJars/" + URLEncoder.encode(url, StandardCharsets.UTF_8)).getWebResponse().getStatusCode());
         assertEquals(200, client.getPage(jnlpJar.getURL()).getWebResponse().getStatusCode());
     }
 
     @Test
     @Issue("JENKINS-36280")
-    public void launcherFiltering() throws Exception {
+    public void launcherFiltering() {
         DumbSlave.DescriptorImpl descriptor =
                 j.getInstance().getDescriptorByType(DumbSlave.DescriptorImpl.class);
         DescriptorExtensionList<ComputerLauncher, Descriptor<ComputerLauncher>> descriptors =
@@ -196,7 +195,7 @@ public class SlaveTest {
 
     @Test
     @Issue("JENKINS-36280")
-    public void retentionFiltering() throws Exception {
+    public void retentionFiltering() {
         DumbSlave.DescriptorImpl descriptor =
                 j.getInstance().getDescriptorByType(DumbSlave.DescriptorImpl.class);
         DescriptorExtensionList<RetentionStrategy<?>, Descriptor<RetentionStrategy<?>>> descriptors = RetentionStrategy.all();
@@ -213,7 +212,8 @@ public class SlaveTest {
 
     @Test
     @Issue("JENKINS-36280")
-    public void propertyFiltering() throws Exception {
+    public void propertyFiltering() {
+        j.jenkins.setAuthorizationStrategy(new ProjectMatrixAuthorizationStrategy()); // otherwise node descriptor is not available
         DumbSlave.DescriptorImpl descriptor =
                 j.getInstance().getDescriptorByType(DumbSlave.DescriptorImpl.class);
         DescriptorExtensionList<NodeProperty<?>, NodePropertyDescriptor> descriptors = NodeProperty.all();
@@ -238,12 +238,12 @@ public class SlaveTest {
         }
 
         @Override
-        public boolean filterType(@Nonnull Class<?> contextClass, @Nonnull Descriptor descriptor) {
+        public boolean filterType(@NonNull Class<?> contextClass, @NonNull Descriptor descriptor) {
             return !descriptors.contains(descriptor);
         }
 
         @Override
-        public boolean filter(@CheckForNull Object context, @Nonnull Descriptor descriptor) {
+        public boolean filter(@CheckForNull Object context, @NonNull Descriptor descriptor) {
             return !descriptors.contains(descriptor);
         }
     }
