@@ -24,38 +24,55 @@
 
 package hudson.model;
 
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
+
+import hudson.PluginWrapper;
 import hudson.model.UpdateSite.Data;
 import hudson.util.FormValidation;
 import hudson.util.PersistedList;
-
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardCopyOption;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
-
-import javax.servlet.ServletException;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-
-import static org.junit.Assert.*;
-
+import java.util.List;
+import java.util.jar.Attributes;
+import java.util.jar.Manifest;
+import java.util.zip.ZipEntry;
+import java.util.zip.ZipInputStream;
+import jenkins.model.Jenkins;
 import jenkins.security.UpdateSiteWarningsConfiguration;
 import jenkins.security.UpdateSiteWarningsMonitor;
-import org.apache.commons.io.FileUtils;
-import org.eclipse.jetty.server.HttpConnection;
+import org.apache.commons.io.FilenameUtils;
+import org.eclipse.jetty.http.HttpHeader;
+import org.eclipse.jetty.http.HttpStatus;
+import org.eclipse.jetty.io.Content;
+import org.eclipse.jetty.server.Handler;
 import org.eclipse.jetty.server.Request;
+import org.eclipse.jetty.server.Response;
 import org.eclipse.jetty.server.Server;
 import org.eclipse.jetty.server.ServerConnector;
-import org.eclipse.jetty.server.handler.AbstractHandler;
+import org.eclipse.jetty.util.Callback;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
 import org.jvnet.hudson.test.JenkinsRule;
-import org.jvnet.hudson.test.recipes.LocalData;
 
 public class UpdateSiteTest {
 
@@ -65,64 +82,104 @@ public class UpdateSiteTest {
     private Server server;
     private URL baseUrl;
 
-    private String getResource(String resourceName) throws IOException {
+    private static String getResource(String resourceName) throws IOException {
         try {
             URL url = UpdateSiteTest.class.getResource(resourceName);
-            return (url != null)?FileUtils.readFileToString(new File(url.toURI())):null;
-        } catch(URISyntaxException e) {
+            if (url == null) {
+                url = extract(resourceName);
+            }
+            return url != null ? Files.readString(Paths.get(url.toURI()), StandardCharsets.UTF_8) : null;
+        } catch (URISyntaxException e) {
             return null;
+        }
+    }
+
+    public static URL extract(String resourceName) throws IOException {
+        URL url = UpdateSiteTest.class.getResource(resourceName + ".zip");
+        if (url == null) {
+            return null;
+        }
+        try (InputStream is = url.openStream(); ZipInputStream zis = new ZipInputStream(is)) {
+            ZipEntry zipEntry = zis.getNextEntry();
+            assertEquals(resourceName, zipEntry.getName());
+            Path result = Files.createTempFile(FilenameUtils.getBaseName(resourceName), FilenameUtils.getExtension(resourceName));
+            result.toFile().deleteOnExit();
+            Files.copy(zis, result, StandardCopyOption.REPLACE_EXISTING);
+            assertNull(zis.getNextEntry());
+            return result.toUri().toURL();
         }
     }
 
     /**
      * Startup a web server to access resources via HTTP.
-     * @throws Exception 
      */
     @Before
     public void setUpWebServer() throws Exception {
         server = new Server();
         ServerConnector connector = new ServerConnector(server);
         server.addConnector(connector);
-        server.setHandler(new AbstractHandler() {
+        server.setHandler(new Handler.Abstract() {
             @Override
-            public void handle(String target, Request baseRequest, HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException {
+            public boolean handle(Request request, Response response, Callback callback) throws IOException {
+                String target = request.getHttpURI().getPath();
                 if (target.startsWith(RELATIVE_BASE)) {
                     target = target.substring(RELATIVE_BASE.length());
                 }
                 String responseBody = getResource(target);
                 if (responseBody != null) {
-                    baseRequest.setHandled(true);
-                    response.setContentType("text/plain; charset=utf-8");
-                    response.setStatus(HttpServletResponse.SC_OK);
-                    response.getOutputStream().write(responseBody.getBytes());
+                    response.getHeaders().add(HttpHeader.CONTENT_TYPE, "text/plain; charset=utf-8");
+                    response.setStatus(HttpStatus.OK_200);
+                    Content.Sink.write(response, true, responseBody, callback);
+                    return true;
                 }
+                return false;
             }
         });
         server.start();
-        baseUrl = new URL("http", "localhost", connector.getLocalPort(), RELATIVE_BASE);
+        baseUrl = new URI("http", null, "localhost", connector.getLocalPort(), RELATIVE_BASE, null, null).toURL();
     }
 
     @After
     public void shutdownWebserver() throws Exception {
         server.stop();
     }
-    
+
     @Test public void relativeURLs() throws Exception {
-        PersistedList<UpdateSite> sites = j.jenkins.getUpdateCenter().getSites();
-        sites.clear();
-        URL url = new URL(baseUrl, "/plugins/tasks-update-center.json");
+        URL url = new URL(baseUrl, "/plugins/htmlpublisher-update-center.json");
         UpdateSite site = new UpdateSite(UpdateCenter.ID_DEFAULT, url.toString());
-        sites.add(site);
+        overrideUpdateSite(site);
         assertEquals(FormValidation.ok(), site.updateDirectly(false).get());
         Data data = site.getData();
         assertNotNull(data);
         assertEquals(new URL(url, "jenkins.war").toString(), data.core.url);
-        assertEquals(new HashSet<String>(Arrays.asList("tasks", "dummy")), data.plugins.keySet());
-        assertEquals(new URL(url, "tasks.jpi").toString(), data.plugins.get("tasks").url);
+        assertEquals(new HashSet<>(Arrays.asList("htmlpublisher", "dummy")), data.plugins.keySet());
+        assertEquals(new URL(url, "htmlpublisher.jpi").toString(), data.plugins.get("htmlpublisher").url);
         assertEquals("http://nowhere.net/dummy.hpi", data.plugins.get("dummy").url);
 
-        UpdateSite.Plugin tasksPlugin = data.plugins.get("tasks");
-        assertEquals("Wrong name of plugin found", "Task Scanner Plug-in", tasksPlugin.getDisplayName());
+        UpdateSite.Plugin htmlPublisherPlugin = data.plugins.get("htmlpublisher");
+        assertEquals("Wrong name of plugin found", "HTML Publisher", htmlPublisherPlugin.getDisplayName());
+    }
+
+    @Test public void wikiUrlFromSingleSite() throws Exception {
+        UpdateSite site = getUpdateSite("/plugins/htmlpublisher-update-center.json");
+        overrideUpdateSite(site);
+        PluginWrapper wrapper = buildPluginWrapper("dummy", "https://wiki.jenkins.io/display/JENKINS/dummy");
+        assertEquals("https://plugins.jenkins.io/dummy", wrapper.getUrl());
+    }
+
+    @Test public void wikiUrlFromMoreSites() throws Exception {
+        UpdateSite site = getUpdateSite("/plugins/htmlpublisher-update-center.json");
+        UpdateSite alternativeSite = getUpdateSite("/plugins/alternative-update-center.json", "alternative");
+        overrideUpdateSite(site, alternativeSite);
+        // sites use different Wiki URL for dummy -> use URL from manifest
+        PluginWrapper wrapper = buildPluginWrapper("dummy", "https://wiki.jenkins.io/display/JENKINS/dummy");
+        assertEquals("https://wiki.jenkins.io/display/JENKINS/dummy", wrapper.getUrl());
+        // sites use the same Wiki URL for HTML Publisher -> use it
+        wrapper = buildPluginWrapper("htmlpublisher", "https://plugins.jenkins.io/htmlpublisher");
+        assertEquals("https://plugins.jenkins.io/htmlpublisher", wrapper.getUrl());
+        // only one site has it
+        wrapper = buildPluginWrapper("foo", "https://wiki.jenkins.io/display/JENKINS/foo");
+        assertEquals("https://plugins.jenkins.io/foo", wrapper.getUrl());
     }
 
     @Test public void updateDirectlyWithJson() throws Exception {
@@ -132,7 +189,7 @@ public class UpdateSiteTest {
         assertNotNull(us.getPlugin("AdaptivePlugin"));
     }
 
-    @Test public void lackOfDataDoesNotFailWarningsCode() throws Exception {
+    @Test public void lackOfDataDoesNotFailWarningsCode() {
         assertNull("plugin data is not present", j.jenkins.getUpdateCenter().getSite("default").getData());
 
         // nothing breaking?
@@ -142,13 +199,81 @@ public class UpdateSiteTest {
     }
 
     @Test public void incompleteWarningsJson() throws Exception {
-        PersistedList<UpdateSite> sites = j.jenkins.getUpdateCenter().getSites();
-        sites.clear();
-        URL url = new URL(baseUrl, "/plugins/warnings-update-center-malformed.json");
-        UpdateSite site = new UpdateSite(UpdateCenter.ID_DEFAULT, url.toString());
-        sites.add(site);
-        assertEquals(FormValidation.ok(), site.updateDirectly(false).get());
+        UpdateSite site = getUpdateSite("/plugins/warnings-update-center-malformed.json");
+        overrideUpdateSite(site);
         assertEquals("number of warnings", 7, site.getData().getWarnings().size());
         assertNotEquals("plugin data is present", Collections.emptyMap(), site.getData().plugins);
+    }
+
+    @Test public void getAvailables() throws Exception {
+        UpdateSite site = getUpdateSite("/plugins/available-update-center.json");
+        List<UpdateSite.Plugin> available = site.getAvailables();
+        assertEquals("ALowTitle", available.get(0).getDisplayName());
+        assertEquals("TheHighTitle", available.get(1).getDisplayName());
+    }
+
+    @Test public void deprecations() throws Exception {
+        UpdateSite site = getUpdateSite("/plugins/deprecations-update-center.json");
+
+        // present in plugins section of update-center.json, not deprecated
+        UpdateSite.Plugin credentials = site.getPlugin("credentials");
+        assertNotNull(credentials);
+        assertFalse(credentials.isDeprecated());
+        assertNull(credentials.getDeprecation());
+        assertNull(site.getData().getDeprecations().get("credentials"));
+
+        // present in plugins section of update-center.json, deprecated via label and top-level list
+        UpdateSite.Plugin iconShim = site.getPlugin("icon-shim");
+        assertNotNull(iconShim);
+        assertTrue(iconShim.isDeprecated());
+        assertEquals("https://www.jenkins.io/deprecations/icon-shim/", iconShim.getDeprecation().url);
+        assertEquals("https://www.jenkins.io/deprecations/icon-shim/", site.getData().getDeprecations().get("icon-shim").url);
+
+        // present in plugins section of update-center.json, deprecated via label only
+        UpdateSite.Plugin tokenMacro = site.getPlugin("token-macro");
+        assertNotNull(tokenMacro);
+        assertTrue(tokenMacro.isDeprecated());
+        assertEquals("https://wiki.jenkins-ci.org/display/JENKINS/Token+Macro+Plugin", tokenMacro.getDeprecation().url);
+        assertEquals("https://wiki.jenkins-ci.org/display/JENKINS/Token+Macro+Plugin", site.getData().getDeprecations().get("token-macro").url);
+
+        // not in plugins section of update-center.json, deprecated via top-level list
+        UpdateSite.Plugin variant = site.getPlugin("variant");
+        assertNull(variant);
+        assertEquals("https://www.jenkins.io/deprecations/variant/", site.getData().getDeprecations().get("variant").url);
+    }
+
+    private UpdateSite getUpdateSite(String path) throws Exception {
+        return getUpdateSite(path, UpdateCenter.ID_DEFAULT);
+    }
+
+    private UpdateSite getUpdateSite(String path, String id) throws Exception {
+        URL url = new URL(baseUrl, path);
+        UpdateSite site = new UpdateSite(id, url.toString());
+        assertEquals(FormValidation.ok(), site.updateDirectly(false).get());
+        return site;
+    }
+
+    private void overrideUpdateSite(UpdateSite... overrideSites) {
+        PersistedList<UpdateSite> sites = j.jenkins.getUpdateCenter().getSites();
+        sites.clear();
+        sites.addAll(Arrays.asList(overrideSites));
+    }
+
+    private PluginWrapper buildPluginWrapper(String name, String wikiUrl) {
+        Manifest manifest = new Manifest();
+        Attributes attributes = manifest.getMainAttributes();
+        attributes.put(new Attributes.Name("Short-Name"), name);
+        attributes.put(new Attributes.Name("Plugin-Version"), "1.0.0");
+        attributes.put(new Attributes.Name("Url"), wikiUrl);
+        return new PluginWrapper(
+                Jenkins.get().getPluginManager(),
+                new File("/tmp/" + name + ".jpi"),
+                manifest,
+                null,
+                null,
+                new File("/tmp/" + name + ".jpi.disabled"),
+                null,
+                new ArrayList<>()
+        );
     }
 }
