@@ -24,6 +24,13 @@
 
 package hudson.util;
 
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
+
+import edu.umd.cs.findbugs.annotations.NonNull;
 import hudson.cli.CLICommandInvoker;
 import hudson.diagnosis.OldDataMonitor;
 import hudson.model.AbstractDescribableImpl;
@@ -34,21 +41,18 @@ import hudson.model.Job;
 import hudson.model.JobProperty;
 import hudson.model.JobPropertyDescriptor;
 import hudson.model.Saveable;
-import hudson.model.User;
 import hudson.security.ACL;
-
 import java.io.ByteArrayInputStream;
-import java.net.URL;
-import java.util.Collections;
+import java.net.HttpURLConnection;
+import java.net.URI;
+import java.nio.charset.Charset;
 import java.util.Map;
-
+import java.util.Set;
 import jenkins.model.Jenkins;
-import static org.junit.Assert.*;
-
-import jenkins.security.apitoken.ApiTokenPropertyConfiguration;
-import jenkins.security.apitoken.ApiTokenTestHelper;
 import net.sf.json.JSONObject;
-
+import org.htmlunit.HttpMethod;
+import org.htmlunit.Page;
+import org.htmlunit.WebRequest;
 import org.junit.Rule;
 import org.junit.Test;
 import org.jvnet.hudson.test.Issue;
@@ -57,11 +61,7 @@ import org.jvnet.hudson.test.JenkinsRule.WebClient;
 import org.jvnet.hudson.test.TestExtension;
 import org.jvnet.hudson.test.recipes.LocalData;
 import org.kohsuke.stapler.DataBoundConstructor;
-import org.kohsuke.stapler.StaplerRequest;
-
-import com.gargoylesoftware.htmlunit.FailingHttpStatusCodeException;
-import com.gargoylesoftware.htmlunit.HttpMethod;
-import com.gargoylesoftware.htmlunit.WebRequest;
+import org.kohsuke.stapler.StaplerRequest2;
 
 public class RobustReflectionConverterTest {
 
@@ -69,17 +69,17 @@ public class RobustReflectionConverterTest {
 
     @Issue("JENKINS-21024")
     @LocalData
-    @Test public void randomExceptionsReported() throws Exception {
+    @Test public void randomExceptionsReported() {
         FreeStyleProject p = r.jenkins.getItemByFullName("j", FreeStyleProject.class);
         assertNotNull(p);
-        assertEquals(Collections.emptyMap(), p.getTriggers());
+        assertTrue("There should be no triggers", p.getTriggers().isEmpty());
         OldDataMonitor odm = (OldDataMonitor) r.jenkins.getAdministrativeMonitor("OldData");
-        Map<Saveable,OldDataMonitor.VersionRange> data = odm.getData();
-        assertEquals(Collections.singleton(p), data.keySet());
+        Map<Saveable, OldDataMonitor.VersionRange> data = odm.getData();
+        assertEquals(Set.of(p), data.keySet());
         String text = data.values().iterator().next().extra;
-        assertTrue(text, text.contains("Could not call hudson.triggers.TimerTrigger.readResolve"));
+        assertTrue(text, text.contains("hudson.triggers.TimerTrigger.readResolve"));
     }
-    
+
     // Testing describable object to demonstrate what is expected with RobustReflectionConverter#addCriticalField
     // This should be configured with a specific keyword,
     // and should reject configurations with other keywords.
@@ -89,22 +89,22 @@ public class RobustReflectionConverterTest {
     public static class AcceptOnlySpecificKeyword extends AbstractDescribableImpl<AcceptOnlySpecificKeyword> {
         public static final String ACCEPT_KEYWORD = "accept";
         private final String keyword;
-        
+
         @DataBoundConstructor
         public AcceptOnlySpecificKeyword(String keyword) {
             this.keyword = keyword;
         }
-        
+
         public String getKeyword() {
             return keyword;
         }
-        
+
         public boolean isAcceptable() {
             return ACCEPT_KEYWORD.equals(keyword);
         }
-        
+
         private Object readResolve() throws Exception {
-            if (!ACL.SYSTEM.equals(Jenkins.getAuthentication())) {
+            if (!ACL.SYSTEM2.equals(Jenkins.getAuthentication2())) {
                 // called via REST / CLI with authentication
                 if (!isAcceptable()) {
                     // Reject invalid configuration via REST / CLI.
@@ -113,16 +113,17 @@ public class RobustReflectionConverterTest {
             }
             return this;
         }
-        
+
         @TestExtension
         public static class DescriptorImpl extends Descriptor<AcceptOnlySpecificKeyword> {
+            @NonNull
             @Override
             public String getDisplayName() {
                 return "AcceptOnlySpecificKeyword";
             }
-            
+
             @Override
-            public AcceptOnlySpecificKeyword newInstance(StaplerRequest req, JSONObject formData)
+            public AcceptOnlySpecificKeyword newInstance(StaplerRequest2 req, JSONObject formData)
                     throws FormException {
                 AcceptOnlySpecificKeyword instance = super.newInstance(req, formData);
                 if (!instance.isAcceptable()) {
@@ -132,38 +133,39 @@ public class RobustReflectionConverterTest {
             }
         }
     }
-    
-    public static class KeywordProperty extends JobProperty<Job<?,?>> {
+
+    public static class KeywordProperty extends JobProperty<Job<?, ?>> {
         private final AcceptOnlySpecificKeyword nonCriticalField;
         private final AcceptOnlySpecificKeyword criticalField;
-        
+
         public KeywordProperty(AcceptOnlySpecificKeyword nonCriticalField, AcceptOnlySpecificKeyword criticalField) {
             this.nonCriticalField = nonCriticalField;
             this.criticalField = criticalField;
         }
-        
+
         public AcceptOnlySpecificKeyword getNonCriticalField() {
             return nonCriticalField;
         }
-        
+
         public AcceptOnlySpecificKeyword getCriticalField() {
             return criticalField;
         }
-        
+
         @TestExtension
         public static class DescriptorImpl extends JobPropertyDescriptor {
+            @NonNull
             @Override
             public String getDisplayName() {
                 return "KeywordProperty";
             }
-            
+
             @Override
-            public JobProperty<?> newInstance(StaplerRequest req, JSONObject formData)
+            public JobProperty<?> newInstance(StaplerRequest2 req, JSONObject formData)
                     throws FormException {
                 // unfortunately, default newInstance bypasses newInstances for members.
                 formData = formData.getJSONObject("keywordProperty");
                 @SuppressWarnings("unchecked")
-                Descriptor<AcceptOnlySpecificKeyword> d = Jenkins.getInstance().getDescriptor(AcceptOnlySpecificKeyword.class);
+                Descriptor<AcceptOnlySpecificKeyword> d = Jenkins.get().getDescriptor(AcceptOnlySpecificKeyword.class);
                 return new KeywordProperty(
                         d.newInstance(req, formData.getJSONObject("nonCriticalField")),
                         d.newInstance(req, formData.getJSONObject("criticalField"))
@@ -171,7 +173,7 @@ public class RobustReflectionConverterTest {
             }
         }
     }
-    
+
     private static final String CONFIGURATION_TEMPLATE =
             "<?xml version='1.1' encoding='UTF-8'?>"
             + "<project>"
@@ -186,14 +188,10 @@ public class RobustReflectionConverterTest {
             +     "</hudson.util.RobustReflectionConverterTest_-KeywordProperty>"
             + "</properties>"
             + "</project>";
-    
+
     @Test
     public void testRestInterfaceFailure() throws Exception {
-        ApiTokenTestHelper.enableLegacyBehavior();
-
         Items.XSTREAM2.addCriticalField(KeywordProperty.class, "criticalField");
-
-        User test = User.getById("test", true);
 
         // without addCriticalField. This is accepted.
         {
@@ -203,28 +201,28 @@ public class RobustReflectionConverterTest {
                     new AcceptOnlySpecificKeyword(AcceptOnlySpecificKeyword.ACCEPT_KEYWORD)
             ));
             p.save();
-            
+
             // Configure a bad keyword via REST.
             r.jenkins.setSecurityRealm(r.createDummySecurityRealm());
             WebClient wc = r.createWebClient();
-            wc.withBasicApiToken(test);
-            WebRequest req = new WebRequest(new URL(wc.getContextPath() + String.format("%s/config.xml", p.getUrl())), HttpMethod.POST);
+            wc.withBasicApiToken("test");
+            WebRequest req = new WebRequest(new URI(wc.getContextPath() + String.format("%s/config.xml", p.getUrl())).toURL(), HttpMethod.POST);
             req.setEncodingType(null);
             req.setRequestBody(String.format(CONFIGURATION_TEMPLATE, "badvalue", AcceptOnlySpecificKeyword.ACCEPT_KEYWORD));
             wc.getPage(req);
-            
+
             // AcceptOnlySpecificKeyword with bad value is not instantiated for rejected with readResolve,
             assertNull(p.getProperty(KeywordProperty.class).getNonCriticalField());
             assertEquals(AcceptOnlySpecificKeyword.ACCEPT_KEYWORD, p.getProperty(KeywordProperty.class).getCriticalField().getKeyword());
-            
+
             // but save to the disk.
             r.jenkins.reload();
-            
+
             p = r.jenkins.getItemByFullName(p.getFullName(), FreeStyleProject.class);
             assertEquals("badvalue", p.getProperty(KeywordProperty.class).getNonCriticalField().getKeyword());
             assertEquals(AcceptOnlySpecificKeyword.ACCEPT_KEYWORD, p.getProperty(KeywordProperty.class).getCriticalField().getKeyword());
         }
-        
+
         // with addCriticalField. This is not accepted.
         {
             FreeStyleProject p = r.createFreeStyleProject();
@@ -233,37 +231,36 @@ public class RobustReflectionConverterTest {
                     new AcceptOnlySpecificKeyword(AcceptOnlySpecificKeyword.ACCEPT_KEYWORD)
             ));
             p.save();
-            
+
             // Configure a bad keyword via REST.
             r.jenkins.setSecurityRealm(r.createDummySecurityRealm());
-            WebClient wc = r.createWebClient();
-            wc.withBasicApiToken(test);
-            WebRequest req = new WebRequest(new URL(wc.getContextPath() + String.format("%s/config.xml", p.getUrl())), HttpMethod.POST);
+            WebClient wc = r.createWebClient()
+                    .withThrowExceptionOnFailingStatusCode(false);
+            wc.withBasicApiToken("test");
+            WebRequest req = new WebRequest(new URI(wc.getContextPath() + String.format("%s/config.xml", p.getUrl())).toURL(), HttpMethod.POST);
             req.setEncodingType(null);
             req.setRequestBody(String.format(CONFIGURATION_TEMPLATE, AcceptOnlySpecificKeyword.ACCEPT_KEYWORD, "badvalue"));
-            
-            try {
-                wc.getPage(req);
-                fail("Submitting unacceptable configuration via REST should fail.");
-            } catch (FailingHttpStatusCodeException e) {
-                // pass
-            }
-            
+
+            Page page = wc.getPage(req);
+            assertEquals("Submitting unacceptable configuration via REST should fail.",
+                    HttpURLConnection.HTTP_INTERNAL_ERROR,
+                    page.getWebResponse().getStatusCode());
+
             // Configuration should not be updated for a failure of the critical field,
             assertNotEquals("badvalue", p.getProperty(KeywordProperty.class).getCriticalField().getKeyword());
-            
+
             r.jenkins.reload();
-            
+
             // rejected configuration is not saved
             p = r.jenkins.getItemByFullName(p.getFullName(), FreeStyleProject.class);
             assertNotEquals("badvalue", p.getProperty(KeywordProperty.class).getCriticalField().getKeyword());
         }
     }
-    
+
     @Test
     public void testCliFailure() throws Exception {
         Items.XSTREAM2.addCriticalField(KeywordProperty.class, "criticalField");
-        
+
         // without addCriticalField. This is accepted.
         {
             FreeStyleProject p = r.createFreeStyleProject();
@@ -272,34 +269,31 @@ public class RobustReflectionConverterTest {
                     new AcceptOnlySpecificKeyword(AcceptOnlySpecificKeyword.ACCEPT_KEYWORD)
             ));
             p.save();
-            
+
             // Configure a bad keyword via CLI.
             r.jenkins.setSecurityRealm(r.createDummySecurityRealm());
-            
+
             CLICommandInvoker.Result ret = new CLICommandInvoker(r, "update-job")
-                    .withStdin(new ByteArrayInputStream(String.format(CONFIGURATION_TEMPLATE, "badvalue", AcceptOnlySpecificKeyword.ACCEPT_KEYWORD).getBytes()))
+                    .asUser("test")
+                    .withStdin(new ByteArrayInputStream(String.format(CONFIGURATION_TEMPLATE, "badvalue", AcceptOnlySpecificKeyword.ACCEPT_KEYWORD).getBytes(Charset.defaultCharset())))
                     .withArgs(
-                            p.getFullName(),
-                            "--username",
-                            "test",
-                            "--password",
-                            "test"
+                            p.getFullName()
                     )
                     .invoke();
-            
+
             assertEquals(0, ret.returnCode());
-            
+
             // AcceptOnlySpecificKeyword with bad value is not instantiated for rejected with readResolve,
             assertNull(p.getProperty(KeywordProperty.class).getNonCriticalField());
             assertEquals(AcceptOnlySpecificKeyword.ACCEPT_KEYWORD, p.getProperty(KeywordProperty.class).getCriticalField().getKeyword());
-            
+
             // but save to the disk.
             r.jenkins.reload();
-            
+
             p = r.jenkins.getItemByFullName(p.getFullName(), FreeStyleProject.class);
             assertEquals("badvalue", p.getProperty(KeywordProperty.class).getNonCriticalField().getKeyword());
         }
-        
+
         // with addCriticalField. This is not accepted.
         {
             FreeStyleProject p = r.createFreeStyleProject();
@@ -308,26 +302,23 @@ public class RobustReflectionConverterTest {
                     new AcceptOnlySpecificKeyword(AcceptOnlySpecificKeyword.ACCEPT_KEYWORD)
             ));
             p.save();
-            
+
             // Configure a bad keyword via CLI.
             r.jenkins.setSecurityRealm(r.createDummySecurityRealm());
             CLICommandInvoker.Result ret = new CLICommandInvoker(r, "update-job")
-                    .withStdin(new ByteArrayInputStream(String.format(CONFIGURATION_TEMPLATE, AcceptOnlySpecificKeyword.ACCEPT_KEYWORD, "badvalue").getBytes()))
+                    .asUser("test")
+                    .withStdin(new ByteArrayInputStream(String.format(CONFIGURATION_TEMPLATE, AcceptOnlySpecificKeyword.ACCEPT_KEYWORD, "badvalue").getBytes(Charset.defaultCharset())))
                     .withArgs(
-                            p.getFullName(),
-                            "--username",
-                            "test",
-                            "--password",
-                            "test"
+                            p.getFullName()
                     )
                     .invoke();
             assertNotEquals(0, ret.returnCode());
-            
+
             // Configuration should not be updated for a failure of the critical field,
             assertNotEquals("badvalue", p.getProperty(KeywordProperty.class).getCriticalField().getKeyword());
-            
+
             r.jenkins.reload();
-            
+
             // rejected configuration is not saved
             p = r.jenkins.getItemByFullName(p.getFullName(), FreeStyleProject.class);
             assertNotEquals("badvalue", p.getProperty(KeywordProperty.class).getCriticalField().getKeyword());
