@@ -1,39 +1,38 @@
 package jenkins.model;
 
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.containsString;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertThrows;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assume.assumeFalse;
+
 import hudson.Functions;
-import hudson.Util;
 import hudson.init.InitMilestone;
-import hudson.maven.MavenModuleSet;
-import hudson.maven.MavenModuleSetBuild;
 import hudson.model.FreeStyleBuild;
 import hudson.model.FreeStyleProject;
-import org.apache.commons.io.FileUtils;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
-import org.jvnet.hudson.test.ExtractResourceSCM;
-import org.jvnet.hudson.test.Issue;
-import org.jvnet.hudson.test.LoggerRule;
-import org.jvnet.hudson.test.MockFolder;
-import org.jvnet.hudson.test.RestartableJenkinsRule;
-import org.jvnet.hudson.test.recipes.LocalData;
-
 import java.io.File;
-import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.logging.Level;
 import java.util.stream.Stream;
-
-import static org.hamcrest.CoreMatchers.containsString;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
-import static org.junit.Assume.assumeFalse;
+import org.junit.After;
+import org.junit.Before;
+import org.junit.ClassRule;
+import org.junit.Ignore;
+import org.junit.Rule;
+import org.junit.Test;
+import org.junit.rules.TemporaryFolder;
+import org.jvnet.hudson.test.Issue;
+import org.jvnet.hudson.test.LoggerRule;
+import org.jvnet.hudson.test.MockFolder;
+import org.jvnet.hudson.test.RestartableJenkinsRule;
+import org.jvnet.hudson.test.recipes.LocalData;
 
 /**
  * Since JENKINS-50164, Jenkins#workspacesDir and Jenkins#buildsDir had their associated UI deleted.
@@ -45,12 +44,16 @@ import static org.junit.Assume.assumeFalse;
 public class JenkinsBuildsAndWorkspacesDirectoriesTest {
 
     private static final String LOG_WHEN_CHANGING_BUILDS_DIR = "Changing builds directories from ";
+    private static final String LOG_WHEN_CHANGING_WORKSPACES_DIR = "Changing workspaces directories from ";
 
     @Rule
     public RestartableJenkinsRule story = new RestartableJenkinsRule();
 
     @Rule
     public LoggerRule loggerRule = new LoggerRule();
+
+    @ClassRule
+    public static TemporaryFolder tmp = new TemporaryFolder();
 
     @Before
     public void before() {
@@ -67,28 +70,45 @@ public class JenkinsBuildsAndWorkspacesDirectoriesTest {
                 .forEach(System::clearProperty);
     }
 
+    @Issue("JENKINS-53284")
+    @Test
+    public void changeWorkspacesDirLog() throws Exception {
+        loggerRule.record(Jenkins.class, Level.WARNING)
+                .record(Jenkins.class, Level.INFO).capture(1000);
+
+        story.then(step -> {
+            assertFalse(logWasFound(LOG_WHEN_CHANGING_WORKSPACES_DIR));
+            setWorkspacesDirProperty("testdir1");
+        });
+
+        story.then(step -> {
+            assertTrue(logWasFoundAtLevel(LOG_WHEN_CHANGING_WORKSPACES_DIR,
+                                          Level.WARNING));
+            setWorkspacesDirProperty("testdir2");
+        });
+
+        story.then(step -> assertTrue(logWasFoundAtLevel(LOG_WHEN_CHANGING_WORKSPACES_DIR, Level.WARNING)));
+    }
+
     @Issue("JENKINS-50164")
     @Test
     public void badValueForBuildsDir() {
-        story.then((rule) -> {
-            final List<String> badValues = Arrays.asList(
+        story.then(rule -> {
+            final List<String> badValues = new ArrayList<>(Arrays.asList(
                     "blah",
                     "$JENKINS_HOME",
                     "$JENKINS_HOME/builds",
                     "$ITEM_FULL_NAME",
                     "/path/to/builds",
                     "/invalid/$JENKINS_HOME",
-                    "relative/ITEM_FULL_NAME",
-                    "/foo/$ITEM_FULL_NAME",
-                    "/$ITEM_FULLNAME");
+                    "relative/ITEM_FULL_NAME"));
+            if (!new File("/").canWrite()) {
+                badValues.add("/foo/$ITEM_FULL_NAME");
+                badValues.add("/$ITEM_FULLNAME");
+            } // else perhaps running as root
 
             for (String badValue : badValues) {
-                try {
-                    Jenkins.checkRawBuildsDir(badValue);
-                    fail(badValue + " should have been rejected");
-                } catch (InvalidBuildsDir invalidBuildsDir) {
-                    // expected failure
-                }
+                assertThrows(badValue + " should have been rejected", InvalidBuildsDir.class, () -> Jenkins.checkRawBuildsDir(badValue));
             }
         });
     }
@@ -96,7 +116,7 @@ public class JenkinsBuildsAndWorkspacesDirectoriesTest {
     @Issue("JENKINS-50164")
     @Test
     public void goodValueForBuildsDir() {
-        story.then((rule) -> {
+        story.then(rule -> {
             final List<String> badValues = Arrays.asList(
                     "$JENKINS_HOME/foo/$ITEM_FULL_NAME",
                     "${ITEM_ROOTDIR}/builds");
@@ -136,10 +156,10 @@ public class JenkinsBuildsAndWorkspacesDirectoriesTest {
             assertTrue(story.j.getInstance().isDefaultBuildDir());
 
             // Now screw up the value by writing into the file directly, like one could do using external XML manipulation tools
-            final File configFile = new File(rule.jenkins.getRootDir(), "config.xml");
-            final String screwedUp = FileUtils.readFileToString(configFile).
+            final Path configFile = rule.jenkins.getRootDir().toPath().resolve("config.xml");
+            final String screwedUp = Files.readString(configFile, StandardCharsets.UTF_8).
                     replaceFirst("<buildsDir>.*</buildsDir>", "<buildsDir>eeeeeeeeek</buildsDir>");
-            FileUtils.write(configFile, screwedUp);
+            Files.writeString(configFile, screwedUp, StandardCharsets.UTF_8);
         });
 
         story.thenDoesNotStart();
@@ -152,10 +172,7 @@ public class JenkinsBuildsAndWorkspacesDirectoriesTest {
                 .record(Jenkins.class, Level.INFO)
                 .capture(100);
 
-        story.then(step -> {
-                       assertFalse(logWasFound("Using non default builds directories"));
-                   }
-        );
+        story.then(step -> assertFalse(logWasFound("Using non default builds directories")));
 
         story.then(steps -> {
             assertTrue(story.j.getInstance().isDefaultBuildDir());
@@ -204,6 +221,7 @@ public class JenkinsBuildsAndWorkspacesDirectoriesTest {
         );
     }
 
+    @Ignore("TODO calling restart seems to break Surefire")
     @Issue("JENKINS-50164")
     @LocalData
     @Test
@@ -224,7 +242,7 @@ public class JenkinsBuildsAndWorkspacesDirectoriesTest {
 
             // ** HACK AROUND JENKINS-50422: manually restarting ** //
             // Check the disk (cannot just restart normally with the rule, )
-            assertThat(FileUtils.readFileToString(new File(j.jenkins.getRootDir(), "config.xml")),
+            assertThat(Files.readString(j.jenkins.getRootDir().toPath().resolve("config.xml"), StandardCharsets.UTF_8),
                        containsString("<buildsDir>" + newBuildsDirValueBySysprop + "</buildsDir>"));
 
             String rootDirBeforeRestart = j.jenkins.getRootDir().toString();
@@ -237,7 +255,7 @@ public class JenkinsBuildsAndWorkspacesDirectoriesTest {
             }
 
             assertEquals(rootDirBeforeRestart, j.jenkins.getRootDir().toString());
-            assertThat(FileUtils.readFileToString(new File(j.jenkins.getRootDir(), "config.xml")),
+            assertThat(Files.readString(j.jenkins.getRootDir().toPath().resolve("config.xml"), StandardCharsets.UTF_8),
                        containsString("<buildsDir>" + newBuildsDirValueBySysprop + "</buildsDir>"));
             assertEquals(newBuildsDirValueBySysprop, j.jenkins.getRawBuildsDir());
             // ** END HACK ** //
@@ -258,35 +276,9 @@ public class JenkinsBuildsAndWorkspacesDirectoriesTest {
                 .anyMatch(record -> record.getMessage().contains(searched));
     }
 
-    @Test
-    @Issue("JENKINS-12251")
-    public void testItemFullNameExpansion() throws Exception {
-        loggerRule.record(Jenkins.class, Level.WARNING)
-                .record(Jenkins.class, Level.INFO)
-                .capture(1000);
-
-        story.then(steps -> {
-            assertTrue(story.j.getInstance().isDefaultBuildDir());
-            assertTrue(story.j.getInstance().isDefaultWorkspaceDir());
-            setBuildsDirProperty("${JENKINS_HOME}/test12251_builds/${ITEM_FULL_NAME}");
-            setWorkspacesDirProperty("${JENKINS_HOME}/test12251_ws/${ITEM_FULL_NAME}");
-        });
-
-        story.then(steps -> {
-            assertTrue(JenkinsBuildsAndWorkspacesDirectoriesTest.this.logWasFound("Changing builds directories from "));
-            assertFalse(story.j.getInstance().isDefaultBuildDir());
-            assertFalse(story.j.getInstance().isDefaultWorkspaceDir());
-
-            // build a dummy project
-            MavenModuleSet m = story.j.jenkins.createProject(MavenModuleSet.class, "p");
-            m.setScm(new ExtractResourceSCM(getClass().getResource("/simple-projects.zip")));
-            MavenModuleSetBuild b = m.scheduleBuild2(0).get();
-
-            // make sure these changes are effective
-            assertTrue(b.getWorkspace().getRemote().contains("test12251_ws"));
-            assertTrue(b.getRootDir().toString().contains("test12251_builds"));
-        });
-
+    private boolean logWasFoundAtLevel(String searched, Level level) {
+        return loggerRule.getRecords().stream()
+                .filter(record -> record.getMessage().contains(searched)).anyMatch(record -> record.getLevel().equals(level));
     }
 
     @Test
@@ -297,7 +289,7 @@ public class JenkinsBuildsAndWorkspacesDirectoriesTest {
         final List<String> builds = new ArrayList<>();
 
         story.then(steps -> {
-            builds.add(story.j.createTmpDir().toString());
+            builds.add(tmp.newFolder().toString());
             assertTrue(story.j.getInstance().isDefaultBuildDir());
             setBuildsDirProperty(builds.get(0) + "/${ITEM_FULL_NAME}");
         });
@@ -318,45 +310,4 @@ public class JenkinsBuildsAndWorkspacesDirectoriesTest {
         });
     }
 
-    @Test
-    @Issue("JENKINS-17137")
-    public void externalBuildDirectorySymlinks() throws Exception {
-        assumeFalse(Functions.isWindows()); // symlinks may not be available
-
-        // Hack to get String builds usable in lambda below
-        final List<String> builds = new ArrayList<>();
-
-        story.then(steps -> {
-            builds.add(story.j.createTmpDir().toString());
-            setBuildsDirProperty(builds.get(0) + "/${ITEM_FULL_NAME}");
-        });
-
-        story.then(steps -> {
-
-            assertEquals(builds.get(0) + "/${ITEM_FULL_NAME}", story.j.jenkins.getRawBuildsDir());
-            FreeStyleProject p = story.j.jenkins.createProject(MockFolder.class, "d").createProject(FreeStyleProject.class, "p");
-            FreeStyleBuild b1 = p.scheduleBuild2(0).get();
-            File link = new File(p.getRootDir(), "lastStable");
-            assertTrue(link.exists());
-            assertEquals(resolveAll(link).getAbsolutePath(), b1.getRootDir().getAbsolutePath());
-            FreeStyleBuild b2 = p.scheduleBuild2(0).get();
-            assertTrue(link.exists());
-            assertEquals(resolveAll(link).getAbsolutePath(), b2.getRootDir().getAbsolutePath());
-            b2.delete();
-            assertTrue(link.exists());
-            assertEquals(resolveAll(link).getAbsolutePath(), b1.getRootDir().getAbsolutePath());
-            b1.delete();
-            assertFalse(link.exists());
-        });
-    }
-
-    private File resolveAll(File link) throws InterruptedException, IOException {
-        while (true) {
-            File f = Util.resolveSymlinkToFile(link);
-            if (f == null) {
-                return link;
-            }
-            link = f;
-        }
-    }
 }
