@@ -24,7 +24,12 @@
 
 package jenkins.triggers;
 
-import com.google.common.collect.ImmutableMap;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.hasSize;
+import static org.hamcrest.Matchers.not;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
+
 import hudson.model.Cause;
 import hudson.model.Computer;
 import hudson.model.FreeStyleBuild;
@@ -37,20 +42,12 @@ import hudson.model.User;
 import hudson.tasks.BuildTrigger;
 import hudson.tasks.BuildTriggerTest;
 import hudson.triggers.Trigger;
-
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.Map;
+import java.util.List;
+import java.util.Set;
 import jenkins.model.Jenkins;
 import jenkins.security.QueueItemAuthenticatorConfiguration;
-import org.acegisecurity.Authentication;
-
-import static org.hamcrest.Matchers.hasSize;
-import static org.hamcrest.core.IsNot.not;
-import static org.junit.Assert.*;
 import org.junit.Before;
 import org.junit.ClassRule;
-
 import org.junit.Rule;
 import org.junit.Test;
 import org.jvnet.hudson.test.BuildWatcher;
@@ -76,7 +73,7 @@ public class ReverseBuildTriggerTest {
         FreeStyleProject downstream = r.createFreeStyleProject("downstream");
         FreeStyleProject wayDownstream = r.createFreeStyleProject("wayDownstream");
         downstream.addTrigger(new ReverseBuildTrigger("upstream", Result.SUCCESS));
-        downstream.getPublishersList().add(new BuildTrigger(Collections.singleton(wayDownstream), Result.SUCCESS));
+        downstream.getPublishersList().add(new BuildTrigger(Set.of(wayDownstream), Result.SUCCESS));
         downstream.save();
         r.configRoundtrip(downstream);
         ReverseBuildTrigger rbt = downstream.getTrigger(ReverseBuildTrigger.class);
@@ -85,11 +82,11 @@ public class ReverseBuildTriggerTest {
         assertEquals(Result.SUCCESS, rbt.getThreshold());
         BuildTrigger bt = downstream.getPublishersList().get(BuildTrigger.class);
         assertNotNull(bt);
-        assertEquals(Collections.singletonList(wayDownstream), bt.getChildProjects(downstream));
+        assertEquals(List.of(wayDownstream), bt.getChildProjects(downstream));
         assertEquals(Result.SUCCESS, bt.getThreshold());
     }
 
-    /** @see BuildTriggerTest#testDownstreamProjectSecurity */
+    /** @see BuildTriggerTest#downstreamProjectSecurity */
     @Test public void upstreamProjectSecurity() throws Exception {
         r.jenkins.setSecurityRealm(r.createDummySecurityRealm());
         MockAuthorizationStrategy auth = new MockAuthorizationStrategy()
@@ -97,7 +94,7 @@ public class ReverseBuildTriggerTest {
                 .grant(Computer.BUILD).everywhere().to("alice", "bob")
                 .grant(Jenkins.ADMINISTER).everywhere().to("admin");
         r.jenkins.setAuthorizationStrategy(auth);
-        String upstreamName = "upstr3@m"; // do not clash with English messages!
+        String upstreamName = "upstr3am"; // do not clash with English messages!
         final FreeStyleProject upstream = r.createFreeStyleProject(upstreamName);
         String downstreamName = "d0wnstr3am";
         FreeStyleProject downstream = r.createFreeStyleProject(downstreamName);
@@ -107,7 +104,7 @@ public class ReverseBuildTriggerTest {
         downstream.addTrigger(t);
         t.start(downstream, true); // as in AbstractProject.submit
         r.jenkins.rebuildDependencyGraph(); // as in AbstractProject.doConfigSubmit
-        assertEquals(Collections.singletonList(downstream), upstream.getDownstreamProjects());
+        assertEquals(List.of(downstream), upstream.getDownstreamProjects());
         // TODO could check doCheckUpstreamProjects, though it is not terribly interesting
         // Legacy mode: alice has no read permission on upstream but it works anyway
         FreeStyleBuild b = r.buildAndAssertSuccess(upstream);
@@ -116,34 +113,44 @@ public class ReverseBuildTriggerTest {
         assertNotNull(JenkinsRule.getLog(b), downstream.getLastBuild());
         assertEquals(1, downstream.getLastBuild().number);
         // A QIA is configured but does not specify any authentication for downstream, so upstream should not trigger it:
-        QueueItemAuthenticatorConfiguration.get().getAuthenticators().add(new MockQueueItemAuthenticator(ImmutableMap.of(upstreamName, User.get("admin").impersonate(), downstreamName, Jenkins.ANONYMOUS)));
+        QueueItemAuthenticatorConfiguration.get()
+                .getAuthenticators()
+                .add(new MockQueueItemAuthenticator()
+                        .authenticate(upstreamName, User.get("admin").impersonate2())
+                        .authenticate(downstreamName, Jenkins.ANONYMOUS2));
         b = r.buildAndAssertSuccess(upstream);
         r.assertLogContains(downstreamName, b);
         r.assertLogContains(Messages.ReverseBuildTrigger_running_as_cannot_even_see_for_trigger_f("anonymous", upstreamName, downstreamName), b);
         r.waitUntilNoActivity();
         assertEquals(1, downstream.getLastBuild().number);
         // Auth for upstream is defined but cannot see downstream, so no message is printed about it:
-        QueueItemAuthenticatorConfiguration.get().getAuthenticators().replace(new MockQueueItemAuthenticator(ImmutableMap.of(upstreamName, User.get("bob").impersonate(), downstreamName, Jenkins.ANONYMOUS)));
+        QueueItemAuthenticatorConfiguration.get()
+                .getAuthenticators()
+                .replace(new MockQueueItemAuthenticator()
+                        .authenticate(upstreamName, User.get("bob").impersonate2())
+                        .authenticate(downstreamName, Jenkins.ANONYMOUS2));
         b = r.buildAndAssertSuccess(upstream);
         r.assertLogNotContains(downstreamName, b);
         r.waitUntilNoActivity();
         assertEquals(1, downstream.getLastBuild().number);
         // Alice can see upstream, so downstream gets built, but the upstream build cannot see downstream:
         auth.grant(Item.READ).onItems(upstream).to("alice", "bob");
-        Map<String,Authentication> qiaConfig = new HashMap<String,Authentication>();
-        qiaConfig.put(upstreamName, User.get("bob").impersonate());
-        qiaConfig.put(downstreamName, User.get("alice").impersonate());
-        QueueItemAuthenticatorConfiguration.get().getAuthenticators().replace(new MockQueueItemAuthenticator(qiaConfig));
+        QueueItemAuthenticatorConfiguration.get()
+                .getAuthenticators()
+                .replace(new MockQueueItemAuthenticator()
+                        .authenticate(upstreamName, User.get("bob").impersonate2())
+                        .authenticate(downstreamName, User.get("alice").impersonate2()));
         b = r.buildAndAssertSuccess(upstream);
         r.assertLogNotContains(downstreamName, b);
         r.waitUntilNoActivity();
         assertEquals(2, downstream.getLastBuild().number);
         assertEquals(new Cause.UpstreamCause((Run) b), downstream.getLastBuild().getCause(Cause.UpstreamCause.class));
         // Now if upstream build is permitted to report on downstream:
-        qiaConfig = new HashMap<String,Authentication>();
-        qiaConfig.put(upstreamName, User.get("admin").impersonate());
-        qiaConfig.put(downstreamName, User.get("alice").impersonate());
-        QueueItemAuthenticatorConfiguration.get().getAuthenticators().replace(new MockQueueItemAuthenticator(qiaConfig));
+        QueueItemAuthenticatorConfiguration.get()
+                .getAuthenticators()
+                .replace(new MockQueueItemAuthenticator()
+                        .authenticate(upstreamName, User.get("admin").impersonate2())
+                        .authenticate(downstreamName, User.get("alice").impersonate2()));
         b = r.buildAndAssertSuccess(upstream);
         r.assertLogContains(downstreamName, b);
         r.waitUntilNoActivity();
@@ -159,10 +166,11 @@ public class ReverseBuildTriggerTest {
                 .grant(Item.DISCOVER).onItems(upstream).to("alice");
         r.jenkins.setAuthorizationStrategy(auth);
         auth.grant(Item.READ).onItems(downstream).to("alice");
-        qiaConfig = new HashMap<String,Authentication>();
-        qiaConfig.put(upstreamName, User.get("bob").impersonate());
-        qiaConfig.put(downstreamName, User.get("alice").impersonate());
-        QueueItemAuthenticatorConfiguration.get().getAuthenticators().replace(new MockQueueItemAuthenticator(qiaConfig));
+        QueueItemAuthenticatorConfiguration.get()
+                .getAuthenticators()
+                .replace(new MockQueueItemAuthenticator()
+                        .authenticate(upstreamName, User.get("bob").impersonate2())
+                        .authenticate(downstreamName, User.get("alice").impersonate2()));
         b = r.buildAndAssertSuccess(upstream);
         r.assertLogNotContains(downstreamName, b);
         r.waitUntilNoActivity();
@@ -172,10 +180,11 @@ public class ReverseBuildTriggerTest {
         // so no message is printed about it, and no Exception neither (JENKINS-42707)
         auth.grant(Item.READ).onItems(upstream).to("bob");
         auth.grant(Item.DISCOVER).onItems(upstream).to("anonymous");
-        qiaConfig = new HashMap<String,Authentication>();
-        qiaConfig.put(upstreamName, User.get("bob").impersonate());
-        qiaConfig.put(downstreamName, Jenkins.ANONYMOUS);
-        QueueItemAuthenticatorConfiguration.get().getAuthenticators().replace(new MockQueueItemAuthenticator(qiaConfig));
+        QueueItemAuthenticatorConfiguration.get()
+                .getAuthenticators()
+                .replace(new MockQueueItemAuthenticator()
+                        .authenticate(upstreamName, User.get("bob").impersonate2())
+                        .authenticate(downstreamName, Jenkins.ANONYMOUS2));
         b = r.buildAndAssertSuccess(upstream);
         r.assertLogNotContains(downstreamName, b);
         r.assertLogNotContains("Please login to access job " + upstreamName, b);
@@ -202,7 +211,7 @@ public class ReverseBuildTriggerTest {
         r.configRoundtrip(downstreamJob2);
 
         r.jenkins.rebuildDependencyGraph();
-        final FreeStyleBuild build = upstreamJob.scheduleBuild2(0).get();
+        final FreeStyleBuild build = r.buildAndAssertSuccess(upstreamJob);
         r.waitUntilNoActivity();
 
         r.assertLogNotContains("java.lang.NullPointerException", build);
@@ -222,7 +231,7 @@ public class ReverseBuildTriggerTest {
 
         // The reported issue was with Pipeline jobs, which calculate their dependency graphs via
         // ReverseBuildTrigger.RunListenerImpl, so an additional test may be needed downstream.
-        trigger.buildDependencyGraph(downstreamJob1, Jenkins.getInstance().getDependencyGraph());
+        trigger.buildDependencyGraph(downstreamJob1, Jenkins.get().getDependencyGraph());
     }
 
     @Issue("JENKINS-46161")
